--- a/LibertarianismDualism.tex
+++ b/LibertarianismDualism.tex
@@ -1,6 +1,11 @@
-\chapter{Are Dualism and Libertarianism Compatible?}
+\chapter{Are Dualism and Libertarianism Compatible? by Davis Smith}
+\label{libertarianismdualism}
 \section{By Davis Smith}
 \section{Abstract}
+\newcounter{fb}
+\setcounter{fb}{\thefootnote}
+\setcounter{footnote}{0}
+
 This paper concerns two seemingly unrelated areas of Metaphysics, the Free Will Debate and the Mind-Body Problem. I will be arguing that Libertarianism and Substance Dualism are not compatible. The argument goes like so:  First, if Libertarianism is true then there are some actions such that the actor could have physically done otherwise and which the actor had control over. Second, if Dualism is true, then there are three places where there could be the indeterminacy necessary for Libertarianism. Third, all three of these decrease the actor’s control over their actions.  Therefore, if Dualism is true, then Libertarianism is false.
 
 \section{Introduction}
@@ -56,3 +61,6 @@ For the third and final place where this indeterminacy could be, take a look at 
 This is simple enough to prove. I have shown that, if Dualism is true, then there are three places where the indeterminacy required for responsibility, according to Libertarianism, could appear. Each of these actually diminish or eliminate the control the doer has over their actions. This means that if Dualism is true, then any form of indeterminacy (relevant to how our actions are taken) does not increase the responsibility one may have but rather decreases it.
 \section{Conclusion: If Dualism is true, then Libertarianism is false.}
 To conclude this paper, I will outline what I have done. First, according to Libertarianism, Determinism is false and there are some actions which we are responsible for. These actions must be ones where we could have physically done otherwise (namely, there is a core aspect of indeterminacy) and those actions were within our control. Dualism allows for three places where the indeterminacy could appear: In the physical, mental, or in their interactions. I then went on to show that indeterminacy in the physical diminishes the control the doer has and it also does so when it is in the mental and also in their interaction. Libertarianism makes a central claim that this indeterminacy increases our responsibility for our actions, not decreases it. The implication from this is that if Dualism is true, then Libertarianism is false because in every place where the indeterminacy could be, it harms our responsibility, not help it.
+
+\setcounter{footnote}{\thefb}
+
