--- a/PhysicalismLibertarianism.tex
+++ b/PhysicalismLibertarianism.tex
@@ -1,6 +1,9 @@
-\chapter{Are Libertarianism and Physicalism Compatible?}
-\section{By Davis Smith}
+\chapter{Are Libertarianism and Physicalism Compatible? by Davis Smith}
+\label{libertarianismphysicalism}
 \section{Abstract}
+\newcounter{fc}
+\setcounter{fc}{\thefootnote}
+\setcounter{footnote}{0}
 
 This paper concerns two seemingly unrelated topics, the Mind-Body Problem and the Free Will Debate. More particularly, I am worried about whether Libertarianism and Physicalism are compatible. First, I show that Libertarianism implies that there are actions such that the doer could have physically done otherwise and which the doer had control over. Next, I show that Physicalism implies that all actions are either deterministic or non-deterministic. And finally, I show that a Physicalist deterministic action eliminates the ability to do otherwise and that a Physicalist non-deterministic action eliminates the doer’s control. These prove that Libertarianism and Physicalism are contradictory.
 \section{Introduction}
@@ -19,7 +22,7 @@ An event A is non-deterministic if and only if, given the state of the world and
 \end{center}
 This is not to say that the event will not occur, but rather it is saying that it is possible that the event will not occur. If an event is non-deterministic, then it is possible for the event not to occur in a world the same prior to it as a world where it does. There are two ways in which an event could be non-deterministic. First, the event could be the probabilistic result of a preceding cause or it could be completely uncaused. In the case of the former, the laws of nature would need to be in such a way that for at least some sets of circumstances, the probability of the event occurring is less than 1. The probability of the event occurring could be very close to 1, but if it is less than that, there is still a chance that the event does not occur. A totally uncaused event, on the other hand, would be one in which the preceding events in no way determine or make more likely that it occurs, such an event would be, for all intents and purposes, random.
 
-With these two definitions, we can define ‘Determinism' in the following way: Determinism is the stance that all events in the actual world are deterministic. If Determinism is accurate, then it follows that the laws of nature do not contain randomness and that the preceding events predict with 100\% accuracy future events.\footnote{This way of defining ‘Determinism’ is used in several places, but \cite[most notably in][ ]{Popper1}.} Some point to the seemingly random events at a quantum level as evidence against determinism, but some recent works\autocite{Barrett1} show that it is impossible to determine whether any notion of randomness can characterize the data in Quantum Mechanics. This means that appeals to such notions are going to, fundamentally, be based on intuitions and not the data.\footnote{I will often use the phrase ‘deterministic universe’ which means that Determinism is true at the possible world in question. Similarly, ‘non-deterministic universe’ means that Determinism is not true at the possible world in question.}
+With these two definitions, we can define ‘Determinism' in the following way: Determinism is the stance that all events in the actual world are deterministic. If Determinism is accurate, then it follows that the laws of nature do not contain randomness and that the preceding events predict with 100\% accuracy future events.\footnote{This way of defining ‘Determinism’ is used in several places, but \cite[most notably in][ ]{Popper1}.} Some point to the seemingly random events at a quantum level as evidence against determinism, but some recent works\footnote{\parencite{Barrett1}} show that it is impossible to determine whether any notion of randomness can characterize the data in Quantum Mechanics. This means that appeals to such notions are going to, fundamentally, be based on intuitions and not the data.\footnote{I will often use the phrase ‘deterministic universe’ which means that Determinism is true at the possible world in question. Similarly, ‘non-deterministic universe’ means that Determinism is not true at the possible world in question.}
 \subsection{Physicalism}
 
 For our purposes, though there may be other Physicalisms out there, this is a stance within the possible responses to the Mind-Body Problem. This stance is that all the objects/substances in the world are physical. There are no mental substances which do not reduce to the physical or which do not supervene on the physical. For our purposes, also, there is no reason to distinguish between Reductive and Non-Reductive Physicalism, as they both lead to the same relevant place.\footnote{I will often use the phrase ‘Physicalist universe’, which means that the possible world in question is one in which Physicalism is true.} Even in the case of Non-Reductive Physicalism, if a Physicalist universe is non-deterministic, then the indeterminacy is in the natural laws. Since mental events, at the very least, supervene on physical events, the choices we make (mental) are caused by changes in the physical nature of the brain. So, non-deterministic choices must be the result of a non-deterministic physical event.
@@ -81,4 +84,6 @@ For ease of use, we can assume that the appearance of the particle is the only n
 \section{Conclusion: If Libertarianism is true, then Physicalism is false.}
 
 So far, I have shown three (3) things. First, If Libertarianism is true, then there are some actions such that the doer could have done otherwise and that the doer was in control of that action. This is from the seemingly necessary features of moral responsibility. Next, I have shown that if Physicalism is true, then all our actions are either deterministic or non-deterministic. There is no third alternative. And finally, I have shown that if an action is deterministic, then it's not possible for the doer to have done otherwise and if the action is non-deterministic, then the action was not in the doer's control. From the second and the third, we have that if Physicalism is true, then for any action, the doer either could not have done otherwise or the doer was not in control. But the first part claims that if Libertarianism is true, then there are some actions where the doer has both of those features. This directly contradicts the result from Physicalism and therefore shows that if Libertarianism is true, then Physicalism is false. \footnote{Here the complete argument: If Physicalism is true, then there are only physical substances. If there are only physical substances, then there can only be physical events. If there can only be physical events, then for any event, that event is either deterministic or random. All actions are events. If an action is deterministic, then the person could not have done otherwise. If an action is random, then it is either a probabilistic effect of a preceding cause or it’s totally uncaused. If the action is probabilistic in this way, then the action was not within the person’s control and if the action is totally uncaused, then the action was not within the person’s control. If Libertarianism is true, then a person has free will. If a person has free will, then they are morally responsible for some actions. If a person is morally responsible for an action, then a) that person could have done otherwise and b) that person is in control of the action. Therefore, if Libertarianism is true, then Physicalism is false.}
+
+\setcounter{footnote}{\thefc}
 
