--- a/apology.tex
+++ b/apology.tex
@@ -1,4 +1,5 @@
 \chapter{Plato's Apology}
+\label{platoapology}
 I do not know, men of Athens, how my\marginpar{17}
 accusers affected you; as for me, I was almost
 carried away in spite of myself, so persuasively
