--- a/bloodbending.tex
+++ b/bloodbending.tex
@@ -1,5 +1,9 @@
 \chapter{The Moral Status of Bloodbending by Davis Smith}
+\label{bloodbending}
 \section{Introduction}
+\newcounter{fd}
+\setcounter{fd}{\thefootnote}
+\setcounter{footnote}{0}
 
 During their travels around the world of Avatar, our heroes have encountered many people with strange or unique bending abilities. For example, they encountered Combustion Man, who could make things explode with his mind.\footnote{First seen in “The Headband,” (23:24-23:48) but his abilities are displayed for the first time in “The Beach” (15:21-16:16).} None, however, are more troubling and ethically interesting than Hama, a waterbender from the Southern Tribe who can, on a full moon night, bend the very blood in a person’s veins and manipulate their body to do her bidding.\autocite{puppetmaster} Such a violation of a person’s control over themselves would, rightfully, be the stuff of nightmares. However, are all cases of this bloodbending wrong? To answer this question, we turn to two well-established theories in Ethics, an area of Philosophy which, among other things, tries to answer the question “what is the moral thing to do?” Almost as if by design, bloodbending works as a fantastic example of how these theories determine the morality of an action and how they can come to radically different conclusions on a single case.
 
@@ -69,3 +73,5 @@ For all of these examples, Kantianism gives the same response, bloodbending is m
 \section{Conclusion}
 
 In this paper, we have used the two major theories in Ethics to figure out the moral status of bloodbending. According to Utilitarianism, sometimes using the ability is wrong and other times it is the right thing to do. The evaluation has nothing to do with bloodbending itself, rather the judgement is made on the basis of the consequences of the action. The Utilitarian will claim that Hama escaping from prison was permissible, Hama kidnapping the villagers was wrong, Hama attempting to kill Aang was wrong, and Katara saving Aang’s life was permissible. The Kantian, on the other hand, will make their evaluation based on the nature of bloodbending itself, regardless of the consequences. They claim that the prison escape was wrong, the kidnapping was wrong, attempting to kill Aang was wrong, and Katara saving the Avatar was wrong. In each case, the bender is violating a person’s autonomy which is wrong.  So, what is the moral status of bloodbending? The answer to this question depends on the answer to a bigger question: Which theory is more accurate, Utilitarianism or Kantianism?
+
+\setcounter{footnote}{\thefd}
