--- a/culturalrelativismrachels.tex
+++ b/culturalrelativismrachels.tex
@@ -1,8 +1,11 @@
 \chapter{The Challenge of Cultural Relativism by James Rachels}\autocite{Rachels1}
+\label{challengerelativism}
+\newcounter{fz}
+\setcounter{fz}{\thefootnote}
+\setcounter{footnote}{0}
 
-\factoidbox{“Morality  differs  in  every  society,  and  is  a  convenient  term  for 
-socially  approved habits.” Ruth  Benedict,  Patterns  of Culture
-(1934)}
+\factoidbox{``Morality  differs  in  every  society,  and  is  a  convenient  term  for 
+socially  approved habits.” \autocite{RuthBenedict1}}
 
 \section{2.1 How Different Cultures Have Different Moral Codes} 
 Darius, a king of ancient Persia, was intrigued by the variety of cultures 
@@ -61,7 +64,7 @@ To the general public, these were disturbing revelations. Our own way of
 living  seems  so  natural  and  right  that  for  many  of  us  it  is  hard  to 
 conceive of  others  living  so  differently.  And  when  we  do  hear  of  such 
 things, we tend immediately to categorize those other peoples as 
-"backward"  or  "primitive."  But  to  anthropologists  and  sociologists,  there 
+``backward"  or  ``primitive."  But  to  anthropologists  and  sociologists,  there 
 was nothing particularly surprising about the Eskimos. Since the time of 
 Herodotus,  enlightened  observers  have  been  accustomed  to  the  idea 
 that  conceptions  of  right  and  wrong  differ  from  culture  to  culture.  If  we 
@@ -69,16 +72,16 @@ assume that our ideas of right and wrong will be shared by all peoples as
 all times, we are merely naive.
 
 \section{2.2 Cultural Relativism} 
-To  many  thinkers,  this  observation—"Different  cultures  have  different 
+To  many  thinkers,  this  observation—``Different  cultures  have  different 
 moral  codes"— has  seemed  to  be  the  key  to  understanding  morality. 
 The idea of universal truth in ethics, they say, is a myth. The customs of 
 different societies are all that exist. These customs cannot be said to be 
-"correct" or "incorrect," for that implies we have an independent standard 
+``correct" or ``incorrect," for that implies we have an independent standard 
 of  right  and  wrong  by  which  they  may  be  judged.  But  there  is  no  such 
 independent standard; every standard is culture-bound. The great 
 pioneering  sociologist  William  Graham  Sumner, writing in  1906,  put  the 
 point like this: 
-\factoidbox{The  "right"  way  is  the  way  which  the  ancestors  used  and  which 
+\factoidbox{The  ``right"  way  is  the  way  which  the  ancestors  used  and  which 
 has  been handed down. The tradition  is its own warrant. It  is not 
 held subject to verification by experience. The notion of right is in 
 the folkways. It is not outside of them, of independent origin, and 
@@ -107,7 +110,7 @@ claims, all of which have been made by cultural relativists:
 one societal code better than another.
 \item[3] The moral code of our own society has no special status; it 
 is merely one among many. 
-\item[4] There  is no "universal truth"  in ethics; that  is, there are no 
+\item[4] There  is no ``universal truth"  in ethics; that  is, there are no 
 moral truths that hold for all peoples at all times. 
 \item[5] The moral code of a society determines what is right within 
 that society; that is, if the moral code of a society says that 
@@ -156,7 +159,7 @@ Clearly,  these  arguments  are  variations  of  one  fundamental  idea  They
 are both special cases of a more general argument, which says: 
 \begin{enumerate}
 \item[1] Different cultures have different moral codes. 
-\item[2] Therefore,  there  is  no  objective  "truth"  in  morality.  Right 
+\item[2] Therefore,  there  is  no  objective  ``truth"  in  morality.  Right 
 and  wrong  are  only  matters  of  opinion,  and  opinions  vary 
 from culture to culture. 
 \end{enumerate}
@@ -181,7 +184,7 @@ them was simply mistaken.
 To make the point clearer, consider a different matter In some societies, 
 people  believe  the  earth  is  flat  In  other  societies,  such  as  our  own,
 people believe  the  earth  is  (roughly)  spherical.  Does  it  follow,  from  the 
-mere  fact  that  people  disagree,  that  there  is  no  "objective  truth"  in 
+mere  fact  that  people  disagree,  that  there  is  no  ``objective  truth"  in 
 geography?  Of  course  not;  we  would  never  draw  such  a  conclusion 
 because we realize that, in their beliefs about the world, the members of 
 some societies might simply be wrong. There is no reason to think that if 
@@ -206,7 +209,7 @@ might still be true. What would it be like if it were true?
 
 In the passage quoted above, William Graham Sumner summarizes the 
 essence of Cultural Relativism. He says that there is no measure of right 
-and wrong other than the standards of one's society: "The notion of right 
+and wrong other than the standards of one's society: ``The notion of right 
 is  in  the  folkways.  It  is  not  outside  of  them,  of  independent  origin,  and 
 brought to test them. In the folkways, whatever is, is right." Suppose we 
 took this seriously. What would be some of the consequences? 
@@ -214,7 +217,7 @@ took this seriously. What would be some of the consequences?
 inferior to our own.} 
 This, of course, is one of the main points stressed by 
 Cultural  Relativism. We  would  have to  stop condemning  other  societies 
-merely  because  they  are  "different:'  So  long  as  we  concentrate  on 
+merely  because  they  are  ``different:'  So  long  as  we  concentrate  on 
 certain  examples,  such  as  the  funerary  practices  of  the  Greeks  and 
 Callatians, this may seem to be a sophisticated, enlightened attitude. 
 
@@ -275,7 +278,7 @@ the better. Within the constraints imposed by Cultural Relativism, there is
 one way this might be done. If a society is not living up to its own ideals, 
 the  reformer  may  be  regarded  as  acting  for  the  best:  The  ideals  of  the 
 society  are  the  standard  by  which  we  judge  his  or  her  proposals  as 
-worthwhile. But the "reformer" may not challenge the ideals themselves, 
+worthwhile. But the ``reformer" may not challenge the ideals themselves, 
 for those ideals are by definition correct. According to Cultural 
 Relativism,  then,  the  idea  of  social  reform  makes  sense  only  in  this 
 limited way. 
@@ -325,9 +328,9 @@ why  the  Eskimos  do  this.  The  explanation  is  not  that  they  have  less
 affection  for  their  children  or  less  respect  for  human  life.  An  Eskimo 
 family will always protect its babies if conditions permit. But they live in a 
 harsh environment, where food is in short supply. A fundamental 
-postulate  of  Eskimos  thought  is:  "Life  is  hard,  and  the  margin  of  safety 
+postulate  of  Eskimos  thought  is:  ``Life  is  hard,  and  the  margin  of  safety 
 small.” A family may want to nourish its babies but be unable to do so. 
-As  in many "primitive" societies,  Eskimo mothers will nurse  their  infants 
+As  in many ``primitive" societies,  Eskimo mothers will nurse  their  infants 
 over a much longer period of time than mothers in our culture. The child 
 will  take  nourishment  from  its  mother's  breast  for  four  years,  perhaps 
 even longer. So even in the best of times there are limits to the number 
@@ -345,7 +348,7 @@ reason as well. Because the hunters suffer a high casualty rate, the adult
 men who die prematurely far outnumber the women who die early. Thus 
 if  male  and  female  infants  survived  in  equal  numbers,  the  female  adult 
 population would greatly outnumber the male adult population. 
-Examining the available statistics, one writer concluded that "were it not 
+Examining the available statistics, one writer concluded that ``were it not 
 for female infanticide...there  would  be  approximately  one-and-a-half 
 times  as  many  females  in  the  average Eskimo  local  group  as  there are 
 food-producing males." 
@@ -355,7 +358,7 @@ different  attitude  toward  children.  Instead,  it  is  a  recognition  that  
 measures  are  sometimes  needed  to  ensure  the  family's  survival.  Even 
 then, however, killing the baby is not the first option considered. 
 Adoption  is  common;  childless  couples  are  especially  happy  to  take  a 
-more fertile couple's "surplus." Killing is only the last resort. I emphasize 
+more fertile couple's ``surplus." Killing is only the last resort. I emphasize 
 this  in  order  to  show  that  the  raw  data  of  the  anthropologists  can  be 
 misleading;  it  can  make  the  differences  in  values  between  cultures 
 appear  greater  than  they  are.  The  Eskimos'  values  are  not  all  that 
@@ -384,7 +387,7 @@ all on truth telling. When one person spoke to another, there would be no
 presumption at all that he was telling the truth for he could just as easily 
 be speaking falsely. Within that society, there would be no reason to pay 
 attention  to  what  anyone  says.  (I  ask  you  what  time  it  is,  and  you  say 
-"Four  o'clock:'  But  there  is  no  presumption  that  you  are  speaking  truly; 
+``Four  o'clock:'  But  there  is  no  presumption  that  you  are  speaking  truly; 
 you  could  just  as  easily  have  said  the  first  thing  that  came  into  your 
 head. So I have no reason to pay attention to your answer; in fact, there 
 was no point  in my asking you in the first place.) Communication would 
@@ -399,7 +402,7 @@ a rule that is in force in the society.
 Here  is  one  further  example  of  the  same  type.  Could  a  society  exist  in 
 which  there  was  no  prohibition  on  murder?  What  would  this  be  like? 
 Suppose people were free to kill other people at will, and no one thought 
-there  was anything  wrong  with  it.  In  such a  "society,"  no  one  could feel 
+there  was anything  wrong  with  it.  In  such a  ``society,"  no  one  could feel 
 secure.  Everyone  would  have  to  be  constantly  on  guard.  People  who 
 wanted to survive would have to avoid other people as much as 
 possible.  This  would  inevitably  result  in  individuals  trying  to  become  as 
@@ -426,11 +429,11 @@ country  of  Togo,  a  small  west  African  nation,  to  escape  what  people
 there call excision. 
 
 Excision is a permanently disfiguring procedure that is sometimes called 
-"female  circumcision," although it bears little resemblance to the Jewish 
+``female  circumcision," although it bears little resemblance to the Jewish 
 ritual.  More  commonly,  at  least  in Western newspapers,  it is  referred  to 
-as  "genital  mutilation."  According  to  the World  Health  Organization,  the 
+as  ``genital  mutilation."  According  to  the World  Health  Organization,  the 
 practice  is  widespread  in  26  African  nations,  and  two  million  girls  each 
-year  are  "excised."  In  some  instances,  excision  is  part  of  an  elaborate 
+year  are  ``excised."  In  some  instances,  excision  is  part  of  an  elaborate 
 tribal ritual, performed in small traditional villages, and girls look forward 
 to  it  because  it  signals  their  acceptance  into  the  adult  world.  In  other 
 instances, the practice is carried out by families living in cities on young 
@@ -505,7 +508,7 @@ But  this  looks  like  just  the  sort  of  independent  moral  standard  that
 Cultural Relativism says cannot exist. It is a single standard that may be 
 brought  to  bear  in  judging  the practices  of  any  culture,  at  any  time, 
 including our own. Of course, people will not usually see this principle as 
-being "brought in from the outside" to judge them, because, like the rules 
+being ``brought in from the outside" to judge them, because, like the rules 
 against lying and homicide, the welfare of its members is a value internal 
 to all viable cultures. 
 
@@ -514,7 +517,7 @@ Other Cultures.}
 
 Although  they  are  personally  horrified  by  excision,  many  thoughtful 
 people  are  reluctant  to  say  it  is  wrong,  for  at  least  three  reasons.  First, 
-there  is  an  understandable  nervousness  about  "interfering  in  the  social 
+there  is  an  understandable  nervousness  about  ``interfering  in  the  social 
 customs of other peoples." Europeans and their cultural descendents in 
 America have a shabby history of destroying native cultures in the name 
 of Christianity and Enlightenment, not to mention self-interest. Recoiling 
@@ -526,7 +529,7 @@ and (b) thinking that we should announce the fact, conduct a campaign,
 apply diplomatic pressure, or send in the army to do something about it. 
 The  first  is  just  a  matter  of  trying to  see  the world clearly,  from  a  moral 
 point  of  view.  The  second  is  another  matter  altogether.  Sometimes  it 
-may be right to "do something about it," but often it will not be. 
+may be right to ``do something about it," but often it will not be. 
 
 People  also  feel,  rightly  enough,  that  they  should  be  tolerant  of  other 
 cultures. Tolerance is, no doubt, a virtue—a tolerant  person is willing to 
@@ -543,4 +546,6 @@ is  on  the  whole  contemptible  or  that  it  is  generally  inferior  to  any
 culture,  including  one's  own.  It  could  have  many  admirable  features.  In 
 fact, we should expect this to be true of most human societies— they are 
 mixes of good and bad practices. Excision happens to be one of the bad 
-ones
+ones.
+
+\setcounter{footnote}{\thefz}
