--- a/death.tex
+++ b/death.tex
@@ -1,6 +1,8 @@
 \chapter{Death By Thomas Nagel}\autocite{Nagel2}
 \label{death}
-
+\newcounter{fa}
+\setcounter{fa}{\thefootnote}
+\setcounter{footnote}{0}
 If death is the unequivocal and permanent end of our existence, the question
 arises whether it is a bad thing to die.
 
@@ -312,3 +314,4 @@ be different for a deprivation? If the normal lifespan were a thousand years,
 death at 80 would be a tragedy. As things are, it may just be a more widespread
 tragedy. If there is no limit to the amount of life that it would be good to have,
 then it may be that a bad end is in store for us all.
+\setcounter{footnote}{\thefa}
