--- a/iwasonceafetus.tex
+++ b/iwasonceafetus.tex
@@ -1,5 +1,5 @@
 \chapter{I Was Once a Fetus by Alexander Pruss}\autocite{Pruss1}
-
+\label{iwasafetus}
 \section{INTRODUCTION}
  
 I am going to give an argument showing that abortion is wrong in exactly 
