--- a/meditationsonetothree.tex
+++ b/meditationsonetothree.tex
@@ -1,7 +1,5 @@
 \chapter{Meditations on First Philosophy by Ren\'e Descartes}\autocite{Descartes1}
-
-Translated by John Veitch (1901)
-
+\label{descartesmeditations}
 %TO THE VERY SAGE AND ILLUSTRIOUS THE DEAN AND DOCTORS OF THE SACRED FACULTY OF THEOLOGY OF PARIS.
 
 %GENTLEMEN,
