--- a/mindbodyprob.tex
+++ b/mindbodyprob.tex
@@ -1,5 +1,8 @@
 \chapter{The Mind-Body Problem by Tim Crane}\autocite{Crane1}
 \label{mindbodyprob}
+\newcounter{ff}
+\setcounter{ff}{\thefootnote}
+\setcounter{footnote}{0}
 The mind-body problem is the problem of explaining how our mental states, events
 and processes—like beliefs, actions and thinking—are related to the physical states,
 events and processes in our bodies. A question of the form, ‘how is A related to B?’
@@ -133,3 +136,4 @@ expressed as a dilemma: if the mental is not physical, then how we make sense of
 causal interaction with the physical? But if it is physical, how can we make sense of
 the phenomena of consciousness? These two questions, in effect, define the
 contemporary debate on the mind-body problem.
+\setcounter{footnote}{\theff}
