--- a/mindsbrainsprog.tex
+++ b/mindsbrainsprog.tex
@@ -1,6 +1,10 @@
 \chapter{Minds, Brains and Programs by John Searle}\autocite{Searle1}
 \label{mindsbrainsprograms}
 \section{Abstract}
+\newcounter{fn}
+\setcounter{fn}{\thefootnote}
+\setcounter{footnote}{0}
+
 This article can be viewed as an attempt to explore the consequences of two propositions. (1) Intentionality in
 human beings (and animals) is a product of causal features of the brain I assume this is an empirical fact about
 the actual causal relations between mental processes and brains It says simply that certain brain processes are
@@ -14,7 +18,7 @@ meant to be a trivial consequence of 1. (5) Any attempt literally to create inte
 could not succeed just by designing programs but would have to duplicate the causal powers of the human
 brain. This follows from 2 and 4.
 
-"Could a machine think?" On the argument advanced here only a machine could think, and only very special
+``Could a machine think?" On the argument advanced here only a machine could think, and only very special
 kinds of machines, namely brains and machines with internal causal powers equivalent to those of brains And
 that is why strong AI has little to tell us about thinking, since it is not about machines but about programs, and
 no program by itself is sufficient for thinking.
@@ -22,8 +26,8 @@ no program by itself is sufficient for thinking.
 \section{Minds, Brains, and Programs}
 
 What psychological and philosophical significance should we attach to recent efforts at computer simulations of
-human cognitive capacities? In answering this question, I find it useful to distinguish what I will call "strong" AI
-from "weak" or "cautious" AI (Artificial Intelligence). According to weak AI, the principal value of the computer
+human cognitive capacities? In answering this question, I find it useful to distinguish what I will call ``strong" AI
+from ``weak" or ``cautious" AI (Artificial Intelligence). According to weak AI, the principal value of the computer
 in the study of the mind is that it gives us a very powerful tool. For example, it enables us to formulate and test
 hypotheses in a more rigorous and precise fashion. But according to strong AI, the computer is not merely a
 tool in the study of the mind; rather, the appropriately programmed computer really is a mind, in the sense that
@@ -79,9 +83,9 @@ symbols entirely by their shapes. Now suppose also that I am given a third batch
 with some instructions, again in English, that enable me to correlate elements of this third batch with the first two
 batches, and these rules instruct me how to give back certain Chinese symbols with certain sorts of shapes in
 response to certain sorts of shapes given me in the third batch. Unknown to me, the people who are giving me
-all of these symbols call the first batch "a script," they call the second batch a "story. ' and they call the third
-batch "questions." Furthermore, they call the symbols I give them back in response to the third batch "answers
-to the questions." and the set of rules in English that they gave me, they call "the program."
+all of these symbols call the first batch ``a script," they call the second batch a ``story. ' and they call the third
+batch ``questions." Furthermore, they call the symbols I give them back in response to the third batch ``answers
+to the questions." and the set of rules in English that they gave me, they call ``the program."
 
 Now just to complicate the story a little, imagine that these people also give me stories in English, which I
 understand, and they then ask me questions in English about these stories, and I give them back answers in
@@ -93,7 +97,7 @@ that I don't speak a word of Chinese.
 
 Let us also suppose that my answers to the English questions are, as they no doubt would be, indistinguishable
 from those of other native English speakers, for the simple reason that I am a native English speaker. From the
-external point of view -- from the point of view of someone reading my "answers" -- the answers to the
+external point of view -- from the point of view of someone reading my ``answers" -- the answers to the
 Chinese questions and the English questions are equally good. But in the Chinese case, unlike the English case,
 I produce the answers by manipulating uninterpreted formal symbols. As far as the Chinese is concerned, I
 simply behave like a computer; I perform computational operations on formally specified elements. For the
@@ -149,24 +153,24 @@ I have had the occasions to present this example to several workers in artificia
 they do not seem to agree on what the proper reply to it is. I get a surprising variety of replies, and in what
 follows I will consider the most common of these (specified along with their geographic origins).
 
-But first I want to block some common misunderstandings about "understanding": in many of these discussions
-one finds a lot of fancy footwork about the word "understanding." My critics point out that there are many
-different degrees of understanding; that "understanding" is not a simple two-place predicate; that there are even
+But first I want to block some common misunderstandings about ``understanding": in many of these discussions
+one finds a lot of fancy footwork about the word ``understanding." My critics point out that there are many
+different degrees of understanding; that ``understanding" is not a simple two-place predicate; that there are even
 different kinds and levels of understanding, and often the law of excluded middle doesn-t even apply in a
-straightforward way to statements of the form "x understands y; that in many cases it is a matter for decision and
+straightforward way to statements of the form ``x understands y; that in many cases it is a matter for decision and
 not a simple matter of fact whether x understands y; and so on. To all of these points I want to say: of course, of
-course. But they have nothing to do with the points at issue. There are clear cases in which "understanding' literally applies and clear cases in which it does not apply; and these two sorts of cases are all I need for this argument 2 I understand stories in English; to a lesser degree I can understand stories in French; to a still lesser
+course. But they have nothing to do with the points at issue. There are clear cases in which ``understanding' literally applies and clear cases in which it does not apply; and these two sorts of cases are all I need for this argument 2 I understand stories in English; to a lesser degree I can understand stories in French; to a still lesser
 degree, stories in German; and in Chinese, not at all. My car and my adding machine, on the other hand,
-understand nothing: they are not in that line of business. We often attribute "under standing" and other cognitive
+understand nothing: they are not in that line of business. We often attribute ``under standing" and other cognitive
 predicates by metaphor and analogy to cars, adding machines, and other artifacts, but nothing is proved by such
-attributions. We say, "The door knows when to open because of its photoelectric cell," "The adding machine
-knows how) (understands how to, is able) to do addition and subtraction but not division," and "The thermostat
+attributions. We say, ``The door knows when to open because of its photoelectric cell," ``The adding machine
+knows how) (understands how to, is able) to do addition and subtraction but not division," and ``The thermostat
 perceives chances in the temperature."
 
 The reason we make these attributions is quite interesting, and it has to do with the fact that in artifacts we
 extend our own intentionality;3 our tools are extensions of our purposes, and so we find it natural to make
 metaphorical attributions of intentionality to them; but I take it no philosophical ice is cut by such examples. The
-sense in which an automatic door "understands instructions" from its photoelectric cell is not at all the sense in
+sense in which an automatic door ``understands instructions" from its photoelectric cell is not at all the sense in
 which I understand English. If the sense in which Schank's programmed computers understand stories is
 supposed to be the metaphorical sense in which the door understands, and not the sense in which I understand
 English, the issue would not be worth discussing. But Newell and Simon (1963) write that the kind of cognition
@@ -176,7 +180,7 @@ understands what the car and the adding machine understand, namely, exactly noth
 understanding is not just (like my understanding of German) partial or incomplete; it is zero.
 Now to the replies:
 
-I. The systems reply (Berkeley). "While it is true that the individual person who is locked in the room does not
+I. The systems reply (Berkeley). ``While it is true that the individual person who is locked in the room does not
 understand the story, the fact is that he is merely part of a whole system, and the system does understand the
 story. The person has a large ledger in front of him in which are written the rules, he has a lot of scratch paper
 and pencils for doing calculations, he has 'data banks' of sets of Chinese symbols. Now, understanding is not
@@ -196,22 +200,22 @@ someone who was not in the grip of an ideology would find the idea at all plausi
 who are committed to the ideology of strong AI will in the end be inclined to say something very much like this;
 so let us pursue it a bit further. According to one version of this view, while the man in the internalized systems
 example doesn't understand Chinese in the sense that a native Chinese speaker does (because, for example, he
-doesn't know that the story refers to restaurants and hamburgers, etc.), still "the man as a formal symbol
+doesn't know that the story refers to restaurants and hamburgers, etc.), still ``the man as a formal symbol
 manipulation system" really does understand Chinese. The subsystem of the man that is the formal symbol
 manipulation system for Chinese should not be confused with the subsystem for English.
 
-So there are really two subsystems in the man; one understands English, the other Chinese, and "it's just that the two systems have little to do with each other." But, I want to reply, not only do they have little to do with each other, they are not even remotely alike. The subsystem that understands English (assuming we allow ourselves
-to talk in this jargon of "subsystems" for a moment) knows that the stories are about restaurants and eating
+So there are really two subsystems in the man; one understands English, the other Chinese, and ``it's just that the two systems have little to do with each other." But, I want to reply, not only do they have little to do with each other, they are not even remotely alike. The subsystem that understands English (assuming we allow ourselves
+to talk in this jargon of ``subsystems" for a moment) knows that the stories are about restaurants and eating
 hamburgers, he knows that he is being asked questions about restaurants and that he is answering questions as
 best he can by making various inferences from the content of the story, and so on. But the Chinese system
-knows none of this. Whereas the English subsystem knows that "hamburgers" refers to hamburgers, the Chinese
-subsystem knows only that "squiggle squiggle" is followed by "squoggle squoggle." All he knows is that various
+knows none of this. Whereas the English subsystem knows that ``hamburgers" refers to hamburgers, the Chinese
+subsystem knows only that ``squiggle squiggle" is followed by ``squoggle squoggle." All he knows is that various
 formal symbols are being introduced at one end and manipulated according to rules written in English, and other
 symbols are going out at the other end.
 
 The whole point of the original example was to argue that such symbol manipulation by itself couldn't be
-sufficient for understanding Chinese in any literal sense because the man could write "squoggle squoggle" after
-"squiggle squiggle" without understanding anything in Chinese. And it doesn't meet that argument to postulate
+sufficient for understanding Chinese in any literal sense because the man could write ``squoggle squoggle" after
+``squiggle squiggle" without understanding anything in Chinese. And it doesn't meet that argument to postulate
 subsystems within the man, because the subsystems are no better off than the man was in the first place; they
 still don't have anything even remotely like what the English-speaking man (or subsystem) has. Indeed, in the
 case as described, the Chinese subsystem is simply a part of the English subsystem, a part that engages in
@@ -228,7 +232,7 @@ relevant literal sense in which I understand English.
 
 The only motivation for saying there must be a subsystem in me that understands Chinese is that I have a
 program and I can pass the Turing test; I can fool native Chinese speakers. But precisely one of the points at
-issue is the adequacy of the Turing test. The example shows that there could be two "systems," both of which
+issue is the adequacy of the Turing test. The example shows that there could be two ``systems," both of which
 pass the Turing test, but only one of which understands; and it is no argument against this point to say that since
 they both pass the Turing test they must both understand, since this claim fails to meet the argument that the
 system in me that understands English has a great deal more than the system that merely processes Chinese. In
@@ -263,7 +267,7 @@ characteristic of most machines capable of problem solving performance" \autocit
 Anyone who thinks strong AI has a chance as a theory of the mind ought to ponder the implications of that
 remark. We are asked to accept it as a discovery of strong AI that the hunk of metal on the wall that we use to
 regulate the temperature has beliefs in exactly the same sense that we, our spouses, and our children have
-beliefs, and furthermore that "most" of the other machines in the room -- telephone, tape recorder, adding
+beliefs, and furthermore that ``most" of the other machines in the room -- telephone, tape recorder, adding
 machine, electric light switch, -- also have beliefs in this literal sense. It is not the aim of this article to argue
 against McCarthy's point, so I will simply assert the following without argument. The study of the mind starts
 with such facts as that humans have beliefs, while thermostats, telephones, and adding machines don't. If you get
@@ -280,7 +284,7 @@ taking the idea seriously, notice that its truth would be fatal to strong AI's c
 now the mind is everywhere. What we wanted to know is what distinguishes the mind from thermostats and
 livers. And if McCarthy were right, strong AI wouldn't have a hope of telling us that.
 
-II. The Robot Reply (Yale). "Suppose we wrote a different kind of program from Schank's program. Suppose
+II. The Robot Reply (Yale). ``Suppose we wrote a different kind of program from Schank's program. Suppose
 we put a computer inside a robot, and this computer would not just take in formal symbols as input and give out
 formal symbols as output, but rather would actually operate the robot in such a way that the robot does
 something very much like perceiving, walking, moving about, hammering nails, eating drinking -- anything you
@@ -291,21 +295,21 @@ would, unlike Schank's computer, have genuine understanding and other mental sta
 The first thing to notice about the robot reply is that it tacitly concedes that cognition is not solely a matter of
 formal symbol manipulation, since this reply adds a set of causal relation with the outside world \autocite{Fodor1}. 
 But the answer to the robot reply is that the addition of such
-"perceptual" and "motor" capacities adds nothing by way of understanding, in particular, or intentionality, in
+``perceptual" and ``motor" capacities adds nothing by way of understanding, in particular, or intentionality, in
 general, to Schank's original program. To see this, notice that the same thought experiment applies to the robot
 case. Suppose that instead of the computer inside the robot, you put me inside the room and, as in the original
 Chinese case, you give me more Chinese symbols with more instructions in English for matching Chinese
 symbols to Chinese symbols and feeding back Chinese symbols to the outside. Suppose, unknown to me, some
 of the Chinese symbols that come to me come from a television camera attached to the robot and other Chinese symbols that I am giving out serve to make the motors inside the robot move the robot's legs or arms.
 It is important to emphasize that all I am doing is manipulating formal symbols: I know none of these other facts.
-I am receiving "information" from the robot's "perceptual" apparatus, and I am giving out "instructions" to its
+I am receiving ``information" from the robot's ``perceptual" apparatus, and I am giving out ``instructions" to its
 motor apparatus without knowing either of these facts. I am the robot's homunculus, but unlike the traditional
 homunculus, I don't know what's going on. I don't understand anything except the rules for symbol
 manipulation. Now in this case I want to say that the robot has no intentional states at all; it is simply moving
 about as a result of its electrical wiring and its program. And furthermore, by instantiating the program I have no
 intentional states of the relevant type. All I do is follow formal instructions about manipulating formal symbols.
 
-III. The brain simulator reply (Berkeley and M.I.T.). "Suppose we design a program that doesn't represent
+III. The brain simulator reply (Berkeley and M.I.T.). ``Suppose we design a program that doesn't represent
 information that we have about the world, such as the information in Schank's scripts, but simulates the actual
 sequence of neuron firings at the synapses of the brain of a native Chinese speaker when he understands stories
 in Chinese and gives answers to them. The machine takes in Chinese stories and questions about them as input,
@@ -336,7 +340,7 @@ Now where is the understanding in this system? It takes Chinese as input, it sim
 the synapses of the Chinese brain, and it gives Chinese as output. But the man certainly doesn-t understand
 Chinese, and neither do the water pipes, and if we are tempted to adopt what I think is the absurd view that
 somehow the conjunction of man and water pipes understands, remember that in principle the man can
-internalize the formal structure of the water pipes and do all the "neuron firings" in his imagination. The problem
+internalize the formal structure of the water pipes and do all the ``neuron firings" in his imagination. The problem
 with the brain simulator is that it is simulating the wrong things about the brain. As long as it simulates only the
 formal structure of the sequence of neuron firings at the synapses, it won't have simulated what matters about
 the brain, namely its causal properties, its ability to produce intentional states. And that the formal properties are
@@ -389,13 +393,12 @@ causal stuff underlying it, we assume both that the animal must have mental stat
 that the mental states must be produced by mechanisms made out of the stuff that is like our stuff. We would
 certainly make similar assumptions about the robot unless we had some reason not to, but as soon as we knew
 that the behavior was the result of a formal program, and that the actual causal properties of the physical
-substance were irrelevant we would abandon the assumption of intentionality. [See "Cognition and
-Consciousness in Nonhuman Species BBS 1(4) 1978.]
+substance were irrelevant we would abandon the assumption of intentionality.\footnote{\citetitle[See][]{Stich1}}
 
 There are two other responses to my example that come up frequently (and so are worth discussing) but really
 miss the point.
 
-V. The other minds reply (Yale). "How do you know that other people understand Chinese or anything else?
+V. The other minds reply (Yale). ``How do you know that other people understand Chinese or anything else?
 Only by their behavior. Now the computer can pass the behavioral tests as well as they can (in principle), so if
 you are going to attribute cognition to other people you must in principle also attribute it to computers. '
 This objection really is only worth a short reply. The problem in this discussion is not about how I know that
@@ -406,7 +409,7 @@ this argument to feign anesthesia. In 'cognitive sciences" one presupposes the r
 mental in the same way that in physical sciences one has to presuppose the reality and knowability of physical
 objects.
 
-VI. The many mansions reply (Berkeley). "Your whole argument presupposes that AI is only about analogue
+VI. The many mansions reply (Berkeley). ``Your whole argument presupposes that AI is only about analogue
 and digital computers. But that just happens to be the present state of technology. Whatever these causal
 processes are that you say are essential for intentionality (assuming you are right), eventually we will be able to
 build devices that have these causal processes, and that will be artificial intelligence. So your arguments are in
@@ -455,29 +458,29 @@ the real thing. By way of concluding I want to try to state some of the general 
 argument. For clarity I will try to do it in a question and answer fashion, and I begin with that old chestnut of a
 question:
 
-"Could a machine think?"
+``Could a machine think?"
 
 The answer is, obviously, yes. We are precisely such machines.
 
-"Yes, but could an artifact, a man-made machine think?"
+``Yes, but could an artifact, a man-made machine think?"
 
 Assuming it is possible to produce artificially a machine with a nervous system, neurons with axons and
 dendrites, and all the rest of it, sufficiently like ours, again the answer to the question seems to be obviously, yes.
 If you can exactly duplicate the causes, you could duplicate the effects. And indeed it might be possible to
 produce consciousness, intentionality, and all the rest of it using some other sorts of chemical principles than
-those that human beings use. It is, as I said, an empirical question. "OK, but could a digital computer think?"
-If by "digital computer" we mean anything at all that has a level of description where it can correctly be
+those that human beings use. It is, as I said, an empirical question. ``OK, but could a digital computer think?"
+If by ``digital computer" we mean anything at all that has a level of description where it can correctly be
 described as the instantiation of a computer program, then again the answer is, of course, yes, since we are the
 instantiations of any number of computer programs, and we can think.
 
-"But could something think, understand, and so on solely in virtue of being a computer with the right sort of
+``But could something think, understand, and so on solely in virtue of being a computer with the right sort of
 program? Could instantiating a program, the right program of course, by itself be a sufficient condition of
 understanding?"
 
 This I think is the right question to ask, though it is usually confused with one or more of the earlier questions,
 and the answer to it is no.
 
-"Why not?"
+``Why not?"
 
 Because the formal symbol manipulations by themselves don't have any intentionality; they are quite
 meaningless; they aren't even symbol manipulations, since the symbols don't symbolize anything. In the linguistic
@@ -494,7 +497,7 @@ Precisely that feature of AI that seemed so appealing -- the distinction between
 realization in the hardware seems to be parallel to the distinction between the level of mental operations and the
 level of brain operations. And if we could describe the level of mental operations as a formal program, then it
 seems we could describe what was essential about the mind without doing either introspective psychology or
-neurophysiology of the brain. But the equation, "mind is to brain as program is to hardware" breaks down at
+neurophysiology of the brain. But the equation, ``mind is to brain as program is to hardware" breaks down at
 several points among them the following three:
 
 First, the distinction between program and realization has the consequence that the same program could have
@@ -509,7 +512,7 @@ program, since memorizing it won't teach him Chinese.
 
 Second, the program is purely formal, but the intentional states are not in that way formal. They are defined in
 terms of their content, not their form. The belief that it is raining, for example, is not defined as a certain formal
-shape, but as a certain mental content with conditions of satisfaction, a direction of fit (see Searle 1979), and the
+shape, but as a certain mental content with conditions of satisfaction, a direction of fit\footnote{\citeauthor[See][]{Searle2}}, and the
 like. Indeed the belief as such hasn't even got a formal shape in this syntactic sense, since one and the same
 belief can be given an indefinite number of different syntactic expressions in different linguistic systems.
 
@@ -542,18 +545,18 @@ properly programmed, ideally with the same program as the brain, the information
 two cases, and this information processing is really the essence of the mental.
 
 But the trouble with this argument is that it rests on an ambiguity in the notion of '- information." In the sense in
-which people "process information" when they reflect, say, on problems in arithmetic or when they read and
+which people ``process information" when they reflect, say, on problems in arithmetic or when they read and
 answer questions about stories, the programmed computer does not do -information processing." Rather, what
 it does is manipulate formal symbols. The fact that the programmer and the interpreter of the computer output
 use the symbols to stand for objects in the world is totally beyond the scope of the computer. The computer, to
-repeat, has a syntax but no semantics. Thus, if you type into the computer '2 plus 2 equals?" it will type out '-4."
+repeat, has a syntax but no semantics. Thus, if you type into the computer '2 plus 2 equals?' it will type out '-4.'
 But it has no idea that -4" means 4 or that it means anything at all. And the point is not that it lacks some
 second-order information about the interpretation of its first- order symbols, but rather that its first-order
 symbols don't have any interpretations as far as the computer is concerned. All the computer has is more
 symbols.
 
-The introduction of the notion of "information processing" therefore produces a dilemma: either we construe the
-notion of "information processing" in such a way that it implies intentionality as part of the process or we don't. If
+The introduction of the notion of ``information processing" therefore produces a dilemma: either we construe the
+notion of ``information processing" in such a way that it implies intentionality as part of the process or we don't. If
 the former, then the programmed computer does not do information processing, it only manipulates formal
 symbols. If the latter, then, though the computer does information processing, it is only doing so in the sense in
 which adding machines, typewriters, stomachs, thermostats, rainstorms, and hurricanes do information
@@ -594,10 +597,10 @@ the program.
 This form of dualism is not the traditional Cartesian variety that claims there are two sorts of substances, but it
 is Cartesian in the sense that it insists that what is specifically mental about the mind has no intrinsic connection
 with the actual properties of the brain. This underlying dualism is masked from us by the fact that AI literature
-contains frequent fulminations against "dualism'-; what the authors seem to be unaware of is that their position
+contains frequent fulminations against ``dualism'-; what the authors seem to be unaware of is that their position
 presupposes a strong version of dualism.
 
-"Could a machine think?" My own view is that only a machine could think, and indeed only very special kinds
+``Could a machine think?" My own view is that only a machine could think, and indeed only very special kinds
 of machines, namely brains and machines that had the same causal powers as brains. And that is the main
 reason strong AI has had little to tell us about thinking, since it has nothing to tell us about machines. By its own
 definition, it is about programs, and programs are not machines. Whatever else intentionality is, it is a biological
@@ -609,9 +612,11 @@ dualism: the mind they suppose is a matter of formal processes and is independen
 causes in the way that milk and sugar are not.
 
 In defense of this dualism the hope is often expressed that the brain is a digital computer (early computers, by
-the way, were often called "electronic brains"). But that is no help. Of course the brain is a digital computer.
+the way, were often called ``electronic brains"). But that is no help. Of course the brain is a digital computer.
 Since everything is a digital computer, brains are too. The point is that the brain's causal capacity to produce
 intentionality cannot consist in its instantiating a computer program, since for any program you like it is possible
 for something to instantiate that program and still not have any mental states. Whatever it is that the brain does
 to produce intentionality, it cannot consist in instantiating a program since no program, by itself, is sufficient for
 intentionality.
+
+\setcounter{footnote}{\thefn}
