--- a/modeight.tex
+++ b/modeight.tex
@@ -1,9 +1,10 @@
 \part{How Should I Act?}
 \label{ch.modeight}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
-\chapter{Part 17: Normative Ethics}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: Normative Ethics}\setcounter{seccount}{1}
 Our focus in this module will be normative ethics. It is worth noting that many people confuse normative ethics and descriptive ethics. Descriptive Ethics is the study of how people do, in fact, think about ethics. Different cultures and people think about ethics differently, this is fine and totally normal. Normative Ethics is concerned how we should be motivated and how we should act. Confusing these two has lead many people to moral relativism, but it's rooted in a confusion, not a fact. Confusing these two things also is the main support for the Cultural Differences Argument which we saw before. The project in Normative Ethics is to find a theory which best explains our moral intuitions and best describes universally held moral standards. One way to think of the difference is that Descriptive Ethics is the realm of sociology, while Normative Ethics is the realm of philosophy.  Different theories have been made to best describe our moral intuitions and are still being made, each improving on the last (so there is progress). 
-\section{Ethical Theories}
+\section{Part \thechapcount.\theseccount: Ethical Theories}\stepcounter{seccount}
 As we saw in the last module, Moral Relativism just can't be correct. The reasons for supporting it contradict each other or it leads to truly awful beliefs. If we still want to be Moral Realists, then we are going to need to go with something objective, a theory of morality which has a set of rules or guiding principles to tell us what to do.  Trying to answer this question has lead down two different paths, the first we will cover belongs to the \Glspl{consequentialism}, who hold that we can tell whether an action was morally right or wrong based on the consequences, hence the name. In general, this branch thinks in terms of well-being and happiness/sadness. The second path people have taken in trying to get to an Ethical Theory goes belongs to the \Glspl{non-consequentialism}, who hold that the consequences of an action have no baring on the morality. In general, this branch points to respect, free-will, the human spirit, and rationality to get the morally right actions. Sometimes you will find middle-ground theories, but these tend to come from the Consequentialists, not the Non-consequentialists. Both of these branches share one thing in common, though, they are trying to answer the question ``what should I do?" There are other ethical questions out there concerning different questions, for example, the field of Virtue Ethics, found in Aristotle and most of Eastern Philosophy, is trying to answer the question ``who should I be?", which is very different. It seems clear that a good person can make a moral error and a bad person can do the right thing.  For this class, we are mostly only going to be concerned with the `what should I do?' question, but other philosophy classes are out there which cover the other question.
 
 \newglossaryentry{consequentialism}
@@ -23,7 +24,7 @@ As we saw in the last module, Moral Relativism just can't be correct. The reason
 
 For both the consequentialist and non-consequentialist branches of the tree, we can add further stances by asking various questions. For example, if we ask the question ``Do I have moral duties to other people?" and get either ``no" or ``sometimes", then, likely, we are dealing with a flavor of ethical egoism, which is the stance that something is moral if it benefits you selfishly. You might have heard of this stance before, but by a different name. The most famous supporter of this was Ayn Rand.
 
-\section{The Scientific Method for Ethics}
+\section{Part \thechapcount.\theseccount: The Scientific Method for Ethics}\stepcounter{seccount}
 
 When you are given a general Ethical Theory, there is a scientific style method for testing it. When philosophers propose a hypothesis about what makes an action right or wrong (good or bad) (in this context, we call them theories), they come from looking at the facts about people’s general moral intuitions and why we think a person did right or wrong in their actions/why a person is a good or bad one.  The ‘why’ aspect is key. Most of the time, our moral intuitions are a gut instinct, from a sort of mental-shortcut. The vast majority of the time, moral disagreements can be settled by exposing the shortcuts. This moves the moral debate into a metaphysical one, one which we can debate about. 
 
@@ -42,8 +43,8 @@ This also comes in a slightly different form. We chose which according to the pr
 We start with what the theory claims would be the case and then see whether it lines up with the data (for this class, the data is your gut instinct when it comes to the ethical case. There are areas in psychology and philosophy which actually test people's moral intuitions by, for example, putting them in a VR situation and measuring the response). This system works for most of the theories covered in this class. The trick is to figure out what the theory says about a particular case and then see whether you think that this is correct.
 
 Sometimes, however, it is harder to pinpoint something that the theory gets wrong in terms of actions. In these cases, it pays to look into how the theory chooses whether an action is right or wrong. Those cases don’t tend to involve me making a fun story, which I do for almost all of them (there are exceptions, Divine Command Theory, Virtue Ethics, and Feminist Ethics). The more applicable the theory is to individual choices, the easier making a case where it makes a prediction is.
-
-\chapter{Part 18: Utilitarianism}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: Utilitarianism}\setcounter{seccount}{1}
 
 Utilitarianism is based on the idea that happiness is good. It is Consequentialist in nature. Utilitarian thinkers have traditionally understood happiness in terms of pleasure and the absence of pain. The general ideas behind this theory are found the world over, for example, you can find this theory being discussed and spread in Ancient China, in the Mohist School, between 479 BCE and 221 BCE. It was first really formalized by Jeremy Bentham (for a fun fact about him, look up the Auto-Icon) and then was further developed by John Stuart Mill, who is its best known advocate. Mill, characterizes \gls{utilitarianism} as the view that “an action is right in-so-far as it tends to produce pleasure and the absence of pain.” Mill, also, has a fascinating life story as well, if you care to look into it.  If happiness, conceived of as pleasure and the absence of pain, is the one thing that has positive value and pain/sadness being pleasure's opposite (the one thing with negative value), then this criterion of right action should follow fairly quickly. This leads us to the Principle of Utility.
 
@@ -92,7 +93,7 @@ Give money to broke relative&60&20&40
 
 Like I said, you can use different sizes, just keep them the same in the same case. As we can see, the amount of suffering caused by my action is around the same across the board. But the amount of pleasure is different, the one with the most is to donate the money to a food bank. According to the utilitarian, this is what I should do.
 
-\section{Why People Like This Theory}
+\section{Part \thechapcount.\theseccount: Why People Like This Theory}\stepcounter{seccount}
 
 There are several reasons why people tend to like this theory. In other words, there are several positive aspects of it which seem to get morality right. The first reason is that the theory is impartial. It does not have in it any sort of bias for or against a person or even animal. As Jeremy Bentham put it, it doesn't matter whether they can speak or whether they can problem-solve, rather it only matters whether they can suffer. As a result, it doesn't matter whether you are rich, poor, black, white, male, female, man woman, part of some religious sect, or none at all. Morally speaking, you are equally worthy of consideration. Sometimes we take this sort of equality for granted, but when this theory was being formulated, it was not the norm, and even today, equality of this sort is fought for. You don’t need to argue for it in utilitarianism, it comes built in.
 
@@ -102,7 +103,7 @@ Third, a really important feature in a theory is that it can provide practical a
 
 The fourth plus which this theory has going for it is its flexibility. As I mentioned in the part about justification, certain rules tend to produce the best outcomes, so the utilitarian supports them. But, those rules are not absolutes, they are there because they tend to get the best result. Sometimes, we need to break those rules in extreme situations. Utilitarians are just fine with this and can easily give the reasons why those rules should be broken. Its flexibility lets it work in most any situation. Take this historical case as an example: In the winter between 1846-1847, members of the Donner Party, traveling west, found themselves in heavy mountain snows. About half of the 87 members of the party died after food and supplies ran out. Those left had a terrible choice: Starve to Death or Eat the Remains of their fellows. Some may think that the rules against cannibalism are absolutes. Not to be violated under any conditions. The Utilitarian disagrees. This disagreement is not based on cannibalism, but rather that no act-type is absolutely wrong. While it’s wonderful that many of us are against these sorts of actions, utilitarians understand that desperate times call for desperate measures.
 
-\section{Concerns for Utilitarianism}
+\section{Part \thechapcount.\theseccount: Concerns for Utilitarianism}\stepcounter{seccount}
 
 Now, this theory is really good at a lot of things, it is especially useful in high-stakes situations, but there are some concerns which need to be addressed and areas of improvement. The first is an epistemological worry which should have caught your eye in the last page. Often, We don’t know (and sometimes we can't know) what the consequences of our actions will be in the long term. Sometimes, even in the short term, we may be uncertain about what will happen. For example, what if one of the people affected is particularly strange and gets happiness from pain? These worries point to a concern about the practicality of the theory.  It's difficult to use it in our daily lives. This worry/concern does NOT take Utilitarianism out of running for being a good Normative Ethical Theory, though. As a normative ethical theory, utilitarianism is aimed at identifying the standard for right action, not telling when a particular action meets that standard. Setting the standard for right action and figuring out how to meet that standard are two different projects. But they aren't the only worries for this primitive form of Utilitarianism (Act-Utilitarianism). There are other worries which are troubling for the very core of the theory, the Principle of Utility.
 
@@ -110,7 +111,7 @@ Now, this theory is really good at a lot of things, it is especially useful in h
 
 When we speak of utility as pleasure and the absence of pain, we need to take “pleasure” and “pain” in the broadest sense possible. There are social, intellectual and aesthetic pleasures to consider as well as sensual pleasures. Recognizing this is important to answering what Mill calls the “doctrine of swine” objection to Utilitarianism. This objection takes the Utilitarianism to be unfit for humans because it recognizes no higher purpose to life than the mere pursuit of pleasure. This objection only applies to treating pleasure and pain in their most basic, animalistic, senses.  This was not originally mine, but a version of it was given as a two day lecture when I was in community college. The very original version is not as fun to give and it was published by G.E. Moore in 1903. If you want to see one other objection, one which you could write about in the assignment as well as the original objection to hedonism (which is a more primitive form of utilitarianism, without special amendments, utilitarianism falls into both of these problems). But, here we go:
 
-    \thoughtex{Porky the Pig Farmer}{Way deep in the back woods, there lives a pig farmer named Porky. Porky raises prize winning swine and sells them to cover his basic needs. He has no wife/husband and doesn’t really want one. One day, when he was particularly bored, he noticed his swine having fun wallowing in the mud. Thinking that this looked like a good time, he stripped down and jumped in, having a whale of a time. As time goes on, Porky needs more entertainment than merely wallowing with his sows. He starts thinking “man, that’s a pretty little piggy”. Over time, late in the evening, his neighbors start hearing strange sounds coming from the direction of Porky’s shack. They think nothing of it, maybe Porky is just doing some late night breeding to get better piggies for market. Porky is doing some late night breeding of a sort. He is engaged in bestiality! And O! Is he enjoying himself!}{Porky.jpg}
+    \thoughtex{Porky the Pig Farmer}{Way deep in the back woods, there lives a pig farmer named Porky. Porky raises prize winning swine and sells them to cover his basic needs. He has no wife/husband and doesn’t really want one. One day, when he was particularly bored, he noticed his swine having fun wallowing in the mud. Thinking that this looked like a good time, he stripped down and jumped in, having a whale of a time. As time goes on, Porky needs more entertainment than merely wallowing with his sows. He starts thinking “man, that’s a pretty little piggy”. Over time, late in the evening, his neighbors start hearing strange sounds coming from the direction of Porky’s shack. They think nothing of it, maybe Porky is just doing some late night breeding to get better piggies for market. Porky is doing some late night breeding of a sort. He is engaged in bestiality! And O! Is he enjoying himself!}{Porky.jpg}{A cartoon of a pig dressed as a farmer in front of a farmhouse.}
 
 With all this information about how awesome and pleasurable Porky's life is with his piggy time, we now have to ask ``is what he is doing moral?" Well, according to Utilitarianism, if we take pleasure to be in the animalistic sense, it is.
 \begin{earg}
@@ -135,7 +136,7 @@ Because of this objection, Mill and others don't take pleasure in the animalisti
 
 One objection to Utilitarianism isn't concerned with what it measures to determine morality or even how it is measured, rather this objection concerned how it determines the morally right action given the outcomes. As Act-Utilitarianism sits right now, it claims that the morally right action is the one with the highest outcome given the available options. This, however, leads to the possibility of a utility monster. A utility monster is a being which receives a massive quantity of pleasure (happiness, the good) from consuming resources, higher than any other being, by a significant margin, often at the expense of others. Just a cursory glance over the numbers would have Act-Utilitarianism claim that such a utility monster is doing the right thing in exploiting or harming others for their own benefit, because of the massive amount of good which they receive. To put this idea as an example, take the following case:
 
-\thoughtex{The Utility Monster}{Peter Singer\footnote{Peter Singer is an Australian philosopher and is best known for his, seemingly, extreme views regarding Utilitarianism. He holds that the theory is correct and applies it to many contemporary issues. For example, one of his foundations, The Life You Can Save, tracks the spending habits of various charities and connects donors with the one which will get the most `bang for their buck' in the issue which they are concerned with. Singer, holding true to this belief, lives well below his means and donates substantial amounts to charity. He is mostly concerned with world hunger and poverty, but he has been known to be outspoken about animal `rights' and welfare.}, late in the evening, while he is resting at home, hears loud banging and commotion coming from his basement. So, he grabs his flashlight and goes down to investigate. He sees a green, round, being with arms and legs tearing apart Singer's plumbing causing massive flooding. ``What are you?" Singer exclaims, ``and what are you doing to my pipes?" The creature pauses their destruction for a moment and turns to Singer. ``I am destroying your plumbing" they explain, ``you see, I love wrecking pipes, far more than any suffering caused to you. I am a utility monster."}{UtilityMonster.jpg}
+\thoughtex{The Utility Monster}{Peter Singer\footnote{Peter Singer is an Australian philosopher and is best known for his, seemingly, extreme views regarding Utilitarianism. He holds that the theory is correct and applies it to many contemporary issues. For example, one of his foundations, The Life You Can Save, tracks the spending habits of various charities and connects donors with the one which will get the most `bang for their buck' in the issue which they are concerned with. Singer, holding true to this belief, lives well below his means and donates substantial amounts to charity. He is mostly concerned with world hunger and poverty, but he has been known to be outspoken about animal `rights' and welfare.}, late in the evening, while he is resting at home, hears loud banging and commotion coming from his basement. So, he grabs his flashlight and goes down to investigate. He sees a green, round, being with arms and legs tearing apart Singer's plumbing causing massive flooding. ``What are you?" Singer exclaims, ``and what are you doing to my pipes?" The creature pauses their destruction for a moment and turns to Singer. ``I am destroying your plumbing" they explain, ``you see, I love wrecking pipes, far more than any suffering caused to you. I am a utility monster."}{UtilityMonster.jpg}{A monster tearing into the plumbing in a basement.}
 
 In this case, most of us would say that it's wrong for the utility monster to destroy Singer's pipes. There are concerns about personal property and there are concerns about the harm done to Singer. However, Act-Utilitarianism, without any modifications, measures pleasure and pain with the same metric. One unit of happiness cancels out one unit of sadness. As a result, so long as the Utility Monster didn't have any other options which would cause a higher total, Act-Utilitarianism would say that they did the right thing. This does not square with general intuitions about morality. 
 
@@ -145,11 +146,11 @@ Act-Utilitarianism gets the wrong result in this sort of case. And this objectio
 
 This problem is often seen as a more gruesome version of the Trolley Problem for Ethics. This objection to Act-Utilitarianism stems from the idea that only the results matter, the ends justify the means. I personally have other versions of problems like this which involve framing an innocent person, forging evidence, and rigging elections, all of which have (due to the situation that they are in) the best consequences. Consider the following case:
 
-    \thoughtex{A Check-Up}{Bob goes to the doctor for a check up. His doctor finds that Bob is in perfect health. And his doctor also finds that Bob is biologically compatible with six other patients she has who are all dying of various sorts of organ failure. Let’s assume that if Bob lives out his days he will live a typically good life, one that is pleasant to Bob and also brings happiness to his friends and family. But we will assume that Bob will not discover a cure for AIDs or bring about world peace. And let us make similar assumptions about the six people suffering from organ failure.}{OrganHarvest.jpg}
+    \thoughtex{A Check-Up}{Bob goes to the doctor for a check up. His doctor finds that Bob is in perfect health. And his doctor also finds that Bob is biologically compatible with six other patients she has who are all dying of various sorts of organ failure. Let’s assume that if Bob lives out his days he will live a typically good life, one that is pleasant to Bob and also brings happiness to his friends and family. But we will assume that Bob will not discover a cure for AIDs or bring about world peace. And let us make similar assumptions about the six people suffering from organ failure.}{OrganHarvest.jpg}{A cartoon of a young man getting a check-up from an older doctor.}
 
 The question for the Act-Utilitarian is ``what should the doctor do?" According to the theory, it seems that the good doctor should quickly and as painlessly as possible kill Bob and harvest his organs, getting them to the 6 other patients as quickly as possible. This is because, to quote Spock, ``the needs of the many outweigh the needs of the few." The overall outcome of letting Bob go is the value of one average good life minus the values of six average good lives and the overall outcome of killing Bob is the value of six average good lives minus the value of one. But this can't be right. Our intuitions clearly speak to the immorality of this.  Act-Utilitarianism, again, gets the wrong result in this sort of case. 
 
-\section{Rule Utilitarianism}
+\section{Part \thechapcount.\theseccount: Rule Utilitarianism}\stepcounter{seccount}
 
 After having the concerns with Act-Utilitarianism, more particularly, cases similar to the Organ Harvest Problem, many people have thought to amend Utilitarianism to better fit those cases. These amendments are perfectly fine, but they have reached the point where they have developed into two different theories in this family. The first, which we will cover in this class, is called Rule Utilitarianism and the second, which we will not be covering, is called Negative Utilitarianism.
 
@@ -158,8 +159,8 @@ Rule Utilitarians move away from the idea that we need to max-out the utility of
 Consider the following rule: Doctors should never harm their patients except when doing so would maximize utility. Now suppose that doctors ordinarily refrain from harming their patients and as a result people trust their doctors. But in Bob’s case, his doctor realizes that she can maximize utility by killing Bob and distributing his organs. She can do this in a way that no one will ever discover, so her harming Bob in this special case will not undermine people’s faith in the medical system. The possibility of rules with “except when utility is maximized” clauses renders Rule Utilitarianism vulnerable to the same kinds of counterexamples we found for Act Utilitarianism. In effect, Rule Utilitarianism collapses back into Act Utilitarianism.
 
 In order to deal with the original problem of Bob and his vital organs, the Rule Utilitarian must find a principled way to exclude certain sorts of utility maximizing rules. Rather than pursuing this further for the Utilitarian, I want to consider further just how simple Act Utilitarianism goes wrong in Bob’s case (and I say this as a person who honestly thinks Consequentialism is correct). Utilitarianism evaluates the goodness of actions in terms of their consequences. Utilitarian considerations of good consequences seem to leave out something that is ethically important. Specifically, in this case, it leaves out a proper regard for Bob as person with a will of his own. What makes Bob’s case a problem case is something other than consequences, namely, his status as a person and the sort of regard this merits. This problem case for utilitarian moral theory seems to point towards the need for a theory based on the value of things other than an action’s consequences.
-
-\chapter{Part 19: Kantianism}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: Kantianism}\setcounter{seccount}{1}
 
 Like Utilitarianism, Imannual Kant’s moral theory states that there is an absolute moral rule. But, unlike Utilitarianism, it states that the consequences of the action don't matter morally. It is, however, grounded in a theory of intrinsic value. Rather than going with the Principle of Utility, Kant's theory has it that the only thing with moral worth is the Good Will, which we find in persons. Persons, for this theory are  autonomous rational moral agents. This theory, from the very start, makes a certain metaphysical assumption: People have free will. This can't be the kind of free will proposed by the Compatibilist in the sense we have seen in this class, as Kant was fundamentally opposed to it, so the sense of free will must be the Libertarian sense. There have been attempts to make a Kantian Compatibilism, but those seem to have been unsuccessful.
 
@@ -187,7 +188,7 @@ Kant's version of the Principle of Utility, his fundamental principle to guide o
 
 Although Kant gives 4 different statements of the Categorical Imperative and claims that they all boil down to the same basic idea, there is some debate about whether they do. Two of the formulations just seem to be restatements of the other two, and the debate is over whether these two can be formed together. Once you see them, you will see that they certainly don't look like they are expressing the same idea. The first formulation which we will cover is called The Principle from Humanity, for this class, though other names for it are out there. The second formulation is called The Principle from Universalizability for this class, though, again, other names are out there.
 
-\section{The Principle From Humanity}
+\section{Part \thechapcount.\theseccount: The Principle From Humanity}\stepcounter{seccount}
 \begin{center}
 Always treat persons (including yourself) as ends in and of themselves and never as a mere-means
 \end{center}
@@ -199,7 +200,7 @@ We treat people as a means to our own ends in ways that are not morally problema
 
 By contrast, we use someone as a mere-means to our own ends if we force them to do our will, or if we deceive them into doing our will. We are, in a sense, using them without their consent, where it would not be possible for them to consent. Sometimes we use people as mere-means when we don't take their goals into account in our interactions with them.
 
-    \thoughtex{Smith Tower}{Suppose that I have the goal of building a tower with my name emblazoned on the top.  I have the money to do this and I hire workers to build it (they have the understanding that they will get paid when the job is done). Just before they finish the work and would expect to get paid, I take all of my money, put it in an off-shore account under my son's name and declare bankruptcy. Using the laws in this regard, I get the contracts waved so that I don't pay the workers.  Later, when the dust settles, I transfer the money back into my name.}{SmithTower.jpg}
+    \thoughtex{Smith Tower}{Suppose that I have the goal of building a tower with my name emblazoned on the top.  I have the money to do this and I hire workers to build it (they have the understanding that they will get paid when the job is done). Just before they finish the work and would expect to get paid, I take all of my money, put it in an off-shore account under my son's name and declare bankruptcy. Using the laws in this regard, I get the contracts waved so that I don't pay the workers.  Later, when the dust settles, I transfer the money back into my name.}{SmithTower.jpg}{A large tall building with the name `Smith' glowing on the top.}
 
 In doing this, I have used those workers as mere-means. I have the goal of getting the building, they have the goal of getting paid. In my interactions with them, according to Kantianism, I should have, in a sense, made their goals my own and had the intermediate end of paying them for the work. In the case above, the workers and I do not share the same end, so I am using them merely as a means.
 
@@ -217,7 +218,7 @@ So, killing is always wrong, so is stealing. Another example of this formulation
     \item[] Slavery does not treat people as an intrinsically valuable being.
     \item[] Therefore, slavery is morally wrong.
 \end{earg}
-\section{Problems for Humanity}
+\section{Part \thechapcount.\theseccount: Problems for Humanity}\stepcounter{seccount}
 \subsection{Taxation}
 \begin{earg}
     \item[] Taxation is the taking of a person’s property and using it to benefit others, without their consent.
@@ -230,7 +231,7 @@ Some of my more conservative students may like the sound of that, ``Taxation is 
 
 This is an interesting case, and one which Kant himself thought was right, as in he thought that the theory got the correct answer here, however, this does not line up with most people's moral intuitions about the case. Take this case as an example (which will appear in the discussion for this module):
 
-    \thoughtex{Kant's Axe}{Your roommate is in the shower after having a late night with a recently gained boy/girlfriend, who had gone through a recent bad break-up (their former significant other is ``the ex", this is not the ex of your roommate, for clarity) . You hear a knock on the door and go to answer it. You find the ex standing at the door with an axe, murder in his/her eyes. The ex asks you “Where is [insert roommate name]?” Neither of you can hear the shower running. You know that if you tell the ex, then they will rush right through you/knock you out/whatever and get to the roommate killing them.}{KantsAxe.jpg} 
+    \thoughtex{Kant's Axe}{Your roommate is in the shower after having a late night with a recently gained boy/girlfriend, who had gone through a recent bad break-up (their former significant other is ``the ex", this is not the ex of your roommate, for clarity) . You hear a knock on the door and go to answer it. You find the ex standing at the door with an axe, murder in his/her eyes. The ex asks you “Where is [insert roommate name]?” Neither of you can hear the shower running. You know that if you tell the ex, then they will rush right through you/knock you out/whatever and get to the roommate killing them.}{KantsAxe.jpg}{A man standing at a door with an axe in his hand.}
 
 According to The Humanity Principle, we should never use others as a mere-means. But, does lying count as a mere-means? According to Kant, it does. Kant says that in lying, you are misinforming one person for the benefit of another (or yourself), without appreciating their intrinsic worth. This is always wrong, according to the principle, so lying, no matter what, is always wrong. Sure, you could refuse to answer, slam the door, and so on, but you can never lie. This means that lying to the axe-murderer is wrong. So, if you need to speak, then you must tell them that your roommate is in the shower, and more than likely, deal with the Psycho scene later. 
 
@@ -241,10 +242,10 @@ This particular problem addresses something interesting in this formulation of t
 
 I have hence asked around and some examples do seem problematic and I will look at the issue of rendering aid. Often we glorify people who help others at the cost of their own wants and goals. In such a case, they are not taking their own goals into account and using themselves to benefit others. This, by its very nature, would be the person using themselves as a mere-means. Here is an example, in an ordinary case:
 
-    \thoughtex{Changing a Tire}{Suppose that I have the goal of buying a new video game, The Elder Scrolls 20 or some such, and I know that given the shear demand for the game, if I am not there just as the shop opens, it will be sold out. As I am driving to the shop early,  I notice a young man having a hard time changing a tire. Feeling as though I should help, I pull over to render aid. This prevents me from making it to the shop on time and violates my end.}{changingtire.jpg}
+    \thoughtex{Changing a Tire}{Suppose that I have the goal of buying a new video game, The Elder Scrolls 20 or some such, and I know that given the shear demand for the game, if I am not there just as the shop opens, it will be sold out. As I am driving to the shop early,  I notice a young man having a hard time changing a tire. Feeling as though I should help, I pull over to render aid. This prevents me from making it to the shop on time and violates my end.}{changingtire.jpg}{A young man having a difficult time changing his tire.}
 
 In this case, it would seem that I have used myself as a mere-means and cases of rendering aid like this would be morally wrong.    
-\section{The Principle from Universalizability}
+\section{Part \thechapcount.\theseccount: The Principle from Universalizability}\stepcounter{seccount}
 \begin{center}
 Act only on the maxim that you can consistently will to be a universal law
 \end{center}
