--- a/modnine.tex
+++ b/modnine.tex
@@ -2,7 +2,8 @@
 \label{ch.modnine}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 \input{statusofabortion}
-\chapter{Part 20: What is an Abortion?}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: What is an Abortion?}\setcounter{seccount}{1}
 
 This question is the start of a very heated debate which can get nasty, so please keep that in mind. I have used other heated examples before, so you should know how to handle this. For this chunk, we are just looking at what it is, not the moral status of it. Here, we are looking at the metaphysical question concerning abortion, what is it? Later, once this is settled, we will look at the ethical question, is it OK to have one? 
 
@@ -22,7 +23,7 @@ So, we could add in something about the pre-mature nature of the termination, bu
 \end{enumerate}
 If you only have the first one, then you will not get cases of, say, doctor assisting the woman in terminating her pregnancy. If you only have the second one, then you will not get cases of self-administered abortions.  To avoid the cases where birth could be defined as an abortion, we need to say that `terminating a pregnancy' does involve the ending of a fetus. The moral status of that fetus is where the debate is.  
 
-\subsection{Is it morally permissible to have an abortion?}
+\section{Part \thechapcount.\theseccount: Is it morally permissible to have an abortion?}\stepcounter{seccount}
 
 I get that this is a hot issue, and if I have not already, I guess that I will need to be far more active in the comments in the discussion for this one than I already have been, please remember to be civil. For Warren, the moral status of abortion hinges on the answer to the following question:
 
@@ -32,7 +33,7 @@ The Fetus Question: Is a fetus a person, in the morally relevant sense?
 
 The main tie-in, and one which you will read me say several times, is that if a fetus is a person, then abortion is wrong, if a fetus is not a person, then abortion is permissible. The Fetus Question moves the ethical debate regarding abortion, ``is abortion murder?" to a metaphysical debate regarding person-hood. Typically, our moral intuitions are gut responses, which come from mental shortcuts, when we analyse that shortcut, we can get down to a metaphysical question which we have grounds to prove or disprove. The author of the reading is arguing that it is possible to show that a fetus is not a person, making abortion permissible.\footnote{Some students, especially those who use translation dictionaries, will have issues with two different words, these words are ``person" and ``human". These do not mean the same thing, and we will see how these come apart later. For now, a human is a member of our species and a person is a being with moral worth equal to you or me. We will see later how there can be non-human persons.} 
 
-\subsection{Framing the Problem}
+\section{Part \thechapcount.\theseccount: Framing the Problem}\stepcounter{seccount}
 
 Of course, while some philosophers and others would deny the possibility of a proof that a fetus is not a person, claiming that to do so would be to prove a contradiction or that it's not possible to prove either way (this would lead to skepticism about fetal person-hood). By the same token, others will claim that there's no need for a proof. These people claim that the moral status of a fetus, its person-hood, is too obvious to need justification. But, both sides of the debate, pro-choice and the pro-life, take their evidence and reasoning to be obvious, to an equal degree. This is much like a belief in God. Some Atheists claim that the non-existence of God is clear and obvious, while at the same time, Theists claim that the existence of God is equally obvious. This disagreement means that we can't trust our gut instincts on this issue, we need to use logic to show that one of the sides is faulty.
 
@@ -81,18 +82,18 @@ The Pro-Life Response to Argument A , in their eyes, takes out the reasoning for
 
 The second argument given by the pro-choicers is exemplified by Argument B. This one uses a more non-consequentialist/Kantian style reasoning, pointing out that denying a woman the ability is have an abortion is to deprive her of some manner of bodily right. For example, the right to choose when and how one bears young. This one also falls short. The Pro-Life Response to Argument B shows where this falls short. They are basically saying there that while a person has rights, those rights can't imply that it's OK to violate another's rights. For example, take property rights. It seems clear that a person has the right to remove another from their property and has the right to defend their property, but how far does that right extend? Take this example, which really did happen, but I have exaggerated for our purposes:
 
-\thoughtex{Piano Wire on the Trail}{A man owns a large piece of property, land, and there's a group of young hooligans who ride their motor bikes on the trails through his land. So, one day, he put up a line of piano wire across one of the trails, at a particular height. As one of the young people rides through the trail, the wire, tight, catches them on the neck and decapitates them.}{pianowire.jpg}
+\thoughtex{Piano Wire on the Trail}{A man owns a large piece of property, land, and there's a group of young hooligans who ride their motor bikes on the trails through his land. So, one day, he put up a line of piano wire across one of the trails, at a particular height. As one of the young people rides through the trail, the wire, tight, catches them on the neck and decapitates them.}{pianowire.jpg}{A forest trail with piano wire strung across it.}
 
 This was wrong of him, or so many have argued, and the pro-lifers can use the sort of reasoning here to support themselves. In putting up the piano wire and killing the hooligan, the man violated that person's right to life. This right is stronger than the property rights which the man would have otherwise had, meaning that in this case, he did not have the right to protect his property in this way.  From this line of thought, the pro-lifer can say that, because a person's right to life is stronger than a person's bodily rights, abortion is still wrong.  Since we have these strong competing intuitions and because the pro-lifer, the serious ones at least, won't give an inch for the consequentialist considerations, we are going to need to approach the abortion debate from the non-consequentialist perspective and show that the system, in fact, allows for abortion.
 \subsection{The Fundamental Question}
 
 The most basic question which we need to answer is not about the results of having legal abortions but rather about what it takes to be a person. This is the Fetus Question. The pro-life responses to the commonplace pro-choice arguments show that they take a fetus to be a person. So, there are two routes we can take. First, we could show that there are some cases such that, even if we assume that a fetus is a person, abortion is still permissible (this is the first part of the pro-choice response). Second, we could show that a fetus is not a person, thereby making abortion permissible (before a certain point). So, for that second half, we need to show what features it takes to be a person. If a fetus has the features, then it is a person and abortion is murder, if it does not, then it is not. Warren's case is that there are certain cases where it's permissible to have an abortion, even if a fetus is a person, and then she moves on to show that a fetus is not a person, which entails that abortion is permissible.
-
-\chapter{Part 21: The Abortion Debate (Pro-Choice)}
-\section{Assume That a Fetus is a Person}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: The Abortion Debate (Pro-Choice)}\setcounter{seccount}{1}
+\section{Part \thechapcount.\theseccount: Assume That a Fetus is a Person}\stepcounter{seccount}
 As I mentioned at the end of the previous page, Warren has two parts to her paper. First, she will assume, just for the sake of argument, that a fetus is a person, and then from that show that if a fetus is a person, there are cases where killing it is permissible. The second section is where she shows that a fetus is not a person, so it's not entitled to the same moral rights as you or me, which means that abortion is permissible. This page is the start of that first section. If there's a way to get that at least some abortions are OK in this case, then you can't have the all out ban on them which is some times proposed. Rather, morally speaking, you would need to have some exceptions. It is worth noting, and we will return to this point, that the morality of an abortion, proved in this section, assuming that a fetus is a person, is limited to a very select range of cases. This range of cases is defined, roughly, by how much consent the woman had in the actions resulting in pregnancy.  This is where Warren, through Judith Thomson, gets the Violinist Thought Experiment:\autocite{Thomson1}
 
-    \thoughtex{The Violinist}{Imagine that you have been kidnapped, and your bloodstream hooked up to that of the violinist, who happens to have an ailment that will certainly kill him unless he is permitted to share your kidneys for a period of nine months. You are a human dialysis machine. No one else can save him, since you alone have the right type of blood. He will be unconscious all that time, and you will have to stay in bed with him, but after the nine months are over he may be unplugged, completely cured, that is provided that you have cooperated. The violinist themselves had no knowledge that this would happen to them.}{violinist.jpg}
+    \thoughtex{The Violinist}{Imagine that you have been kidnapped, and your bloodstream hooked up to that of the violinist, who happens to have an ailment that will certainly kill him unless he is permitted to share your kidneys for a period of nine months. You are a human dialysis machine. No one else can save him, since you alone have the right type of blood. He will be unconscious all that time, and you will have to stay in bed with him, but after the nine months are over he may be unplugged, completely cured, that is provided that you have cooperated. The violinist themselves had no knowledge that this would happen to them.}{violinist.jpg}{A sleeping elderly man and young woman laying in bed together with blood transfusion equipment linking them.}
 
 A common point stated about this thought experiment is that it says that you are stuck in bed for the 9-months. While this is not true in most cases of pregnancy (as in the woman can move around), there are plenty of cases of pregnancy where this is the case (as in they are stuck in bed for most of it), especially if the woman is quite small (my mom, for example, is 4' 10'') and the father is quite large (my father, for example, is 6' 2'').  But, moving on,  if the person on the pro-life side of this debate is consistent in their beliefs, if they don't have any contradictions in their reasoning, then they will need to say that you would need to go to term and be there for the full 9-months.  Despite you being forced into the situation, you will need to keep the violinist alive. They come to this from the following reasoning, which is much like their response to Argument B in the previous part:
 
@@ -123,7 +124,7 @@ Well, it does get us something to get started on. There are a few similarities a
 \subsection{The Results of the Violinist Case and the Problems}
 The Violinist Thought-Experiment is initially quite plausible. It gives us a grounding to have that we aren't always obligated to keep people alive by any means necessary. If there are cases where a pregnancy is sufficiently like this case, then we can get the permissibility of abortion in those cases. But, for cases where they aren't relevantly similar to the Violinist case, we don't get the windy-side of morality, necessarily. The only real cases which are sufficiently like the violinist case are cases of pregnancy due to rape. In those cases, the woman did not voluntarily take on the risks. But, there could be some vagueness on how much give the Violinist Case gives us. If we extend it too far from the bounds of the Violinist case, we could run into wrinkles. For example, take this case: 
 
-    \thoughtex{A Trip to Europe}{A woman, who is 7-months pregnant, finds herself unable to travel to Europe because of the pregnancy. She really does not want to postpone the trip. But, if she has an abortion, then the trip will go off without a hitch. Is it permissible for her to have an abortion?}{europetrip.jpg}
+    \thoughtex{A Trip to Europe}{A woman, who is 7-months pregnant, finds herself unable to travel to Europe because of the pregnancy. She really does not want to postpone the trip. But, if she has an abortion, then the trip will go off without a hitch. Is it permissible for her to have an abortion?}{europetrip.jpg}{A frustrated looking very pregnant woman.}
 
 There seems to be a relevant difference between this case and the violinist case. For this one, people will often make a few different claims. First, some will claim that the woman is too far into the game to quit now, saying that the time for the abortion has passed. Others might claim that the trip to Europe is not a good enough reason to want an abortion, the case just doesn't make her bodily right strong enough. And others still will say that (assuming this is not a case of rape) that she entered into this knowing the risk and has the obligation.
 
@@ -136,7 +137,7 @@ Consequently, there is room for the antiabortionist to argue that in the normal 
 
  To make this into a case, something which we can imagine and use for the analogy, I have created this thought-experiment, based on the Violinist Case, Violinist Cult Thought Experiment:
 
-    \thoughtex{The Violinist Cult}{Suppose that you are a member of a cult along with 99 other people. I know that cult has a negative stigma to it, but bear with me. All of you have voluntarily and with full reasonable consent, entered into a lottery where one of you will be chosen at random to take on the role of being this violinist's human dialysis machine. Imagine that your name is drawn and you have the violinist hooked up. What's your obligation like now?}{violinistcult.jpg}
+    \thoughtex{The Violinist Cult}{Suppose that you are a member of a cult along with 99 other people. I know that cult has a negative stigma to it, but bear with me. All of you have voluntarily and with full reasonable consent, entered into a lottery where one of you will be chosen at random to take on the role of being this violinist's human dialysis machine. Imagine that your name is drawn and you have the violinist hooked up. What's your obligation like now?}{violinistcult.jpg}{A holy-looking violinist surrounded by worshippers.}
 
 Most people, from my experience, say that in this case, there is the obligation to keep the violinist alive. You signed up knowing the risks and you lost the lottery, so to speak. So, what's the difference between the violinist case and the violinist cult case? The first seems to remove the obligation, but the second seems to have it. 
 
@@ -144,7 +145,7 @@ Most people, from my experience, say that in this case, there is the obligation 
 
 The plausibility of such an argument is enough to show that the Violinist analogy can provide a clear and persuasive defense of a woman’s right to obtain an abortion only when the woman is in no way responsible for her pregnancy. In all other cases, we would almost certainly conclude that it was necessary to look carefully at the particular circumstances in order to determine the extent of the woman’s responsibility and hence the extent of her obligation.
 
-\section{Prove That a Fetus is Not a Person}
+\section{Part \thechapcount.\theseccount: Prove That a Fetus is Not a Person}\stepcounter{seccount}
 \begin{center}Is a fetus a person?\end{center}
 
 As I have mentioned before, the second section of this paper concerns whether or not a fetus is a person. The point of the previous section was to show that there are some cases where abortion is OK, even if a fetus is a person. The point here is to show that a fetus is not a person, which means that abortion isn't murder, and therefore is not wrong. This is where the Fetus Question comes in very strong, this is why I also noted that we need to distinguish between `person' and `human'. Questions regarding personhood are metaphysical questions, does a thing have certain features? Similarly, questions regarding `human-hood' are metaphysical questions. From this, as I have mentioned, we are able to move from an ethical question to a metaphysical one. So, let's look at the standard, non-religious, argument from the pro-life side and another argument, which doesn't look similar, but I will explain how these relate:
@@ -188,7 +189,7 @@ The Standard Pro-Life Argument&The Cheese Sandwich Fallacy\\
 
 As you can see, this doesn’t work. But, if we have that all humans are persons, as in that being a generic human is enough to be a person, the argument would work. This would be to say that all humans are persons. On the other hand, however, if there are cases where a human is not a person, then the argument fails. If we can show that all fetuses (before a certain point of development) and not persons, then we have that abortion is permissible (before a certain point in development), by the pro-life style reasoning. Showing that no fetus (before that point) is a person is Warren's next step.  
 
-\section{Warren's Criteria for Personhood}
+\section{Part \thechapcount.\theseccount: Warren's Criteria for Personhood}\stepcounter{seccount}
 Warren argues that there are 5 features which are needed to be a person, and if a fetus has these features (after a certain point), then abortion would be murder (after that point). These features are listed here:
 
 \begin{enumerate}
@@ -303,8 +304,8 @@ These are your dolphins and some whales. At present, some countries have recogni
 Both of these are at the bottom merely because their existence is controversial. No, I do not think that such beings are currently on the planet, rather they are worthy of mention because of their possibility. The section regarding the Mind-Body Problem shows us that proving person-hood for an AI will be tough, it will need to have Strong AI, if they are possible at all. However, a Strong AI would obviously be able to speak, have consciousness, self-awareness, self-motivated activity, and reasoning to the same degree as human persons, if they are possible. Not recognizing that an AI machine has reached the level of person-hood is the base-line for pretty much every robot-uprising Sci-Fi. 
 
 Extraterrestrials will likely have an easier time proving their person-hood than the machines. This is because they will have likely came from a process much like the one humans did. But, it would not surprise me at all if, on the day the first contact is made, there's a group out there who think that they aren't persons, not worthy of our consideration, because they have built into it the idea that person-hood is exclusively human. This, it would seem, would be mistaken. 
-\input{iwasonceafetus}
-\chapter{Part 22: The Abortion Debate (Pro-Life)}
+\input{iwasonceafetus}\stepcounter{chapcount}
+\chapter{Part \thechapcount: The Abortion Debate (Pro-Life)}
 For this module, thus far, we have been looking at one of the best arguments which can be made on the pro-choice side. This argument goes after the core beliefs of the pro-life side. Namely, that if a fetus is a person, then abortion is murder (and thereby wrong) and that a fetus is in fact a person. The argument does not rely on consequentialist reasoning nor on a woman's bodily rights.
 
 For the sake of fairness, I feel that it's appropriate for us to also look at one of the best arguments from the pro-life side.  This is a purely optional reading as you can complete the assignments without reading it. However, it may serve you well if you ever encounter puzzles like this or if you are on the pro-life side of the debate, this paper will give you a far stronger argument for your stance. The paper is called I Was Once a Fetus: That is Why Abortion is Wrong by Alexander Pruss. His argument does not rely on religious beliefs nor on any notions of person-hood (per se). The argument goes like this:
@@ -315,14 +316,14 @@ For the sake of fairness, I feel that it's appropriate for us to also look at on
     \item[4 ]Therefore, it is wrong to kill anyone while they are a fetus.
 \end{earg}
 The conclusion, the fourth line, makes all cases of abortion morally wrong. It may seem a bit strong, but that is what is argued. We will go through the paper point by point.
-\section{I was once a fetus}
+\section{Part \thechapcount.\theseccount: I was once a fetus}\stepcounter{seccount}
 This is the first line of his argument and it is the most seemingly obvious of the lines. Pruss starts off by asking us a few rhetorical questions (avoid them in philosophy papers, they just lead to confusion if they are not well crafted and obvious). The point of them is to show that at some point in the far past `I' was an embryo, then a fetus, then a neonate, then an infant, then a toddler, a child, an adolescent, and then, finally, an adult. There are several ways in which a person can show that they were once a fetus. Pruss does this in an interesting way, one which I would not have thought to apply to this debate. he uses what we in the philosophy biz call a `continuum', or an indiscrete series. To make these philosophically interesting, you need to have it such that something clearly holds on one side of the spectrum and clearly doesn't hold on the other. These are often called Sorites Paradoxes. `Sorites' is Greek for `heap' or `pile'. These sort of cases are where we get the stereotypical philosophical question ``how many grains of sand does it take to make a heap?" So, imagine that you have a pile of sand, a large pile, something which is clearly a heap of sand. If you take 1 singular grain of sand off of the top, is it still a heap? Clearly and obviously it is. Now, I remove another, and another, and another. All the while, 1 grain of sand doesn't make a difference, all the way down until I have only 1 grain of sand left. This grain of sand is clearly not a heap, but the reasoning shows that it is. For another example, take a spectrum of colors, from blue to red. The far side is clearly blue and the other is clearly red. What if I start at the blue  end and move over, ever so slightly, is it still blue? Yes, yes it is. Now, what if I move over a little more, still blue, a little more, still blue, and so on. In the middle, we will likely find something which we would call `purple', but, by the reasoning, it would still be blue. As we continue, the responses get seemingly more and more absurd, until we are saying that red is blue.   
 
 Any line which we draw in this spectrum, saying that before this point, it's blue and after this point it's red or some other color would, frankly, be unnatural and arbitrary. In a third example, one which was given to me when I learned about this paper in the equivalent of 101 which I took (that course was exclusively epistemology and metaphysics, no ethics), concerns baldness. My professor, at the time, was balding, and was the example person for the entire department for this concept. On one side, you have him when he was young, full head of glorious hair. On the other side you have what he will become, a chrome-dome. Now, where is he now? Somewhere in the middle, is he bald? No, but is he `haired'? No. There's the paradox, something is both bald and not bald. 
 
 Now, at this point, the same sort of reasoning can be used for the developing embryos through pre-birth infants all the way to you reading this in-front of some screen. You, now, are clearly you. You 1 second ago is also clearly you. You 2 seconds ago is also clearly you.\footnote{ I am not sure about the grammar of these two sentences.} We can keep going back, and back, and back, deducting seconds off the clock, until we get to your birth. Before this point, it gets a little more tricky to imagine it. The continuous nature of the transitions are even more evident in this case. We have, now, that at your birth, that's you, and on the opposite side, at conception, we have a zygote, or some such. But this is again, a continuous spectrum. There's no hard-line, no non-arbitrary position where we could, within reason, say that you appeared and the zygote disappeared.  Without such a line, then you are that zygote. So, this first line is pretty obviously true. I was once a fetus.
 
-\section{If I was a fetus, it would have been wrong to kill that fetus}
+\section{Part \thechapcount.\theseccount: If I was a fetus, it would have been wrong to kill that fetus}\stepcounter{seccount}
 
 The last line of the argument showed that I was once a fetus. It is worth noting, and this will come up again later, that I could have used any one of you in place of myself. Now, our job is to show that if I was once a fetus (I was), then it would have been wrong to kill that fetus (me). We need to show that there's a causal connection between me (or you, or anyone) being a fetus and the wrongness of killing that fetus. There are two ways which I would go in trying to show this connection, if I were Pruss. Here's the route which he takes  (along with my connections to previous content in this course) and then there's my personal preferred route. We will start by looking at the route which Pruss takes and then move on to the route which I would take. Both involve an intermediary proof for the stance that it's wrong to kill me now. 
 \subsection{Pruss' way of showing that it's wrong to kill that fetus}
@@ -347,7 +348,7 @@ Pruss' way of getting to the premise relies on the intuition which Nagel uses. T
 \end{enumerate}
 There is a very innocent jump between lines 3 and 4 which can be glossed over. Basically, to make that move, there are some additional, veiled, premises which concern the time I was a fetus and the identity between myself and that fetus. The main point of this argument is that there's no hard line which makes it OK to kill me before a certain point, and wrong to kill me after that point. 
 
-\section{If it was wrong to kill me when I was a fetus, then it was wrong to kill anyone when they were a fetus}
+\section{Part \thechapcount.\theseccount: If it was wrong to kill me when I was a fetus, then it was wrong to kill anyone when they were a fetus}\stepcounter{seccount}
 
 The author's original line used the gendered pronoun which I have replaced, but the point remains the same. Proving this line in a way that makes the entire thing still valid is a bit more difficult than normal. You see, this will appear to be inductive, which is not strong enough for philosophy, but it's not. As I have mentioned a few times in this proof, I am not special. I could have put that you were once a fetus and ran the argument in the same way and I could have put any person in this argument in place of myself and gotten the same result. Since there are no cases where the validity of this argument does not transfer to another, we are safe in making the generalization to all people. Take these two arguments, which are oddly similar:
 
@@ -381,19 +382,19 @@ But, a human person is just a generic stand in, if this reasoning works (and it 
     \item[6] Therefore, abortion is wrong.
 \end{earg}
 With that, we have what is likely the best pro-life argument which you will find. Your typical pro-life argument which we saw earlier relied on an equivocation between `human' and `person'. This one, however, relies on sorites reasoning and, maybe, some intuition about experience. This could, maybe, also be used to make a hole in Warren's reasoning as well. But, that being said, there are some objections to this argument which need to be addressed. It should be noted that Pruss' replies rely on the Nagel intuition which we have seen previously. To reply to these objections without the value of experience being so much would require a different line of thinking than the one which Pruss uses. 
-\section{But I was wanted!}
+\section{Part \thechapcount.\theseccount: But I was wanted!}\stepcounter{seccount}
 
 This is rather cold, I admit, but there may be one important difference between fetus-me and some other fetuses, namely that I was wanted. But, you have to notice that no-where in the arguments for the impermissibility of abortion were the claims that I was wanted. It solely relies on the fact that I am a person and that I was a fetus. There are some cases where the pregnancy and child-rearing will result in undue and heavy burdens on the mother. In these cases, it seems like abortion should be available (according to some). This is not to say that those burdens will always be present in that person’s life, but rather that they would not be removed or be very difficult to remove if she went to term. This sort of reasoning falls in line with one of the popular pro-choice arguments which I have given for Warren, namely the ones which rely on the undue burdens on poor women. 
 \subsection{Pruss' Reply}
 
 It is worth noting that nowhere in the argument was there something about the want of a child, nor was there anything about the life of the child after birth. Even if I wasn’t wanted, there’s still a loss, namely the fact that I would have otherwise had experiences. A person is a person, no matter how small. Morality, often, will force us into situations which we don't want to do, which might not be in line with our self-interest. 
-\section{But I didn't endanger my mommy!}
+\section{Part \thechapcount.\theseccount: But I didn't endanger my mommy!}\stepcounter{seccount}
 
 That was me making a joke of the objection a bit. The point of it is that, as far as I am aware, there were no complications with my birth/time in the womb which added risk to my mother's life, which may make a relevant difference between me and other fetuses. There are some cases where a person must choose between the life of the mother and the life of the child. There are other cases, even more extreme, where the process (not just child-birth) of going to term will kill both. Such as cases of unidentified ectopic pregnancies. These cases make up 10\% the deaths during pregnancy.
 \subsection{Pruss' Reply}
 
 But, you have to notice, that we have to chose between the life of one and another person from time to time, though it is not common. More over, in cases where a fetus is endangering the life of the mother, it does so unintentionally. In cases where it is acceptable to kill a person who is endangering another, it is intentional. So, since it is unintentional, it is not acceptable to kill the fetus. Also, if it comes to a choice between the mother and the child, if we were to apply Nagel’s thoughts, we should choose the child. Namely because the experiences had by the mother up until that point plus those which will be had by the child is greater than the amount had by the mother if she were to continue living. This, however, does not work in cases where the fetus is not able to develop and the process of development will only kill both. For example, extreme cases of ectopic pregnancies. 
-\section{But I was a healthy fetus!}
+\section{Part \thechapcount.\theseccount: But I was a healthy fetus!}\stepcounter{seccount}
 
 This becomes a debate about euthanasia (the killing of a person painlessly when they have some extreme health problem). Killing me as a fetus would have deprived me of a long life, but killing an unhealthy fetus would not have deprived them of much. For example, Peter Singer, who I have used as examples before, is a rather extreme Utilitarian, both in his work as well as in his actions. His charity work and donation practices are top-tier. However, when Singer was directing a bioethics center in Australia (which is a universal healthcare country), he was contacted by doctors concerning their ethical dilemmas. In one case, he was contacted concerning issues in the Neonatal Intensive Care Units, ICUs for newborns.  Many of these newborns had a range of very serious medical conditions which often lead to a very slow and painful death. If the newborns actually did survive, they would need multiple extremely expensive surgeries which would drain the resources from the collective system (it's even worse in a system without universal healthcare) and they would be very disabled in various ways. In the extreme cases of these conditions, the ones which the doctors were contacting Singer about, all people concerned, the  doctors, nurses, and even the parents, believed that the babies should not survive. In these cases, all the newborns could do is experience pain. As a result, many infants were being left in the ICU untreated, with minor adjustments to alleviate the suffering where possible.  This was an very painful experience for all those concerned, on an emotional level and took up resources which would have otherwise been provided to healthy newborns. Almost all cases like these die before they are 6-months old.  Peter Singer advised that the newborns with the extreme cases of this condition be given a quick and painless death. Would it not be better for the parents to have this condition identified early and be able to have an abortion?  
 \subsection{Pruss' Reply}
