--- a/modseven.tex
+++ b/modseven.tex
@@ -2,8 +2,9 @@
 \label{ch.modseven}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 \input{culturalrelativismrachels}
-\chapter{Part 15: What is Moral Relativism?}
-\section{Going Meta}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: What is Moral Relativism?}\setcounter{seccount}{1}
+\section{Part \thechapcount.\theseccount: Going Meta}\stepcounter{seccount}
 
 You might have heard the term ‘meta’ before. For example, when I was in undergrad, I was explaining my Epistemology course to some friends, saying something like “it’s the study of knowledge, we are learning about knowledge”, and one person in the group said “that’s so meta!”. The term ‘meta’ comes from Greek, meaning ‘over’, and has there a similar sense to our prefix ‘trans-’ (as in ‘translate’ or ‘transfer’), which comes from Latin and has the same sense as the Greek. In English, also, there are two senses of ‘over’, the first means ‘across’, like to carry something over to another, and the second means ‘above’, as in to put something above another. ‘Meta-’ and ‘trans-’ differ in the same way. With very few exceptions (‘metaphor’, which comes from the Greek for ‘carry over’), the prefix ‘meta-’ means that you are doing something above, over, the area in question and the prefix ‘trans-’ means that you are doing something across, over, certain boundaries. In the case of `translate', this comes from the Latin verb `transfero', meaning ``I carry over", that verb is also where we get the English verb `transfer'.
 
@@ -51,7 +52,7 @@ The various stances which can be generated once you choose to go meta on a topic
 
 There are different kinds of Relativisms and Objectivisms (the typical subdivisions of Realism) out there, and those tend to be more particular to the field and there may be different kinds of Nihilisms aside from Error Theory and Expressivism, but those go well beyond the scope of this class. Towards the end of this module, I will explain those stances in the Nihilism branch for Meta-Ethics in more detail.
 
-\section{The Start of Moral Relativism}
+\section{Part \thechapcount.\theseccount: The Start of Moral Relativism}\stepcounter{seccount}
 
 Moral Relativism is a part of a family of stances, all of which say that the truth of something, or everything, is relative (generally called \Gls{relativism}). What is relative or to what it is relative all depends on the stance. This sort of idea is found in several areas of philosophy and the notion (applied differently) is found in physics. This, in its broad sense, is the stance that there is no absolute truth (objective truth), but rather the truth about things varies from person to person or from culture to culture, depending on the version of relativism which is held.
 
@@ -64,7 +65,7 @@ Relativism comes in many different flavors. The first is that everything is rela
 }
 
 
-\glspl{moral relativism} is a limited form of relativism. It does come in two flavors, Moral Individual Relativism (what is moral is relative to the doer, and there is no way for another person to say that what they did is/was morally wrong) and Moral Cultural Relativism (what is moral is relative to the culture and there is no way of saying that they are wrong from an outsider's perspective). One can also say that Moral Relativism is the stance that there is no objective basis for claiming that a particular action, or a class of actions is right or wrong, permissible or impermissible. Or, that there is no fact of the matter regarding whether actions are right or wrong. Whether something is, in fact, right or wrong is relative to the culture or to the person. Some classic examples of this are killing babies, cannibalism, and funeral rights.
+\Glspl{moral relativism} is a limited form of relativism. It does come in two flavors, Moral Individual Relativism (what is moral is relative to the doer, and there is no way for another person to say that what they did is/was morally wrong) and Moral Cultural Relativism (what is moral is relative to the culture and there is no way of saying that they are wrong from an outsider's perspective). One can also say that Moral Relativism is the stance that there is no objective basis for claiming that a particular action, or a class of actions is right or wrong, permissible or impermissible. Or, that there is no fact of the matter regarding whether actions are right or wrong. Whether something is, in fact, right or wrong is relative to the culture or to the person. Some classic examples of this are killing babies, cannibalism, and funeral rights.
 
 \newglossaryentry{moral relativism}
 {
@@ -74,7 +75,7 @@ plural=Moral Relativism
 }
 
 
-\section{The Cultural Difference Argument}
+\section{Part \thechapcount.\theseccount: The Cultural Difference Argument}\stepcounter{seccount}
 Often, people argue for moral relativism by pointing to examples, it is often claimed that due to the differences in moral beliefs, there must not be an objective, absolute morality. If you remember from my charts, the moral relativism still holds that there are moral truths, but those truths are relative to the culture. Cultural Moral Relativism is by far the most common stance found in popular culture, so that's the one we will point to, but individual moral relativism has similar problems as well as others unique to it. Here is a classical example used to argue for Cultural Moral Relativism:
 
     \factoidbox{Darius, a king of ancient Persia, was intrigued by the variety of cultures he encountered in his travels. The Callatians (a tribe of Indians) customarily ate the bodies of their dead fathers. The Greeks practiced cremation. Darius thought that an understanding of the world must include an appreciation of such differences. One day, he brought some Greeks who happened to be present and asked them what they would take to eat the bodies of their dead fathers. They were shocked and replied that no amount of money could persuade them to do such a thing. Then Darius called in some Callatians, and while the Greeks listened asked them what they would take to burn their dead fathers' bodies. The Callatians were horrified and told Darius not even to mention such a dreadful thing. The two people had a very similar reaction to the opposite actions.\autocite{Herodotus1}} 
@@ -89,7 +90,7 @@ The lesson from these two stories (the second of which I have seen it used as ex
 
 Many have looked at examples like this and have thought that there must not be an actual objective truth about morality, that it must merely be opinion, either held by a person or collectively as a group. This leads us to:
 
-\section{The Cultural Differences argument}
+\section{Part \thechapcount.\theseccount: The Cultural Differences Argument}\stepcounter{seccount}
 
 These examples, and my not so subtle  hints, point to a very interesting argument. It seems, given how I have framed it, the most socially conscious stance would be one which puts all cultural customs on equal footing, to not have some objective measure which can be used to discriminate against a culture. So, using this observation, we get this argument:
 \noindent
@@ -117,7 +118,7 @@ This argument follows the exact same reasoning as the cultural differences argum
 
 Though the argument may not be any good, all that shows is that the argument isn't good. It does not show that morality is objective. But, if we look at the last example I gave, involving the Kaelons, we see something interesting. If morality is relative to a culture, there's nothing stopping one culture, morally speaking, from oppressing people in their culture and oppressing people in other cultures. For example, if there are no objective moral facts, then there would be nothing wrong with the Kaelons declaring war on another culture for allowing someone to receive asylum. Similarly, there would be nothing wrong with the Kaelons forcing members of their culture to unwillingly commit suicide. This sort of case can be found in history as well, with the sear number of examples being too numerous to list. This is a problem which will appear again later in this class, because it's more obvious inside another argument.  
 
-\section{The Cultural Imperialism Argument}
+\section{Part \thechapcount.\theseccount: The Cultural Imperialism Argument}\stepcounter{seccount}
 
 The Cultural Differences Argument is not the only argument in favor of Cultural Moral Relativism, there are several others. Most fall to the same sort of objections which we will see later, others have problems of their own. The Cultural Imperialism Argument is a little more advanced, claims to prove this sort of relativism, but it, equally, has issues.  Here is the introduction:
 
@@ -127,23 +128,20 @@ Throughout history, we have seen cases of one culture forcing beliefs and moral 
 
 Cultural Imperialism is the reason for these behaviors, why cultures force themselves on others in this way (and sometimes in even more violent ways). Cultural Imperialism is the stance your culture as all of the right answers, morally speaking, your culture is perfect, and because of this, you are justified in forcing other cultures to change (typically to your own). But, looking at the number of examples from history, we can see that this imperialism is wrong, it should not be done. This can be seen both from an insider's and an outsider's perspective. Naturally, this perspective on Imperialism leads easily to Cultural Moral Relativism, because it seems never to be right to judge the values of one culture against the values of another. Put more formally, we get this argument:
 
-\subsubsection{The Cultural Imperialism Argument}
+\subsection{The Cultural Imperialism Argument}
 
-\begin{enumerate}
-    \item Cultural Imperialism is morally wrong. (Intuition).
-    \item This follows from the examples which I have given, many argue that this sort of behavior is wrong and should not be done at all. The main reason for the Prime Directive in Star Trek is because of the base line principle, you need to let cultures' internal matters be internal matters. 
-    \item If Cultural Imperialism is morally wrong, then it is wrong to judge the values of one culture against the values of another. (Consequence of it being wrong)
-    \item This, in turn, is a consequence of the wrongness of Cultural Imperialism (the first line). Basically, if it was OK to make judgments about other cultures' practices, then it would be OK to act on those judgments. Acting on those judgments would be Cultural Imperialism, which we said was wrong.   
-    \item If it is wrong to judge the values of one culture against the values of another, then no person is ever justified in criticizing the moral norms of another culture. (Consequence of the consequence)
-    \item This is a consequence of the wrongness of the judgments about a culture. Criticizing a culture's practices, in either word or action, is wrong by the same reasoning as Cultural Imperialism. The exact reasoning is found in the previous line. 
-    \item If no person is ever justified in criticizing the moral norms of another culture, there are no non-relative moral truths (they are all relative to culture). (Consequence)
-    \item This is the final line of support for the conclusion. If there were an absolute, objective, moral rule, or set of rules, then it would be possible for a person to be correctly justified in criticizing another culture's norms. All they would need to do is point to the objective rules and show that the culture is in violation of them. But, we have shown that a person can never be justified in this way, so, it would seem that there must not be an absolute moral standard (they are relative to the culture).
-    \item Therefore, there are no non-relative moral truths (they are all relative to culture).
-\end{enumerate}
-
+\subsubsection{Cultural Imperialism is morally wrong. (Intuition)}
+This follows from the examples which I have given, many argue that this sort of behavior is wrong and should not be done at all. The main reason for the Prime Directive in Star Trek is because of the base line principle, you need to let cultures' internal matters be internal matters. 
+\subsubsection{If Cultural Imperialism is morally wrong, then it is wrong to judge the values of one culture against the values of another. (Consequence of it being wrong)}
+This, in turn, is a consequence of the wrongness of Cultural Imperialism (the first line). Basically, if it was OK to make judgments about other cultures' practices, then it would be OK to act on those judgments. Acting on those judgments would be Cultural Imperialism, which we said was wrong.   
+\subsubsection{If it is wrong to judge the values of one culture against the values of another, then no person is ever justified in criticizing the moral norms of another culture. (Consequence of the consequence)}
+This is a consequence of the wrongness of the judgments about a culture. Criticizing a culture's practices, in either word or action, is wrong by the same reasoning as Cultural Imperialism. The exact reasoning is found in the previous line. 
+\subsubsection{If no person is ever justified in criticizing the moral norms of another culture, there are no non-relative moral truths (they are all relative to culture). (Consequence)}
+This is the final line of support for the conclusion. If there were an absolute, objective, moral rule, or set of rules, then it would be possible for a person to be correctly justified in criticizing another culture's norms. All they would need to do is point to the objective rules and show that the culture is in violation of them. But, we have shown that a person can never be justified in this way, so, it would seem that there must not be an absolute moral standard (they are relative to the culture).
+\subsubsection{Therefore, there are no non-relative moral truths (they are all relative to culture).}
 Now, despite my build-up and explanation for this, there is a major issue with this argument, both in the way it's constructed (though, technically valid) and the spirit behind it. For example, I can use this argument, exact same premises, to show that unicorns exist, 2+2=5, and anything else I could want. 
 
-\subsubsection{The Problem}
+\subsection{The Problem with the Cultural Imperialism Argument}
 
 As I mentioned above, I can use this argument, not the structure, but the argument itself, to prove that mermaids exist. Any argument with this capability will be valid, but it will not be sound, there will be a factual error in it somewhere. For this one, let's try and work out the factual error, and here it's fairly easy to spot (hint, look at the first line and the last line):
 
@@ -160,7 +158,7 @@ There are a few ways out for the Relativist. First, they could accept that some 
 
 Another way out, which limits Cultural Moral Relativism further, is to say that there's a distinction between internal and external behaviors. Internal behaviors are those which only apply to members of the same culture, while external behaviors are those which involve members of different cultures. Cultural Imperialism is an external behavior. The Relativist here can claim that the morality of internal behaviors is relative while the morality of external behaviors is objective. This has its own issues as well, mostly dealing with cases like the Kaelons which I gave before, and can be easily seen in that case. 
 
-\section{Tests to Tell Whether You are \emph{actually} a Relativist}
+\section{Part \thechapcount.\theseccount: Tests to Tell Whether You are \emph{actually} a Relativist}\stepcounter{seccount}
 These are some tests which you can preform on yourself or on others, or on groups, which will tell you your actual feelings about moral relativism. There are three tests total, sometimes these tests will work individually, sometimes jointly (depending on the case), but they can be very useful. These are based on \emph{Why I am an Objectivist about Ethics (And Why You Are, Too)} 
 by David Enoch\autocite{Enoch1}.
 
@@ -168,7 +166,7 @@ by David Enoch\autocite{Enoch1}.
 
 This is a pretty straight forward test for whether you actually are a moral relativist. But, as a fair warning, philosophy kills jokes. As an example, and where the test gets its name, lets look at the following joke:
 
-    \thoughtex{The Spinach Test}{A kid hates spinach, later, he says that he’s glad he hates spinach. When asked why, he says “because if I liked it, I would eat it; and it’s yucky!”}{Spinach.jpg}
+    \thoughtex{The Spinach Test}{A kid hates spinach, later, he says that he’s glad he hates spinach. When asked why, he says “because if I liked it, I would eat it; and it’s yucky!”}{Spinach.jpg}{A young child refusing to eat his spinach.}
 
 More often than not, we will take this as funny. And, in a lecture format, if I present it right, I will get a laugh. But, the test is not whether or not you laugh at this joke, but rather whether you laugh at jokes of this form/structure, with different things put in the place of `spinach'. For example, let's try it with entertainment and other foods:
 
@@ -238,7 +236,7 @@ For each of these, there should be a yes or no answer, one which you can easily 
 
 The steps to preform this test on yourself are pretty straight forward. First, take a stance about something which you think is true. For example, you can have that slavery is bad, that pineapple on pizza is good, that the Kaelons shouldn't force their elderly to commit suicide, that the Earth is round, or something like that. Next, you imagine a case where the vast majority of people believe the opposite. And, finally, ask yourself whether, in this strange world, you would still be correct.  If the question is phrased correctly (it's possible to phrase them so that you will get, consistently, the opposite answer) and if you get the answer `yes', then the subject matter is objective and if you get the answer `no', then the subject is relative.
 
-\section{Consequences of Taking Moral Relativism Seriously}
+\section{Part \thechapcount.\theseccount: Consequences of Taking Moral Relativism Seriously}\stepcounter{seccount}
 
 So far, we have seen evidence that we don't actually think that moral relativism is correct and we have seen that the arguments for the stance aren't any good (it's possible that there are others, and likely are others, but they will all, likely, fall you the same issues). But, like with the arguments for the existence of God, an objection to the argument doesn't show that it's conclusion is false. There are some true or false things which just can't be proven one way or the other (for example, ``the first digit of TREE(3) is 1" is either true or  false, but due to the size of the number, it's just impossible for us to prove one way or the other). Now, to actually disprove Cultural Moral Relativism we need to attack it head on, not just the supporting evidence. To do this, we will use a method which you might recognize from science (science got it from Philosophy). We will assume that relativism is true and show that it does not line up with the world, or that the consequences of it are so outlandish we can dismiss it easily. There are, at the heart of Moral Relativism, 3 problems which we will address (and more, but 3 is enough). 
 
@@ -312,18 +310,18 @@ This means that not only can't we compare other cultures, but we can't even comp
     \item Therefore, Moral Cultural Relativism is false.
 \end{enumerate}
 The way out for the relativist is to claim that we haven't made progress, in any way. We are no better than we ever were. 
-
-\chapter{Part 16: So, If Moral Relativism is Wrong, What Next?}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: So, If Moral Relativism is Wrong, What Next?}\setcounter{seccount}{1}
 
 If you are willing to say that moral cultural relativism is wrong, and, given the general responses to the various problems with moral relativism as well as what can be expected from the tests, you likely are willing to say that it's wrong, we have some problems. Namely, what is moral? Who decides who's correct in a moral conflict? Where do moral truths come from? Here I will cover some of the basic questions which former relativists tend to give and the general responses (sometimes, the response will need to be more particular).
 
-\section{If culture's don't choose, what is morality?}
+\section{Part \thechapcount.\theseccount: If culture's don't choose, what is morality?}\stepcounter{seccount}
 
 There are a few ways to go about replying to this question. Morality/ethics centers around `should' questions of a certain kind. When we ask questions like these, for example ``what should I do?", ``should you call a doctor?", ``should you get the assignment in on time?",  there are two different senses, which may or may not overlap, depending on context and relevance. Something is moral/ethical when it's the correct answer to the question ``what should I do?", when we aren't talking about practical cases (a practical case is one where you are asking about the correct way to perform some task, like changing the oil on your car). The cultural moral relativist would claim that the correct answer to the question in non-practical cases (for example, should I flip the switch in the trolley problem?) will depend on your culture and the norms associated with it. The moral objectivist, a moral realist who is also a non-relativist, would claim that there's an actual answer to this question, which is not determined by your culture. The next module of this class covers some of the ways which philosophers have answered how to answer that question, without being relativist. Ethics is, at it's core, trying to find the correct answer to this question.
 
 You will notice that when I give examples of cultural norms, most of the time, these are cases where the culture got the answer wrong. Ethical theories are basically hypotheses about the correct way to get the answer to the question. Some theories point to absolute, objective duties which a person has (typically, it's wrong to be irrational; acting in a certain way is irrational, therefore those ways of acting are wrong). Others point to the well-being of those affected (if an action makes the affected better off than otherwise, that's the right action). Others still point to some exemplar of morality, some person who has the perfect character and then asks ``what would that person do?". You may have heard that kind of thinking before with `WWJD'.  
 
-\section{Who decides who's right in moral conflict?}
+\section{Part \thechapcount.\theseccount: Who decides who's right in moral conflict?}\stepcounter{seccount}
 
 A moral conflict is a case where two or more people/groups disagree about the answer to the ``What should I do?" question, in the relevant sense. The moral cultural relativist has a simple way to answer it, almost too simple, ``if it's two groups in the same culture, the cultural norms settles the conflict, if it's two cultures, there's no real conflict." But this just does not seem right, if you recall the last page, were this true, all civil rights movements would wrong, because the cultural norms would settle the conflict in favor of the oppressing group. Very few of us would want this. So, that's out, but is there a non-cultural way to get the answer? This is the quest for the moral realist. It's not going to be based on belief (as the relativist points to).
 
@@ -331,7 +329,7 @@ Recall the Cultural Differences Argument. This argument relies on moral conflict
 
 In short, no one decides who's right in a moral conflict, it's just a fact that one is right and the other is wrong.
 
-\section{Where do moral truths come from?}
+\section{Part \thechapcount.\theseccount: Where do moral truths come from?}\stepcounter{seccount}
 
 Moral truths are the answers to the ``what should I do?" question (in the relevant sense). The moral cultural relativist has a simple, again almost too simple, answer ``from the beliefs of the culture." Yet again, how can we possibly say that a culture has the wrong answer to the question when the culture chooses the answer? Like the issues before, this just can't be right. So, the question for the realist is just that, where do they come from? 
 
@@ -339,13 +337,13 @@ For the realist, this is like asking ``where do scientific truths come from?" or
 
 But, don't lose heart! There's just as much debate about where mathematical and scientific truths come from. For example, in the case of math, we could claim that the truths are necessary, they could not have been otherwise. We could claim, with just as much evidence, that the truths are constructs of the definitions of the terms which we are using overlapping in consistent ways (1+2=3 because of the definitions of the terms and operations). And we could also claim that the truths came from God.  As it turns out, in philosophy, the most common stance (for where mathematical truths come from and where moral truths come from) is that they always were and always will be.
 
-\section{What about forcing them onto another culture?}
+\section{Part \thechapcount.\theseccount: What about forcing them onto another culture?}\stepcounter{seccount}
 
 This is a hard problem, because one of the core intuitions behind the Moral Relativist, and one of the big reasons why the stance is contradictory, is that it’s wrong to force your morals onto another. The Moral Objectivist will claim that under the right circumstances, it’s morally required that you force another to change. To some, this feels wrong. This feeling, often, gets traced back to the horrors of history, which I used as examples for the intuition behind the Cultural Imperialism Argument, where one group imposed themselves on another. At the same point, we need to look at history as a whole. There have been times when it was actually correct for one group to come in and force a change. In those cases, the imposing groups had real morality on their side and in the cases where it was wrong, we can say that they were mistaken about morality. For example, the Nazis in WW2 were just wrong about morality and the groups which came in were right. So, the Moral Objectivist just needs to be sure that their moral theory is getting the right answer in the case. This is an epistemological worry for the objectivist, not an ethical, meta-ethical, or metaphysical one. 
 
 Interestingly, when we look at our own history, we find things which we are ashamed of, things which we condemn the previous generation for. How and when this is correct is easy for us to see. Since different people at different times are, basically, different cultures, the exact same, or a similar, thought process applies when condemning or appreciating the behaviors of another culture. Kwame Appiah in What Will Future Generations Condemn Us For?\autocite{Appiah1} gives us some compelling tests for when future generations will be ashamed of our practices. These same tests apply to the behaviors of other cultures and tell us when it may be OK to force a change. 
 
-\section{Moral Nihilism}
+\section{Part \thechapcount.\theseccount: Moral Nihilism}\stepcounter{seccount}
 
 Moral Relativism and Moral Objectivism (Realism) are not the only meta-ethical stances, there are two others worth noting (though this does go beyond the necessary scope of this class). Like Moral Relativism, these stances deny that there are absolute moral truths. But, unlike Relativism, these theories claim that they aren't relative. They claim that there's no truth to them at all, regardless of context. Theories which do this fall into a category called `Moral Nihilism'. Like Relativism, Nihilism comes as a family and you can pick and choose accordingly. Skepticism is most like Nihilism in how the family tree is organized. 
 
@@ -371,7 +369,7 @@ They are essentially the atheists of ethics. Atheists hold that there are no rel
 
 All error theorists hold that the basic mistake in moral thinking is that it depends on some absolute or objective truth about morality. This truth applies to all of us, regardless of who or what we are. These are what some refer to this as ‘objective morality’ and ‘categorical reasons’.
 
-To get error theory off of the ground, they need to convince us of 2 things. First, morality really does depend on these absolute standards (they would need to come up with the correct moral theory, examples are in Module 8). Second, supposing that it does, they have to show us that at least one of these is false, which would mean that the correct theory to describe morality is fundamentally and irreparably flawed. So, for the Error Theorist to prove themselves, they need to solve all problems in Ethics and then show that the stance which did it couldn't be right. This is quasi-contradictory.
+To get error theory off of the ground, they need to convince us of 2 things. First, morality really does depend on these absolute standards (they would need to come up with the correct moral theory, examples are in Module \ref{ch.modeight}). Second, supposing that it does, they have to show us that at least one of these is false, which would mean that the correct theory to describe morality is fundamentally and irreparably flawed. So, for the Error Theorist to prove themselves, they need to solve all problems in Ethics and then show that the stance which did it couldn't be right. This is quasi-contradictory.
 
 \subsection{Expressivism}
 
