--- a/modsix.tex
+++ b/modsix.tex
@@ -2,7 +2,8 @@
 \label{ch.modsix}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 \input{meditationsonetothree}
-\chapter{Part 12: Ren\'e Descartes, Life, Times, and Meditations}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: Ren\'e Descartes, Life, Times, and Meditations}
 Descartes lived during an intellectually vibrant time. The Scholastics had supplemented Catholic doctrine with a tradition of Aristotle scholarship and early scientists like Galileo and Copernicus had challenged the orthodox views of the Scholastics. Surrounded by conflicting yet seemingly authoritative views on many issues, Descartes wants to find a firm foundation on which certain knowledge can be built and doubts can be put to rest. So he proposes to question any belief he has that could possibly turn out to be false and then to methodically reason from the remaining certain foundation of beliefs with the hope of reconstructing a secure structure of knowledge where the truth of each belief is ultimately guaranteed by careful inferences from his foundation of certain beliefs.
 
 When faith and dogma dominate the intellectual scene, “How do we know?” is something of a forbidden question. Descartes dared to ask this question while the influence of Catholic faith was still quite strong. He was apparently a sincere Catholic believer and he thought his reason based philosophy supported the main tenants of Catholicism. Still he roused the suspicion of religious leaders by granting reason authority in the justification of our beliefs.
@@ -26,18 +27,17 @@ description={The epistemological stance that knowledge is impossible either glob
 
 
 
-Another area where Descartes has been influential is in the philosophy of mind (Module 3). Descartes defends a metaphysical view known as dualism that remains popular among many religious believers. According to this view, the world is made up of two fundamentally different kinds of substance, matter and spirit (or mind). Material stuff occupies space and time and is subject to strictly deterministic laws of nature. But spiritual things, minds, are immaterial, exist eternally and have free will. If dualism reminds you of Plato’s theory of the Forms, this would not be accidental. Descartes thinks his rationalist philosophy validates Catholic doctrine and this in turn was highly influenced by Plato through St. Augustine.
+Another area where Descartes has been influential is in the philosophy of mind (Module \ref{ch.modthree}). Descartes defends a metaphysical view known as dualism that remains popular among many religious believers. According to this view, the world is made up of two fundamentally different kinds of substance, matter and spirit (or mind). Material stuff occupies space and time and is subject to strictly deterministic laws of nature. But spiritual things, minds, are immaterial, exist eternally and have free will. If dualism reminds you of Plato’s theory of the Forms, this would not be accidental. Descartes thinks his rationalist philosophy validates Catholic doctrine and this in turn was highly influenced by Plato through St. Augustine.
 
 The intractable problem for Descartes’ dualism is that if mind and matter are so different in nature, then it is hard to see how they could interact at all. And yet when I look out the window, an image of trees and sky affects my mind. When I will to go for a walk, my material body does so under the influence of my mind. This problem of mind body interaction was famously and forcefully raised by one of the all too rare female philosophers of the time, princess Elizabeth of Bohemia.
 
 Previously, we explored the philosophy of mind which was  launched in the wake of problems for substance dualism and because of the advancements there, Descartes' fruitful failure lead to neuroscience, cognitive psychology and information science. We also see how undeserved philosophy’s reputation for failing to answer its questions is. While many distinctively philosophical issues concerning the mind remain, the credit for progress will go largely to the newly minted science of mind. The history of philosophy nicely illustrates how parenthood can be such worthwhile but thankless work. As soon as you produce something of real value, it takes credit for 
 
-The final big issue that Descartes brought enduring attention to is the problem of free will (Module 4). We all have the subjective sense that when we choose something we have acted freely or autonomously. We think that we made a choice and we could have made a different choice. The matter was entirely up to us and independent of outside considerations. Advertisers count on us taking complete credit and responsibility for our choices even as they very effectively go about influencing our choices. Is this freedom we have a subjective sense of genuine or illusory? How could we live in a world of causes and effects and yet will and act independent of these? And what are the ramifications for personal responsibility? This is difficult nettle of problems that continues to interest contemporary philosophers.
+The final big issue that Descartes brought enduring attention to is the problem of free will (Module \ref{ch.modFour}). We all have the subjective sense that when we choose something we have acted freely or autonomously. We think that we made a choice and we could have made a different choice. The matter was entirely up to us and independent of outside considerations. Advertisers count on us taking complete credit and responsibility for our choices even as they very effectively go about influencing our choices. Is this freedom we have a subjective sense of genuine or illusory? How could we live in a world of causes and effects and yet will and act independent of these? And what are the ramifications for personal responsibility? This is difficult nettle of problems that continues to interest contemporary philosophers.
 
 Descartes’ is also a scientific revolution figure. He flourished after Galileo and Copernicus and just a generation before Newton. The idea of the physical world operating like a clockwork mechanism according to strict physical laws is coming into vogue. Determinism is the view that all physical events are fully determined by prior causal factors in accordance with strict mechanistic natural laws. Part of Descartes’ motivation for taking mind and matter to be fundamentally different substances is to grant the pervasive presence of causation in the material realm while preserving a place for free will in the realm of mind or spirit. This compromise ultimately doesn’t work out so well. If every event in the material realm is causally determined by prior events and the laws of nature, this would include the motions of our physical bodies. But if these are causally determined, then there doesn’t appear to be any entering wedge for our mental free will to have any influence over out bodily movements.
-
-\chapter{Part 13: An Overview of Descartes' Meditations on First Philosophy}
-
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: An Overview of Descartes' Meditations on First Philosophy}\setcounter{seccount}{1}
 \Gls{epistemology} (from the Greek word $\eta\pi\iota\sigma\tau\eta\mu\eta$ (epist\-em\-e) meaning ‘knowledge’) is a branch of philosophy which deals with knowledge and belief. Some of the questions which are found there are:
 \begin{enumerate}
     \item What does it take to know something?
@@ -51,7 +51,7 @@ Descartes’ is also a scientific revolution figure. He flourished after Galileo
 Despite what others may tell you, and I have debated this on many occasions, Descartes' Meditations concern epistemology, not metaphysics. So, Descartes' project in his meditations is to carry out a rational reconstruction of knowledge. Descartes is living during an intellectually vibrant time and he is troubled by the lack of certainty. With the Protestant Reformation challenging the doctrines of the Catholic Church and scientific thinkers like Galileo and Copernicus applying the empirical methods Aristotle recommends to the end of challenging the scientific views handed down from Aristotle, the credibility of authority has being challenged on multiple fronts. So Descartes sets out to determine what can be known with certainty without relying on any authority and then to see what knowledge can be securely justified based on that foundation.
 
 The meditations are broken up into 6 parts and each serves a different purpose. I encourage you to read all 6, but the first 2 are enough for this module.
-\section{The First Meditation}
+\section{Part \thechapcount.\theseccount: The First Meditation}\stepcounter{seccount}
 Below is the first small section of this meditation, written in more plan language. The point of these meditations is to break down everything, doubt everything, until we can find something which can’t be doubted and use that as the basis for building up a 100\% guaranteed true set of beliefs/knowledge. The first meditation concerns what can be doubted.
 
 \factoidbox{Several years ago, I came to the opinion that many of the things which I believed were true, were, in fact, false; and when that happened, I thought that I should do the job of trying to rid myself of these false opinions in order to get an indubitable structure for knowledge (science). But I waited until I was older and wiser so that I could have very little doubt in my abilities. On this account, I have delayed so long that it would be wrong to keep thinking on it and I should just put pen to paper. Today, then, since I don’t have anything which I need to do because I am retired, I will at length apply myself earnestly and freely to the general doubting of all my former opinions.}
@@ -92,7 +92,7 @@ He believes that there is an all good God, but how could this fit with being mis
 Here we have the Evil Demon, which is the thought experiment strong enough to discredit all knowledge gained from the senses. This thought experiment is the basis for many books, movies, and shows.\footnote{Some examples include: The Matrix (1999), The Truman Show (1998), The Lego Movie (2014), Sword Art Online (2012-present), Inception (2010), Pan’s Labyrinth (2006), The Village (2004), Dark City (1998), The Signal (2014), Shutter Island (2010), and The Island (2005).} In plain language, his introduction of this case goes like this:
  
 \factoidbox{I will suppose that some Evil Demon has employed all of their power to deceive me. All of my senses and the things which I learned from them are nothing more than either illusions or are the product of the Demon’s deceptions. I will consider myself as without  a body or anything external to the mind, as they are, too, illusions by the Demon. But this this is a really hard job, and difficult to maintain; so I tend to fall back into thinking that the external world is indubitable when I leave my armchair. This tendency does not mean that they are, in fact, indubitable, but rather, that we have a built in bias.}
-\section{Descartes' Second Meditation}
+\section{Part \thechapcount.\theseccount: Descartes' Second Meditation}\stepcounter{seccount}
 
 
 \factoidbox{The last meditation left me with no knowledge at all, everything could be doubted, and I have a hard time forgetting this. Also, I don’t see a way out of the situation, it is like I have been plunged in deep water and can’t find my way up or down. Despite this, I will forge on, treating everything with the slightest doubt of its truth as if it were false. I will continue to do this until I have found something which I know for certain or, at the very least, that I know for certain that nothing else is know for certain. For Archimedes to move the world from one place to another only demanded a  firm and immovable point. In the same way, if I can find one thing which is indubitable, then I can have great hopes for this project.}
@@ -122,10 +122,10 @@ Even an evil deceiver could not deceive Descartes about his belief that he think
 
 The problem Descartes faces at this point is how to justify his beliefs about the external world based on the very narrow foundation of his indubitable beliefs about the contents of his own mind. And this brings us to one of the more famous arguments in philosophy: Descartes’ “Cogito Ergo Sum” or “I think, therefore I exist.” Descartes argues that if he knows with certainty that he thinks, then he can know with certainty that he exists as a thinking being. Many philosophers since then have worried about the validity of this inference. Perhaps all we are entitled to infer is that there is thinking going on and we move beyond our indubitable foundation when we attribute that thinking to an existing subject (the “I” in “I exist”). There are issues to explore here too. 
 
-\section{Descartes' Third Meditation}
+\section{Part \thechapcount.\theseccount: Descartes' Third Meditation}\stepcounter{seccount}
 At this point, Descartes only has two justified beliefs. One is about his thoughts (the content of his mind) and the other is about his own existence (I think therefore I am). At the moment, he doesn't have any knowledge, or at least justified beliefs about anything outside of his mind. For example, he can't say ``I know I have hands" or ``I know there's a piece of paper in front of me."
 
-Also, Descartes doesn't have any information about truths we know through reason alone, like 2+2=4 or other things like that. Those just don't have the justification yet. To get some basis to justify that stuff, Descartes sets out to prove that God exists and is not like his evil demon. Once the evil deceiver hypothesis is taken out because of God, facts we get from reason and perhaps those from our senses could get the justification to be knowable. However, not just any argument for the existence of God and that God's all-good will do the trick (we will be looking into a lot of different arguments for the existence of God in Module 5). The trick for Descartes’ project of a rational reconstruction of knowledge is to prove the existence of a good God by reasoning using only those beliefs that he has identified as indubitable and foundational.
+Also, Descartes doesn't have any information about truths we know through reason alone, like 2+2=4 or other things like that. Those just don't have the justification yet. To get some basis to justify that stuff, Descartes sets out to prove that God exists and is not like his evil demon. Once the evil deceiver hypothesis is taken out because of God, facts we get from reason and perhaps those from our senses could get the justification to be knowable. However, not just any argument for the existence of God and that God's all-good will do the trick (we will be looking into a lot of different arguments for the existence of God in Module \ref{ch.modfive}). The trick for Descartes’ project of a rational reconstruction of knowledge is to prove the existence of a good God by reasoning using only those beliefs that he has identified as indubitable and foundational.
 
 Descartes argument for the existence of a good God goes roughly as follows:
 \begin{enumerate}
@@ -146,8 +146,8 @@ It doesn't seem all that rare for less prefect things to make more perfect thing
 In any case, whether the second premise can be explained and defended at all, the fatal flaw for Descartes’ project is that it is not foundational. It is not an indubitable belief about the contents of Descartes’ own mind, but rather a substantive belief about how things are beyond the bounds of Descartes’ own mind. So Descartes’ attempt to provide a rational justification for a substantive body of knowledge leaves us with an enduring skeptical problem. All we have immediate intellectual access to is the contents of our own minds. How can we ever have knowledge of anything beyond the contents of our own mind based on this? This is the problem of Cartesian skepticism.
 
 Having diagnosed the fatal flaw in Descartes’ project, we should briefly consider how his rational reconstruction of knowledge was to go from there. Given knowledge of God’s existence and good nature, we would appeal to this to assure the reliability of knowledge had through reason and later also through the senses. God being the most perfect and good being would rule out the possibility of interference by an evil deceiver. We might still make mistakes in reasoning or be misinformed by the senses. But this would be due to our failure to use these faculties correctly. A good God, however, would not equip us with faculties that could not be trusted to justify our beliefs if used properly. This is a very cursory summary of the later stages of Descartes’ attempted rational reconstruction of knowledge in his Meditations. But it will suffice for our purposes.
-
-\chapter{Part 14: Knowledge and Justification}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: Knowledge and Justification}\setcounter{seccount}{1}
 
 In the previous section of this module, we were discussing Ren\'e Descartes and his quest for certainty and knowledge. He did this by employing a form of methedological skepticism, doubt everything which can be doubted. In philosophy, \gls{knowledge}, as we are going to use it, is justified true belief. This allows us to make a nice little equation:\footnote{This equation will appear later.}
 
@@ -161,17 +161,17 @@ Knowledge is True Justified Belief
 Different stances in Epistemology regarding knowledge can be reduced to different ways of adding variables to this equation or even removing them. Some might claim that one can know something without believing it, others might claim that knowledge just is belief, and so on. The different stances in Epistemology can also be characterized by what they take each of these terms to mean (with the exception of knowledge). 
 
 Justification for knowledge is different than other forms for justification which you might encounter (and even then there is some debate about the nature of that justification). In ordinary life, you are entitled to your medical records, which means that you are justified in asking for them. This kind of justification is related to, but not the same as, the kind of justification which we have for knowledge. Epistemic justification is the kind found when it comes to knowledge. This is background reasoning which supports the belief. A belief is epistemically justified if we have sufficiently good reason to think that the belief is true. 
-\section{Why justification is important}
+\section{Part \thechapcount.\theseccount: Why justification is important}\stepcounter{seccount}
 
 Some might try to answer the question ``what is knowledge?'' with a relatively simple answer ``you know it if you are correct.'' Using the equation from before, this stance could be characterized as K=T\footnote{if it's true then you know it}, K=B\footnote{knowledge is belief, there is no difference.}, or  K=TB\footnote{if it's true and you believe it, then you know it.} All three of these have a problem with getting lucky, where you guess and it turn out you were right. As an example, take this case:
 
 \factoidbox{Recently, my little brother and I were binging the show Dragon Ball Z. My little brother came to me with a theory about the time travel based plots in the show.  As an expert on theories of time travel, I thought this was great. He came up with the idea that there had to be four different timelines, given what he had seen thus far. Explaining that there had to be two different versions of the same character and so forth. As it turns out, he was correct, there did need to be two different versions of that character and there needed to be 4 timelines, but for completely different reasons than the ones he laid out. He later said that it didn't feel like he was correct, something was missing.}
 
-I quickly recognized what was missing: adequate \gls{justification}. The structure of his reasoning, though it lead to the correct answer, wasn't accurate. As a result, merely being correct is not enough for us to claim that we knew it. At the same time, merely having reasons to think that the belief is true is not enough to say that you knew it. Here is a, relatively, classic example of justification going astray. There have been various thought experiments which follow this line of thought, but I will go with the one which is earliest, as far as I am aware, from Alexius Meinong: 
+I quickly recognized what was missing: adequate \gls{justification}. The structure of his reasoning, though it lead to the correct answer, wasn't accurate. As a result, merely being correct is not enough for us to claim that we knew it. At the same time, merely having reasons to think that the belief is true is not enough to say that you knew it. You don't need to think very hard to come up with examples where a person's reasoning was flawed and that lead them to think they knew when they did not. In Philosophy, there is a long history of problems about justification called Gettier Problems, after the author of the most famous paper on this topic, Edmund Gettier.\footnote{This paper was so successful that Edmund Gettier did not feel the need to write another, this is his one and only paper. \autocite{Gettier1}} Here is a slight re-imagining of one of the thought experiments which likely inspired Gettier from the Austrian philosopher Alexius Meinong: 
 
-\thoughtex{The Park Violinist}{Imagine that you live near a park and most days at noon, a violinist plays. You can hear the beautiful music from your dinning room and, it seems right to say that if you hear the music, then you know that the violinist is playing. However, one day, because you, unknowingly, drank some bad tea, at noon, you go temporarily deaf and have an auditory hallucination of a violin playing. While it is true that the violinist is out there and you hear the music, does it follow that you know the violinist is out there?}{parkviolinist.jpg}
+\thoughtex{The Park Violinist}{Imagine that you live near a park and most days at noon, a violinist plays. You can hear the beautiful music from your dinning room and, it seems right to say that if you hear the music, then you know that the violinist is playing. However, one day, because you, unknowingly, drank some bad tea, at noon, you go temporarily deaf and have an auditory hallucination of a violin playing. While it is true that the violinist is out there and you hear the music, does it follow that you know the violinist is out there?}{parkviolinist.jpg}{A man playing the violin inside of a park.}
 
-For cases like these, most people would say that, though you were right, you don't know that the violinist is playing. The reason, as before, is that there was something wrong with the justification. 
+For cases like these, most people would say that, though you were right, you don't know that the violinist is playing. The reason, as before, is that there was something wrong with the justification.\footnote{For a comprehensive history of these Gettier Problems, see Roderick Chisholm's Theory of Knowledge, Third Edition (it must be the third, the earlier editions lacked this content). The Park Violinist case I give above is based on Meinong's case involving an Aeolian harp, which is presented there. \autocite[p. 91-99]{Chisholm1}} 
 
 It should be noted that 100\% certainty, no chance of being wrong, is not necessarily required for justification. For example, in a real world case, you can know that your sink isn't leaking without being in the room with the sink. There is a chance you are wrong, given your evidence. Justification can come in degrees and the more justified a belief is, then the more likely it is to be accurate/true. In the violinist example, experience and prior evidence certainly gives ample justification for knowledge in most cases, but you would have had the same evidence if the violinist had been sick and unable to play. This is why good critical thinkers question, doubt, or even reject beliefs if they lack adequate justification.
 
@@ -198,10 +198,10 @@ Justification for knowledge is always how your beliefs relate to each other. You
 
 For this, we see that my beliefs form a pyramid, or tower, like structure, which leads us right into the first theory of justification, Foundationalism, which is what Descartes used in the Meditations.
 
-\section{Foundationalism}
+\section{Part \thechapcount.\theseccount: Foundationalism}\stepcounter{seccount}
 Much of the debate in Epistemology, as I mentioned, centers around justification. There are three dominate theories of justification which we will cover. Doing a little introspection should make it clear that some beliefs are built upon others. One belief is justified by another belief. For a particularly strange example, take this case: 
 
-\thoughtex{Cube Earth}{I believe that the Earth is actually a cube. It is not spherical but it is also not flat. I believe this because I think that the middle of two extremes is the most  likely to be accurate. I also believe that there are two extreme stances in the debate over the shape of the Earth. One side claims that the Earth is spherical while the other side claims that the Earth is a flat disk. The two beliefs about the extreme stances with the general belief about the accuracy of a middle ground leads me to the conclusion that the Earth must be a cube.}{CubeEarth.jpg} 
+\thoughtex{Cube Earth}{I believe that the Earth is actually a cube. It is not spherical but it is also not flat. I believe this because I think that the middle of two extremes is the most  likely to be accurate. I also believe that there are two extreme stances in the debate over the shape of the Earth. One side claims that the Earth is spherical while the other side claims that the Earth is a flat disk. The two beliefs about the extreme stances with the general belief about the accuracy of a middle ground leads me to the conclusion that the Earth must be a cube.}{CubeEarth.jpg}{The Earth in the shape of a cube rather than a sphere.}
 
 You might notice that this reasoning is much like an argument which we have seen previously. I have given reasons and some general principles to connect them. Laid out this way, we can diagnose what went wrong with the justification. It is correct that there are two extremes in the debate over the shape of the Earth and their descriptions are, roughly, accurate. The issue lies in the principle which links them together. The middle of two extremes is not always the most accurate. This causes us to come to the wrong conclusion. The debate about justification is how the beliefs either need to relate to each other or the sort of cement used to link them together.
 
@@ -228,7 +228,7 @@ description={The stance in Epistemology concerning justification which states th
 }
 
 
-\section{Infnite Regress Theory}
+\section{Part \thechapcount.\theseccount: Infnite Regress Theory}\stepcounter{seccount}
 
 The \glspl{infinite regress theory} of justification points the finger at the foundational beliefs. For a belief to count as knowledge, according to the foundationalist, need to be built up from basic, foundations, which are self-evident. Those beliefs don't require any further justification. This theory claims that all beliefs need to be justified. It agrees with foundationalism that beliefs can't directly or indirectly support themselves, but it claims that foundational beliefs can't lead to knowledge. For a belief to count as knowledge, according to this theory, it must be justified by some other beliefs, which in turn need to be further justified by others, and those need to be justified by still others, and so on. For you to know something, there would need to be an infinite string of justifying beliefs, never making a circle, which support it. Such an account of justification makes knowledge, frankly, impossible.
 
@@ -242,11 +242,11 @@ plural=Infinite Regress Theory
 
 Some of you might have heard the phrase `it's turtles all the way down', which has a humorous story behind it.  This story has changed and mutated quite a bit with time, but it gets the general idea:
 
-    \thoughtex{Turtles All The Way Down}{Long ago, a philosopher was giving a lecture to the public. In it, they mention the structure of the solar system and the planets. Afterwards, an older lady comes up to the philosopher and says ``your theory that the sun is at the center and the Earth is a ball is very convincing, but I have a better one." Amused, the philosopher asks about it and she replies ``we live on the crust of the Earth which rests on a turtle's back." Instead of demolishing her stance with evidence, the philosopher chose to follow Socrates and ask follow-up questions, ``if that is correct, ma'am, then what does the turtle stand on?" Equally amused, the lady replied ``the first turtle stands on the back of a second turtle." ``But," replied the philosopher, ``what does the second turtle stand on?" She then said ``why, the back of yet another, bigger turtle, it's no use, Mister, it's turtles all the way down."}{TurtlesDown.jpg}
+    \thoughtex{Turtles All The Way Down}{Long ago, a philosopher was giving a lecture to the public. In it, they mention the structure of the solar system and the planets. Afterwards, an older lady comes up to the philosopher and says ``your theory that the sun is at the center and the Earth is a ball is very convincing, but I have a better one." Amused, the philosopher asks about it and she replies ``we live on the crust of the Earth which rests on a turtle's back." Instead of demolishing her stance with evidence, the philosopher chose to follow Socrates and ask follow-up questions, ``if that is correct, ma'am, then what does the turtle stand on?" Equally amused, the lady replied ``the first turtle stands on the back of a second turtle." ``But," replied the philosopher, ``what does the second turtle stand on?" She then said ``why, the back of yet another, bigger turtle, it's no use, Mister, it's turtles all the way down."}{TurtlesDown.jpg}{A tower of turtles without a bottom and a flat Earth is on top.}
 
 Infinite Regress Theory follows a very similar line of thought. Rather than their being foundational beliefs, in order to have knowledge, there must be beliefs all the way down.  However, having an infinite chain of knowledge doesn't, on its own, give us knowledge. For example, suppose that there's at least 0 soda cans on my desk. Here is a chain of beliefs; if there's at least 2 soda cans on my desk, then there's at least 1; if there are 3 soda cans on my desk then there are at least 2; if there are 4... Continuing for all numbers. None of these beliefs are really justified,  the chain will never reach back to reality and justify my claim that there's no soda cans on my desk. This also means that, if this theory is correct, knowledge is impossible and Global Skepticism is the way to go. 
 
-\section{Coherentism}
+\section{Part \thechapcount.\theseccount: Coherentism}\stepcounter{seccount}
 
 Building off of the previous two, Foundationalism claims that there are bedrock beliefs which don't require further justification, knowledge is justified on the basis of other beliefs (aside from the foundational ones), and beliefs can't directly or indirectly justify themselves to count as knowledge. Infinite Regress Theory claims that there are no foundational beliefs, knowledge must be justified on the basis of further more basic beliefs, and beliefs can't directly or indirectly justify themselves.  \Gls{coherentism} is like Infinite Regress Theory in that it claims that there are no foundational beliefs in the structure of knowledge, but it rejects that beliefs can't indirectly justify themselves. Beliefs are justified in how they cohere or fit together. Several philosophers have called the structure involved in this justification a ``web of belief''\autocite{Quine1} and this is an apt picture to keep in mind when thinking about this structure of justification. In a spider web, every strand is connected, any where you start on the strand, you can follow the strands to any other one. But, it is not enough that the beliefs are all interconnected to be justfied. One could come up with radically strange reasons to move from ``green is a color'' to ``the Earth is flat'' but it doesn't follow that the person is justified in claiming that the Earth is flat.  
 
@@ -272,7 +272,7 @@ description={The stance in Epistemology concerning justificaton that all beliefs
 }
 
 
-\section{Native American Epistemologies}
+\section{Part \thechapcount.\theseccount: Native American Epistemologies}\stepcounter{seccount}
 By ``Native American Epistemologies'', I am referring to the systems of justification and knowledge used by the peoples indigenous to what is today the continental United States. The peoples, cultures, and epistemological systems native to the Americas (North and South) are very diverse, with each having subtle differences from their neighbors and those differences become greater the greater the distances between them. It pays, therefore, to be mindful that this is a cursory overview of the common features had by some of the peoples in a relatively small section of the Americas as a whole.\footnote{There are also the Epistemological systems used by the peoples native to Mesoamerica and various regions across South America. These systems may or may not have all or some of these common features.}  
 
 All cultures, the world over, can have their requirements for knowledge be characterized, roughly, as `True Justified Belief'. In fact, we can make this into a nice little equation, like so:
