--- a/preface.tex
+++ b/preface.tex
@@ -1,4 +1,4 @@
-\chapter{Preface: Why Study Philosophy?}
+\chapter*{Preface: Why Study Philosophy?}
 Philosophy, put lightly, is thinking really hard about something. It is not just your world view or that of another, but it is also the mother of all other subjects. At its core, philosophy is critical thinking taken to a ridiculous extreme (you will read this again later on). The most famous for this is Socrates. Although philosophy has taken this system of reasoning to a formal extreme, in our day to day lives, we think and argue with each other using a less formal, but very similar system. Philosophers ask themselves and others perplexing questions which they want the answer to. 
 
 There was a time, long ago, when all subjects were a branch of philosophy, stemming from very basic questions and seeking the answers to them. As time went on, philosophy splintered into various fields which we know today, taking on different standards for evidence and reasoning. Philosophy, as it is today, retains the highest standard for reasoning and argumentation for the stances. But, though the alternative standards, like those found in science, are practically valuable, they can't answer certain kinds of questions, which is where philosophy remains alive and well.  
