--- a/statusofabortion.tex
+++ b/statusofabortion.tex
@@ -1,4 +1,8 @@
-\chapter{The Moral and Legal Status of Abortion by Mary Warren}\autocite{Warren1}
+\chapter{On The Moral and Legal Status of Abortion by Mary Warren}\autocite{Warren1}
+\label{statusabortion}
+\newcounter{fe}
+\setcounter{fe}{\thefootnote}
+\setcounter{footnote}{0}
 We will be concerned with both the moral status of
 abortion, which for our purposes we may define as the act
 that a woman performs in voluntarily terminating, or
@@ -18,7 +22,7 @@ sort of entity to which it is proper to ascribe full moral
 rights.}
 
 Of course, while some philosophers would deny the
-possibility of any such proof,\footnote{For example. Roger Wertheimer, who in "Understanding the
+possibility of any such proof,\footnote{For example. Roger Wertheimer, who in ``Understanding the
 Abortion Argument" (Philosophy and Public Affairs I:1) argues
 that the problem of the moral status of abortion is insoluble, in
 that the dispute over the status of the fetus is not a question of
@@ -57,11 +61,73 @@ unclear that I have any moral right to expel an innocent
 person from my property when I know that doing so will
 result in his death.
 
-John Noonan is correct in saying that “the fundamental
+Furthermore, it is probably inappropriate to describe a woman's
+body as her property, since it seems natural to hold that a person is
+something distinct from her property, but not from her body. Even
+those who would object to the identification of a person with his
+body, or with the conjunction of his body and his mind, must admit
+that it would be very odd to describe, say, breaking a leg, as damaging one's property, and much more appropriate to describe it as in
+juring oneself. Thus it is probably a mistake to argue that the right
+to obtain an abortion is in any way derived from the right to own
+and regulate property.
+
+But however we wish to construe the right to abortion, we can
+not hope to convince those who consider abortion a form of murder
+of the existence of any such right unless we are able to produce a
+clear and convincing refutation of the traditional antiabortion argument, and this has not, to my knowledge, been done. With respect
+to the two most vital issues which that argument involves, i.e., the
+humanity of the fetus and its implication for the moral status of abortion, confusion prevailed on both sides of the dispute.
+
+Thus, both proabortionists and antiabortionists have tended to abstract the question of whether abortion is wrong to that of whether
+it is wrong to destroy a fetus, just as though the rights of another
+person were not necessarily involved. This mistaken abstraction has
+led to the almost universal assumption that if a fetus is a human
+being, with a right to life, then it follows immediately that abortion
+is wrong (except perhaps when necessary to save the woman's life),
+and that it ought to be prohibited. It has also been generally as
+sumed that unless the question about the status of the fetus is an
+swered, the moral status of abortion cannot possibly be determined.
+
+Two recent papers, one by B. A. Brody,\autocite{Brody1} and one by Judith
+Thomson,\autocite{Thomson1} have attempted to settle the question of whether abor
+tion ought to be prohibited apart from the question of whether or
+not the fetus is human. Brody examines the possibility that the fol
+lowing two statements are compatible: (1) that abortion is the tak
+ing of innocent human life, and therefore wrong; and (2) that
+nevertheless it ought not to be prohibited by law, at least under the
+present circumstances.\footnote{ I have abbreviated these statements somewhat, but not in a way
+which affects the argument.} Not surprisingly, Brody finds it impossible
+to reconcile these two statements, since, as he rightly argues, none of
+the unfortunate side effects of the prohibition of abortion is bad
+enough to justify legalizing the wrongful taking of human life. He
+is mistaken, however, in concluding that the incompatibility of
+(1) and (2), in itself, shows that "the legal problem about abor
+tion cannot be resolved independently of the status of the fetus
+problem."\autocite[p. 369]{Brody1}
+
+What Brody fails to realize is that ( 1 ) embodies the questionable
+assumption that if a fetus is a human being, then of course abortion
+is morally wrong, and that an attack on this assumption is more
+promising, as a way of reconciling the humanity of the fetus with
+the claim that laws prohibiting abortion are unjustified, than is an
+attack on the assumption that if abortion is the wrongful killing of
+innocent human beings then it ought to be prohibited. He thus
+overlooks the possibility that a fetus may have a right to life and
+abortion still be morally permissible, in that the right of a woman
+to terminate an unwanted pregnancy might override the right of the
+fetus to be kept alive. The immorality of abortion is no more demon
+strated by the humanity of the fetus, in itself, than the immorality
+of killing in self-defense is demonstrated by the fact that the assailant is a human being. Neither is it demonstrated by the innocence
+of the fetus, since there may be situations in which the killing of
+innocent human beings is justified.
+
+It is perhaps not surprising that Brody fails to spot this assump
+tion, since it has been accepted with little or no argument by nearly
+everyone who has written on the morality of abortion.John Noonan is correct in saying that ``the fundamental
 question in the long history of abortion is, How do you
-determine the humanity of a being?”. \autocite{Noonan1} He summarizes his
+determine the humanity of a being?”. \autocite[p. 125]{Noonan1} He summarizes his
 own antiabortion argument, which is a version of the
-official position of the Catholic Church, as follows:\autocite{Noonan2}
+official position of the Catholic Church, as follows:\autocite[p. 134]{Noonan2}
 \factoidbox{... it is wrong to kill humans, however poor, weak,
 defenseless, and lacking in opportunity to develop
 their potential they may he. It is therefore morally
@@ -142,7 +208,7 @@ since, whatever the rights of potential people may be, they
 are invariably overridden in any conflict with the moral
 rights of actual people.
 
-\section{Part I}
+\section{I}
 
 We turn now to Professor Thomson’s case for the claim
 that even if a fetus has full moral rights, abortion is still
@@ -194,6 +260,18 @@ raped, has done nothing which obligates her to make the
 enormous sacrifice which is necessary to preserve the
 conceptus.
 
+Thomson concludes that, if this analogy is an apt one, then we
+can grant the antiabortionist his claim that a fetus is a human being,
+and still hold that it is at least sometimes the case that a pregnant
+woman has the right to refuse to be a Good Samaritan towards the
+fetus, i.e., to obtain an abortion. For there is a great gap between the claim that has a right to life, and the claim that y is obligated
+to do whatever is necessary to keep alive, let alone that he ought
+to be forced to do so. It is y's duty to keep alive only if he has
+somehow contracted a \emph{special} obligation to do so; and a woman who
+is unwillingly pregnant, e.g., who was raped, has done nothing
+which obligates her to make the enormous sacrifice which is necessary
+to preserve the conceptus.
+
 This argument is initially quite plausible, and in the
 extreme case of pregnancy due to rape, it is probably
 conclusive. Difficulties arise, however, when we try to
@@ -204,10 +282,10 @@ argument that it does not enable us to conclude that
 abortion is always permissible. It would, she says, be
 “indecent” for a woman in seventh month to obtain an
 abortion just to avoid having to postpone a trip to Europe.
-On the other hand, her argument enables us to see that “a
+On the other hand, her argument enables us to see that ``a
 sick and desperately frightened schoolgirl pregnant due to
 rape may of course choose abortion, and that any law
-which rules this out is an insane law” (p. 65). So far, so
+which rules this out is an insane law”.\autocite[p. 65]{Thomson1} So far, so
 good, but what are we to say about the woman who
 becomes pregnant not through rape but as a result of her
 own carelessness, or because of contraceptive failure, or
@@ -359,7 +437,7 @@ claims, and showing how they demonstrate the moral
 innocuousness of abortion, since this apparently has not
 been adequately done before.
 
-\section{Part II}
+\section{II}
 
 The question which we must answer in order to produce a
 satisfactory solution to the problem of the moral status of
@@ -376,11 +454,11 @@ not consider, namely, What reason is there for identifying
 the moral community with the set of all human beings, in
 whatever way we have chosen to define that term?
 
-\subsection{1. On the Definition of “Human”}
+\subsection{1. On the Definition of `Human'}
 
 One reason why this vital second question is so frequently
 overlooked in the debate over the moral status of abortion
-is that the term “human” has two distinct, but not often
+is that the term ``human” has two distinct, but not often
 distinguished, senses. This fact results in a slide of
 meaning, which serves to conceal the fallaciousness of the
 traditional argument that since (1) it is wrong to kill
@@ -397,22 +475,22 @@ innocent human beings is in need of many other modifications,
 e.g., that it may he permissible to do so to save a greater number
 of other innocent human beings, but we may safely ignore these
 complications here.} and avoids
-begging the question about abortion, only if “human
-being” is used to mean something like “a full-fledged
+begging the question about abortion, only if ``human
+being” is used to mean something like ``a full-fledged
 member of the moral community.” (It may or may not
 also be meant to refer exclusively to members of the
-species Homo sapiens.) We may call this the moral sense
-of “human.” It is not to be confused with what we will
-call the genetic sense; i.e., the sense in which a member of
+species\emph{ Homo sapiens}.) We may call this the \emph{moral} sense
+of ``human.” It is not to be confused with what we will
+call the \emph{genetic} sense; i.e., the sense in which a member of
 the species is a human being, and no member of any other
 species could be. If (1) is acceptable only if the moral
 sense is intended, (2) is non-question-begging only if
 what is intended is the genetic sense.
 
-In “Deciding Who Is Human,” Noonan argues for the
+In ``Deciding Who Is Human,” Noonan argues for the
 classification of fetuses with human beings by pointing to
 the presence of the full genetic code, and the potential
-capacity for rational thought (p. 135). It is clear that what
+capacity for rational thought.\autocite[p. 135]{Noonan2} It is clear that what
 he needs to show, for his version of the traditional
 argument to be valid, is that fetuses are human in the
 moral sense, the sense in which it is analytically true that
@@ -435,7 +513,7 @@ moral community, which I will argue for only to the
 extent of explaining why it is, or should be, self-evident.
 The suggestion is simply that the moral community
 consists of all and only people, rather than all and only
-human beings;\footnote{From here on, we will use "human" to mean genetically
+human beings;\footnote{From here on, we will use ``human" to mean genetically
 human, since the moral sense seems closely connected to, and perhaps derived from, the assumption that genetic humanity is
 sufficient for membership in the moral community.} and probably the best way of
 demonstrating its self-evidence is by considering the
@@ -452,7 +530,8 @@ All we need is a rough and approximate list of the most
 basic criteria of personhood, and some idea of which, or
 how many, of these an entity must satisfy in order to
 properly be considered a person.
-28 In searching for such criteria, it is useful to look beyond
+
+In searching for such criteria, it is useful to look beyond
 the set of people with whom we are acquainted, and ask
 how we would decide whether a totally alien being was a
 person or not. (For we have no right to assume that
@@ -472,7 +551,7 @@ things as religion, art, and the manufacturing of tools,
 weapons, or shelters, since these factors have been used to
 distinguish our human from our prehuman ancestors, in
 what seems to be closer to the moral than the genetic
-sense of “human.” And no doubt he would be right to
+sense of ``human.” And no doubt he would be right to
 consider the presence of such factors as good evidence
 that the alien beings were people, and morally human. It
 would, however, be overly anthropocentric of him to take
@@ -513,7 +592,7 @@ he use his findings to decide whether or not the alien
 beings are people? We needn’t suppose that an entity
 must have oil of these attributes to he properly considered
 a person; (1) and (2) alone may well he sufficient for
-personhood, and quite probably (1)-(3), if “activity” is
+personhood, and quite probably (1)-(3), if ``activity” is
 construed so as to include the activity of reasoning.
 
 All we need to claim, to demonstrate that a fetus is not a
@@ -547,9 +626,9 @@ have not agreed to respect, x’s right to he treated as a
 member of the moral community. It is true that the claim
 that x is a human being is more commonly voiced as part
 of an appeal to treat x decently than is the claim that x is a
-person, but this is either because “human being” is here
+person, but this is either because ``human being” is here
 used in the sense which implies personhood, or because
-the genetic and moral sense of “human” have been
+the genetic and moral sense of ``human” have been
 confused.
 
 Now if (1)-(5) are indeed the primary criteria of
@@ -597,9 +676,9 @@ reasonable to suggest that the more like a person, in the
 relevant respects, a being is, the stronger is the case for
 regarding it as having a right to life, and indeed the
 stronger its right to life is. Thus we ought to take seriously
-the suggestion that, insofar as “the human individual
+the suggestion that, insofar as ``the human individual
 develops biologically in a continuous fashion ... the rights
-of a human person might develop in the same way”. \autocite{Hayes1} But
+of a human person might develop in the same way”. \autocite[p. 677-78]{Hayes1} But
 we must keep in mind that the attributes which are
 relevant in determining whether or not an entity is enough
 like a person to be regarded as having some of the same
@@ -781,7 +860,7 @@ close to being persons that to kill them requires a very
 strong moral justification as does the killing of dolphins,
 whales, chimpanzees, and other highly personlike
 creatures. It is certainly wrong to kill such beings just for
-the sake of convenience, or financial profit, or “sport.”
+the sake of convenience, or financial profit, or ``sport.”
 
 Another reason why infanticide is usually wrong, in our
 society, is that if the newborn’s parents do not want it, or
@@ -921,3 +1000,4 @@ human entities, and only to genetically human entities, is
 such an error. The overcoming of this error will
 undoubtedly require long and often painful struggle; but it
 must be done.
+\setcounter{footnote}{\thefe}
