--- a/content.tex
+++ b/content.tex
@@ -7,6 +7,7 @@
 \tableofcontents*
 \input{preface}
 \mainmatter
+
 \setsecnumdepth{part}
 \input{modone}
 \input{modtwo}
@@ -27,7 +28,7 @@
 \input{commonbiases}
 \newpage
 \setglossarystyle{altlist}
-\printglossaries[nonumberlist]
+\printglossaries
 \newpage
 \label{ch.biblio}
 \printbibliography
