--- a/modfive.tex
+++ b/modfive.tex
@@ -1,7 +1,8 @@
 \part{Does God Exist? If so, why is there evil?}
 \label{ch.modfive}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
-\chapter{Part 10: Arguments for the existence of God}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: Arguments for the Existence of God}\setcounter{seccount}{1}
 In philosophy, ‘God’ is given a standard three part definition, though some traditions include more features, others include less (I know of very few which include less). These features are:
 \begin{earg}
     \item[]Omniscient: All-knowing
@@ -14,7 +15,7 @@ For this section, we will be covering 4 different arguments for the existence of
 
 It is very important that you know this is what philosophers mean by `God', it may be different than the one you think of and many of the arguments for this being are from a monotheistic tradition. Talk of gods (plural) and arguments for them are not really found in the western tradition. But, I will also say, that all but the last argument can work for a pantheon of deities. 
 
-\section{The Design Argument}
+\section{Part \thechapcount.\theseccount: The Design Argument}\stepcounter{seccount}
 
 The design argument is actually a generic class of arguments which are also called \glspl{teleological argument}. This style of reasoning goes as far back as Plato (I am serious), and in its most recent form, it can be found in the arguments for intelligent design (knowing this style of arguments and their flaws are helpful in the real world today because of this; regardless of the side you are on, you should know either your own flaws to defend yourself or the flaws in your opponent's stance to take them out). Plato argued that there was a designer of the universe because of the organization and structure of it. The odds of the universe coming about because of chance are very unlikely, so Plato and others believe that there must have been some designer. This is just an example to get the right thought-process in your head:
 
@@ -26,7 +27,7 @@ plural=teleological arguments
 }
 
 
-    \thoughtex{The Forest Computer}{Suppose that you are walking through the forest, on a hiking trail, and you can across a computer, hooked to a running generator, mouse, keyboard, all on a desk. The computer is on and playing the classic Doom. Would you say that this appeared randomly, or would you say that someone built it?}{ForestComputer.jpg}
+    \thoughtex{The Forest Computer}{Suppose that you are walking through the forest, on a hiking trail, and you can across a computer, hooked to a running generator, mouse, keyboard, all on a desk. The computer is on and playing the classic Doom. Would you say that this appeared randomly, or would you say that someone built it?}{ForestComputer.jpg}{A moss-covered computer in the middle of the forest playing the video game Doom.}
 
 More than likely, you will say that someone built it. However, the human body, with its cells and structures, is far more complicated than some computer. So, why do we say that it lacked a builder/designer, while the computer had one? 
 \subsection{The Argument}
@@ -47,7 +48,7 @@ This is the second jump in the reasoning and is the one which is found across th
     \subsubsection{4. If that designer is God, then God exists.}
     \subsubsection{Therefore, God exists.} 
 
-\section{Problems with the Design Argument}
+\section{Part \thechapcount.\theseccount: Problems with the Design Argument}\stepcounter{seccount}
 \subsection{Problem 1: The Weakness of the Analogy}
 
 This is an attack on the first line of the argument. It only attacks why we think that it’s true. The argument itself is valid. The first line seems intuitive, seems right, because of the examples used. The examples pointed to are things like watches and computers, very complex things which obviously needed to have some kind of designer. But the analogy between natural complexities and a watch seemingly has strength to it, but in actuality, the similarity is quite weak. There are many commonalities between two kinds of watches, but the commonality between the eye and a watch is that both are complex, there is nothing more to go on. When the analogy is weak, the conclusion from the analogy is equally weak.
@@ -85,7 +86,7 @@ Bodies Argument&Pyramids Argument\\\hline
     So, the Flying Spaghetti Monster, with His great noodly appendages, made them.&So, someone, named Steve, all by himself, made them.
 \end{tabular}
 
-\section{The Fine-Tuning Argument}
+\section{Part \thechapcount.\theseccount: The Fine-Tuning Argument}\stepcounter{seccount}
 Even if we accept that there was no need for a designer in the minute machinations of human creation, there is another reason to think that there was some kind of divine player involved. At its core, the fine tuning argument points at the odds of some event happening. The odds of the world being as it is an suitable for human evolution and survival without the work of a divine architect are so astronomically small that it is more likely that it would have never happened at all. But, if you bring a divine architect into the mix, the odds are 100\%. Since it did happen this way, the odds are far more likely that there was a divine architect. That Architect is God.
 
 The Fine Tuning Argument could be seen as a variation or a more fine-tuned version of the Design Argument which we just covered. Although the Design Argument is quite ancient, the Fine-Tuning variation is relatively recent (as far as I am aware). It mostly comes out of the advancements in the empirical sciences. 
@@ -124,7 +125,7 @@ This is the God-jump which we have seen before. The reasoning here is essentiall
 
 \subsection{9. Therefore, God exists.}
 
-\section{Problems with The Fine Tuning Argument}
+\section{Part \thechapcount.\theseccount: Problems with The Fine Tuning Argument}\stepcounter{seccount}
 With The Fine Tuning Argument, we can think of it as a more robust version of the Design Argument, so it does avoid some of the issues, for example it does not fall to Weakness of Analogy. In the text, rather than having the Theory of Evolution as an issue, we have The Lottery Objection and as with all the arguments for the existence of God, we will have Limitations on the Conclusion. There are three other objections which were not covered in the textbook, which I have added.
 \subsection{The Lottery Objection}
 
@@ -151,8 +152,20 @@ Another area of contention for the Fine Tuning Argument is that it says that it'
 
 There are limits to this response however, such a universe would need to be set up to overcome the second law of thermodynamics, which is easier than some would think (there's more possibilities for that than normally presented).
 
-\section{The First Cause Argument}
-First Cause Arguments are also called \glspl{cosmological argument} as they, rather than looking at how the world is, they look at the cause and effect relations which led to the world as it is. Everything in the natural world has a cause. All of these causes in turn have a cause. There are things in the natural world. So, there must have been a first cause, something not in the natural world, which created this chain (the cause of the big bang is the new standard place to put it). This first cause was God. 
+\section{Part \thechapcount.\theseccount: The First Cause Argument}\stepcounter{seccount}
+First Cause Arguments are also called \glspl{cosmological argument} as they, rather than looking at how the world is, they look at the cause and effect relations which led to the world as it is.   Everything in the natural world has a cause. All of these causes in turn have a cause. There are things in the natural world. So, there must have been a first cause, something not in the natural world, which created this chain (the cause of the big bang is the new standard place to put it). This first cause was God. 
+
+Arguments of this form are quite old, with some of the earliest found in Ancient Greek writtings (much like with the history of the stance Substance Dualism in the Mind-Body Problem). Plato in \emph{Laws} gave one version of this argument, and then later Aristotle cemented this form of argument in his \emph{Physics}. From there, the argument spread to the Middle East and was picked up by Muslim Philosophers in the 800s and 900s (CE). The argument was presented by the philosopher and translator al-Kindi (800-870 CE)\footnote{al-Kindi was the principle translator who preserved Aristotle's works by bringing them into the Muslim world. He was also a relatively prolific author on his own, but given the style of his time, many of his arguments are spread across several books. See \citetitle{alkindi1} for more details.} like so:\footnote{This is a very rough summation of his arguments, across several books. The most important of these books is his \citetitle{alkindi2}.}
+ 
+\begin{earg}
+\item[1 ] Everything has a cause other than itself.
+\item[2 ] Everything which is a cause has itself a cause other than itself (directly or indirectly).
+\item[3 ] There are things which exist.
+\item[4 ] So, there must have been a first cause to start the chain.
+\item[5 ] If there was a first cause, that cause was God.
+\item[6 ] Therefore, God exists.
+\end{earg}
+ 
 \newglossaryentry{cosmological argument}
 {
 name=cosmological argument,
@@ -170,7 +183,7 @@ This seems sort of self-evident, but might be worth explanation. Think of where 
 
 This is mostly an expansion/explanation of the first line, meaning that there are no existing things which weren't caused to exist by something previous to them in a chain. As I noted in parentheses above, there is an issue if you allow for backwards time-travel. In such a case, it would be possible for a thing/person to cause themselves to exist. For example, take this case from the Futurama episode ``Roswell that Ends Well":
 
-    \factoidbox{Philip Fry travels back in time to Roswell, New Mexico in the year 1947, where his `grandfather' was stationed. As events play out, Fry ends up causing the death of his `grandfather'. But, Fry does not fade away to nothing, and though some faulty reasoning, comes to believe that the woman he is consoling is not in fact his grandmother (she is, though), and Fry ends up sleeping with her. As a result, she becomes pregnant and Fry becomes his own grandfather.}
+    \factoidbox{Philip Fry travels back in time to Roswell, New Mexico in the year 1947, where his `grandfather' was stationed. As events play out, Fry ends up causing the death of his `grandfather'. But, Fry does not fade away to nothing, and though some faulty reasoning, comes to believe that the woman he is consoling is not in fact his grandmother (she is, though), and Fry ends up sleeping with her. As a result, she becomes pregnant and Fry becomes his own grandfather.\autocite{Futurama1}}
 
 Here, we have a case where, thanks to time-travel, a person was their own cause. This can be an issue for this argument, but it's better as the `Not a Proof' objection in the next section. 
 
@@ -180,7 +193,13 @@ This is another one of those `no duh' sort of lines. Basically, it points out th
 
 \subsection{4. So, there must have been a first cause to kick start the chain.}
 
-As always, the word `so' indicates that we have an intermediate conclusion, this means that it's supposed to follow from the previous lines, whether or not it does is a different question. Basically, the reasoning here is that since there are things in the world, and everything needs to have a cause other than itself, there needs to have been something to start it, something which got the ball rolling. 
+As always, the word `so' indicates that we have an intermediate conclusion, this means that it's supposed to follow from the previous lines, whether or not it does is a different question. Basically, the reasoning here is that since there are things in the world, and everything needs to have a cause other than itself, there needs to have been something to start it, something which got the ball rolling.
+
+While normally it is not wise to object to the conclusions of an argument, it is possible to do so if the argument is not \gls{valid}, that is, it's invalid. This is the point which another philosopher during the Islamic Golden Age brought up, al-Ghazali: 
+
+\factoidbox{According to the hypothesis under consideration, it has been established that all the beings in the world have a cause. Now, let the cause itself have a cause, and the cause of the cause have yet another cause, and so on \emph{ad infinitum}. It does not behove you to say that an infinite regress of causes is impossible.... [M]ethods of theoretical inquiry were betrayed by you when you admitted the possibility of temporal phemomena which had no beginning. If it is possible that something infinite should come into existence, why should it not be equally possble for it to have some of its parts working as causes of others... This will be like the Past, which reaches its term in the fleeting `Now', but had no beginning.\autocite[p. 90-91]{alghazali1}}   
+
+al-Ghazali would later present an argument against the notion of a temporally infinite past, accepting the conclusion that there must have been some manner of first cause, but his critique was that one can't just assume that the universe had a beginning, a first cause.
 
 \subsection{5. If there was a first cause, that cause was God.}
 
@@ -188,7 +207,7 @@ This sort of jump should look familiar, as it is found in both the Design and th
 
 \subsection{6. Therefore, God exists.}
 
-\section{Problems with the First Cause Argument}
+\section{Part \thechapcount.\theseccount: Problems with the First Cause Argument}\stepcounter{seccount}
 \subsection{Problem 1: Self-contradictory}
 
 In some versions of the argument, they are not careful with their phrasing and claim that \emph{everything} is said to have a cause other than itself, so God must have had a cause and there could not be a first cause. For example, take this argument:
@@ -235,7 +254,7 @@ Quantum Argument&FSM Argument\\\hline
 
 The left most argument, if I remember correctly, is roughly one given by Steven Hawking when there was a debate about this topic between physicists and theologians, but this was many years ago.
 
-\section{The Ontological Argument}
+\section{Part \thechapcount.\theseccount: The Ontological Argument}\stepcounter{seccount}
 To start us off, I will define a special term, which you might have encountered before. \Gls{ontology}, properly speaking, is an area of philosophy dealing with existence. It is the study of being, becoming, and some features of reality relating to existence.  I spent the majority of my undergraduate work dealing with these sorts of questions as it relates to time and also to composition. Sometimes, Ontology is called ``Metametaphysics", but Metametaphysics tends to be more of Meta-ontology.  
 
 \newglossaryentry{ontology}
@@ -256,7 +275,7 @@ description={An argument which moves from the properties which an object/thing i
 plural=ontological arguments
 }
 
-\section{Anselm’s Ontological Argument}
+\section{Part \thechapcount.\theseccount: Anselm’s Ontological Argument}\stepcounter{seccount}
 
 The oldest, and one of the strongest, ontological arguments was written by St. Anselm. Anselm was born in 1033 CE and died in 1109 CE. He was proclaimed a saint in 1163 CE and his feast day is April 21st. As far as I could find, he is not the patron saint of anything. 
 
@@ -296,7 +315,7 @@ This comes from the fourth line. The seeming contradiction is actual (or defensi
 
 Remember how we defined God, God is the greatest possible being. What is true for one is true for the other, they are the same thing.
 
-\section{Problems for the Ontological Argument}
+\section{Part \thechapcount.\theseccount: Problems for the Ontological Argument}\stepcounter{seccount}
 \subsection{Problem 1: The Perfect Island}
 
 This was actually the inspiration behind my versions of the arguments seen in the Limitation of the Conclusion sections. It is easy to imagine the absolutely perfect island. Perfect weather, wildlife, beach, and so on (think Hawai’i without the tourists). But, that island would be more perfect if it existed (same reasoning as before). This island is the most perfect island, therefore, the perfect island must exist. We can do that for the perfect taco, the perfect wife/husband, or anything, the perfect version of it must exist. Now I have to ask, where is my perfect island?
@@ -325,8 +344,8 @@ In grad-school, I did several presentations arguing against the idea that existe
 
 \subsection{Problem 3: Evil}
 This is our segue into the next topic of this module, which is the problem of evil. If we look at the world, there is a HUGE amount of pain and suffering in it (AKA evils). If God does actually exist, then there would not be these evils (because He is all good). So, God must not exist. 
-
-\chapter{Part 11: An Argument Against the Existence of God}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: An Argument Against the Existence of God}\setcounter{seccount}{1}
 
 The \gls{Problem of Evil}, which I abbreviate as POE, is the family of arguments against the existence of God which we will be discussing. This is one of those arguments where what doesn't kill it makes it stronger. As a result, there are many different versions of it, each with their own special objection (explanations for how God can exist despite the argument). The objections to the arguments for the existence of God were not arguments against the existence of God, rather they are ways that the argument for the existence of God is flawed. You do not want flawed arguments. For this class, we will deal with, in general, two kinds of POE, which are separated by the kind of evil they use. 
 
@@ -348,7 +367,7 @@ plural=man-made evils
 }
 
 
-Second, we have\gls{natural evil}. This is the kind of suffering which is not caused by man, but nature doing its thing. Since we are talking about suffering when we use the term `evil', it should be clear that natural evils are a thing, because there are some sufferings caused by nature doing as it does. Here we have things like earthquakes, disease, volcanic eruptions, tornado, and sharknados. 
+Second, we have \gls{natural evil}. This is the kind of suffering which is not caused by man, but nature doing its thing. Since we are talking about suffering when we use the term `evil', it should be clear that natural evils are a thing, because there are some sufferings caused by nature doing as it does. Here we have things like earthquakes, disease, volcanic eruptions, tornado, and sharknados. 
 
 \newglossaryentry{natural evil}
 {
@@ -370,7 +389,7 @@ The stronger of the two, for our purposes, concerns natural evils, because moral
 \end{enumerate}
 As you might guess, the most ripe for attack, the one which the theists really want to take down, is line 5. Typically, the problems or claimed solutions to POE which keep God in the mix, give some reason why God wouldn't want to stop the evil which is in the world. But, the vast majority of those counter points tend to fall flat. 
 
-\section{The Saints and Heroes Response}
+\section{Part \thechapcount.\theseccount: The Saints and Heroes Response}\stepcounter{seccount}
 This is the claim that God allows for evil in the world because it leads to greater goods which could not have been had otherwise. Evils are necessary for the even greater good of having saints and heroes. When we learn about these evils we are called to arms against them, we are made heroes. Take for example this story, the events happened, and this only really works as an example of man-made evils:
 
     \factoidbox{In the First Crusade, there were several armies. Some of them were more official and organized than others. An unofficial, arranged and poorly managed group in the first crusade was lead by a Count Emicho from Germany. Emicho's plan for this group was for them to pass from Germany to the Holy Land immediately, which was a major issue because of food scarcity during that time of the year. Rather than following this ill-conceived plan, they eventually thought that the trek to the Holy Land was too far, and noticed that the local Jewish population was a lot closer and unarmed. As a result, they went from town to town, their own towns, pillaging and slaughtering the Jewish people in the region.  The Church, to their credit, was vehemently opposed to this. They at the very least wanted the fighting outside of Christian dominated territory.  Despite this horrific time, heroes arose to fight this evil. Priests and bishops not only preached against the violence, but even hid the Jewish population in their homes, fortifying the place. Some, if they had the means, raised personal armies to protect them. They used their religious might to protect Jewish places of worship and did their best to save lives.}
@@ -381,8 +400,8 @@ An alternative version of this, which does escape some of the problem below is c
 
 The problem with this is that much of the natural evils in the world are not recorded, we are not called to arms against them, and therefore could not have served to create the greater good. (Things like genetic diseases which lead to a slow and painful death are great examples, especially when there is no possible cure).
 
-\section{The Artful Analogy}
-Some claim that the world is like God’s canvas, He is painting a picture. There are shades of good everywhere and so too are there shades of evil. The contrasting elements of good and evil make the picture more beautiful than if it was only all shades of good. The goodness of the world is a product of the harmony between these shades of good and evil. Philosophers who have liked this kind of view, or at the very least wrote something which is akin to it include: Leibniz in his Theodicy\autocite{Leibniz1}. (paragraph number 213) and Augustine in his Confessions (book 7, chapters 13-16).\autocite{Augustine1} For Augustine, evil is there to make a more beautiful, harmonious whole of creation. We can't see the whole picture because we aren't God. 
+\section{Part \thechapcount.\theseccount: The Artful Analogy}\stepcounter{seccount}
+Some claim that the world is like God’s canvas, He is painting a picture. There are shades of good everywhere and so too are there shades of evil. The contrasting elements of good and evil make the picture more beautiful than if it was only all shades of good. The goodness of the world is a product of the harmony between these shades of good and evil. Philosophers who have liked this kind of view, or at the very least wrote something which is akin to it include: Leibniz in his Theodicy\autocite[paragraph number 213]{Leibniz1} and Augustine in his Confessions.\autocite[Book 7, chapters 13-16]{Augustine1} For Augustine, evil is there to make a more beautiful, harmonious whole of creation. We can't see the whole picture because we aren't God. 
 
 An apt analogy for this idea is to take two pictures (and for this analogy, the darker the shade, the more `evil' it's meant to represent) and compare them. The first is just a blank white canvas, the other is a photo-realistic black-and-white picture of a rose. Which of these would you say is more beautiful? The rose or the blank canvas?
 
@@ -390,7 +409,7 @@ There are two major problems for this. The first is that it is hard to believe. 
 
 The second problem for this is that if God allows for the suffering to beautify the world, then God seems more like a sadist than an all-good entity. If suffering plays an artistic role in the world, then God is very close to a psychopathic artist who throws a bomb into a crowded elevator in order to admire the patterns created by the blast and the resultant splatter.
 
-\section{The Free Will Defense}
+\section{Part \thechapcount.\theseccount: The Free Will Defense}\stepcounter{seccount}
 Philosophers danced around The Free Will Defense (FWD) as an explanation for Man-Made Evil for a lot of philosophic history, but was never really explicitly given. Most think that this is a very old and maybe obvious reply, but the current and,  by far, most popular version, (even appearing in popular culture) is quite contemporary. The version which we will be discussing was given by Alvan Plantinga\autocite{Plantinga1}
 
 As a reply to the problem of evil, FWD is also extremely popular. This is the claim that human beings are special in that we have free will. If we lacked this aspect, we would be like robots or automata and could make no choices of our own. If you are familiar with Star Trek, if we lacked free will, then we would be like Data, but with emotions. Those that go with this defense claim that  necessary consequence of having free will is the ability to do evil. Without this ability, then we would not really have free will.  A world with free will and the possibility of doing evil is better than a world without free will. God made the best world possible, so, He made one with free will and thereby one with evil (suffering). The Free Will Defense goes like this, as before the bold lines are the premises:
@@ -417,20 +436,20 @@ This follows from the second and fourth lines of the argument. Assuming, again, 
 
 \subsection{Connection with previous content:}
 
-This should remind you about the stuff we have covered in Module 4. There, just as a refresher, we covered the various ideas and arguments for and against free-will. Be aware that the Free Will Defense requires incompatibilism and, more over, it requires libertarian free will. If you want to go with this defense, then you need to believe in Libertarianism. You must physically, not just counterfactually, be able to do evil and do otherwise than what you do.  From here, we will continue down the free will defense rabbit hole and see some of the objections to this idea.
-\section{A Few Initial Replies to the Free Will Defense: How good is Free Will? Do we even have it?}
+This should remind you about the stuff we have covered in Module \ref{ch.modFour}. There, just as a refresher, we covered the various ideas and arguments for and against free-will. Be aware that the Free Will Defense requires incompatibilism and, more over, it requires libertarian free will. If you want to go with this defense, then you need to believe in Libertarianism. You must physically, not just counterfactually, be able to do evil and do otherwise than what you do.  From here, we will continue down the free will defense rabbit hole and see some of the objections to this idea.
+\section{Part \thechapcount.\theseccount: A Few Initial Replies to the Free Will Defense: How good is Free Will? Do we even have it?}\stepcounter{seccount}
 
 There are a few problems for the Free Will Defense, and they can be broken up into two different kinds, with a few exceptions. The first concerns the actual value of free will and the second concerns whether or not we actually have it. 
 \subsection{Is Free Will that Good?}
 
 This question relates to the first line of the argument, which claimed that any world with free will is going to be better than one without it. But, is that so obvious? The suffering in the world can be so great that it would make sense to want this possibility to go away. Here is a case to think about:
 
-    \thoughtex{A World Without Free Will}{Imagine, if you will, two worlds, the first is a world with all of the suffering and anguish which is present in ours. In this world, people have this Libertarian Free Will. From a first person perspective, one could not tell the difference between `making a choice' in this world vs in the world we presently live in. The second world is one without the vast majority of the suffering which we inflict on each other. For example, WW2 never happened in this world. This decrease in suffering is because there's no Libertarian Free Will in this world. Making a choice in this world, from a first person perspective, would feel exactly the same as making a choice in the world with free will. A person could not tell the difference. Which would you chose to live in? The one with unnecessary moral evils or the one without?}{NOWW2.jpg}
+    \thoughtex{A World Without Free Will}{Imagine, if you will, two worlds, the first is a world with all of the suffering and anguish which is present in ours. In this world, people have this Libertarian Free Will. From a first person perspective, one could not tell the difference between `making a choice' in this world vs in the world we presently live in. The second world is one without the vast majority of the suffering which we inflict on each other. For example, WW2 never happened in this world. This decrease in suffering is because there's no Libertarian Free Will in this world. Making a choice in this world, from a first person perspective, would feel exactly the same as making a choice in the world with free will. A person could not tell the difference. Which would you chose to live in? The one with unnecessary moral evils or the one without?}{NOWW2.jpg}{A hyperfuturistic world with flying cars and hologram advertisements.}
 
 Similarly, we can there are certain moral evils which I will never get the chance to preform. For example, I will never get the opportunity to kick the pope in the shin. What if all evil acts were like that? What if people were never given the opportunity to do the evil acts or everyone had a moral character such that they would never do such things. Sure, they are possible, but we never get the chance to do them or would never do them. Am I less free because of my lacking the opportunity?
 \subsection{Do We Actually Have it?}
 
-That last note leads us into an interesting other problem. Do we actually have free will? Or do we just have some kind of illusion of it? The idea of free will is hotly debated, as we saw in Module 4. Though this is a bit of a fallacy, the majority of philosophers out there believe that people have free will, but, this is not the kind of free will necessary for the Free Will Defense. Namely, most philosophers, at least the vast majority I know, think that compatibilism is true. In such a world, it is perfectly possible that we could have done otherwise (in the counterfactual sense) but never actually do evil. More over, the choices we make, through various tests, can be shown to come from past experience and conditioning, we are programmed (so to speak). Which makes a serious problem for FWD. 
+That last note leads us into an interesting other problem. Do we actually have free will? Or do we just have some kind of illusion of it? The idea of free will is hotly debated, as we saw in Module \ref{ch.modFour}. Though this is a bit of a fallacy, the majority of philosophers out there believe that people have free will, but, this is not the kind of free will necessary for the Free Will Defense. Namely, most philosophers, at least the vast majority I know, think that compatibilism is true. In such a world, it is perfectly possible that we could have done otherwise (in the counterfactual sense) but never actually do evil. More over, the choices we make, through various tests, can be shown to come from past experience and conditioning, we are programmed (so to speak). Which makes a serious problem for FWD. 
 \subsection{Free Will Without Evil}
 
 This one is related to the second kind of objection, namely, whether or not we have free will, but ties in to the second kind. One could argue that this objection gets the relevant parts of both. In this case we are asking whether it's possible to have free will without having the possibility to actually act/do evil. Much like the case which I gave before. The argument goes like this:
@@ -454,7 +473,7 @@ People typically think that God intervenes in the world through miracles. But wh
 
 The reply to this is typically that if God intervened then it would not be free will… But this doesn’t really sit with the idea of miracles.
 
-\section{The Problem of Natural Evil}
+\section{Part \thechapcount.\theseccount: The Problem of Natural Evil}\stepcounter{seccount}
 The Free Will Defense, if it can surmount the problems which we have seen previously, would be able to handle the problem of evil, but only in a restricted sense. The Free Will Defense can only handle Man-Made Evil. But, there are other kinds of evils in the world. Remember, we also have Natural Evils to contend with. Remember, also, that whatever doesn't kill the Problem of Evil only makes it stronger. This leads us to the Problem of Natural Evil (or PONE, because it `PONEs' the Free Will Defense). There is no real connection (at least from the view of a non-believer) between free will and the plague, earthquakes, volcanic eruptions, etc. This argument is taking this into account. Rather than taking evils as any old kind of `bad' in the world, here we will focus on natural evils, the pain and suffering caused by nature doing its thing. 
 \begin{enumerate}
     \item There are natural evils in the world.
