--- a/modfour.tex
+++ b/modfour.tex
@@ -1,7 +1,8 @@
 \part{Do We Have Free Will? What is it?}
 \label{ch.modFour}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
-\chapter{Part 6: The Free Will Debate}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: The Free Will Debate}\setcounter{seccount}{1}
 The topic for this week is the notion of free will, what it is, whether people have it, etc. Stances regarding free will will influence your stances concerning problems in Neurology, Psychology, Criminal Justice, reward and punishment (praise and blame), morality (in general), physics, and many other areas of study. As a starting point, we will say that Free Will is whatever is necessary for moral responsibility. Other, more common notions of free will start with this as the beginning and then add things which they believe are necessary for such responsibility. 
 
 This means, basically, that if you aren't acting in accordance with your free will (or you don't have free will) then you aren't morally responsible for it. Others might think that you are and praise/blame you for the actions, but you aren't actually responsible for it, it just wasn't up to you. As a first example, suppose that some mad scientist puts a microchip in my brain and uses me as a remote control robot. She could make me do awful things and others, prior to knowing about my plight may hold me accountable for it, but in reality, I am not responsible for the actions made by my body. 
@@ -15,7 +16,7 @@ More often than not, regardless of whether you think that she should have splash
     \factoidbox{Sally is drinking a cup of coffee with a person she finds attractive (call it a date). They make a lewd comment and then, in shock and anger, her hand flies forward as she's about to take a drink and splashes the coffee all over their white clothes. They will be furious of course and they will likely blame her for the strange event, but is she ACTUALLY responsible for it?}
 
 In this case, more often than not, you will say that she is responsible, for good or ill. So, what's the difference?  
-\section{Part 6.1:  Free Will and (Moral) Responsibility}
+\section{Part \thechapcount.\theseccount:   Free Will and (Moral) Responsibility}\stepcounter{seccount}
 
 If there is no such thing as free will, there is no such thing as moral responsibility. This is because ‘free will’ is defined as whatever is necessary to have moral responsibility. So, we now need to ask various questions which can help us narrow the field concerning this responsibility:
 \noindent
@@ -38,7 +39,7 @@ As before, if I predict the ordinary intuition right, you will say that you aren
 
 If I predict your answer right, you will say “yes”.  But, what is the difference, maybe Uncle Ben had it right, ``With great power comes great responsibility." Many people claim that the difference between the cases, as it regards moral responsibility is that in the first case, there’s nothing you can do, it’s not possible for you to help the kiddies but in the second, you can.  This means that whatever is necessary for moral responsibility must have the requirement, built in, that you can do it. Some of you might have heard the phrase ``ought implies can" which basically means that if something is your moral responsibility, if you are actually responsible for something, then you need to be able to do it. This also applies in reverse, if you can't do something, then you aren't responsible for it. 
 
-\section{Part 6.2: The Free Will Debate}
+\section{Part \thechapcount.\theseccount: The Free Will Debate}\stepcounter{seccount}
 
 Trying to answer questions like those is the basis for the free will debate. What makes those two cases different? Why do we say ‘no’ to the first example and ‘yes’ to the second example? And some of the possible was of handling this were mentioned lightly above. Of the 8 possible stances which one can hold (taking the possible answers to various questions and using those to form stances), there are three which are actually palatable, able to hold their own. These stances are:
 \begin{earg}
@@ -47,8 +48,9 @@ Trying to answer questions like those is the basis for the free will debate. Wha
     \item[] Compatibilism 
 \end{earg}
 Both the Hard Determinist and the Compatibilist hold that Determinism is true. The Libertarian rejects Determinism. The debate concerns which of these stances is correct. 
-\chapter{Part 7: Determinism, Incompatibilism, and Hard Determinism}
-\section{Part 7.1 Determinism}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: Determinism, Incompatibilism, and Hard Determinism}\setcounter{seccount}{1}
+\section{Part \thechapcount.\theseccount:  Determinism}\stepcounter{seccount}
 
 This is the stance that every event is the result of preceding causes in accordance with the unchanging laws of nature. Basically, if some super amazing God-like computer knew all of the laws of nature and the state of the universe down to the smallest particles, it could predict with 100\% accuracy the future. For example, take the muscle spasm coffee launch, the computer would have predicted it (prior to it happening). If the world was set-up differently (like in the second coffee case), the computer would have predicted the coffee splash there too. Also, there is nothing about the computer which is special, it is not determining your fate, it is just saying what will happen. The weather person saying that it will be sunny tomorrow does not make it the case that it will be sunny tomorrow. It is worth noting that your actions, choices, and thoughts are all events. This is pretty uncontroversial. So, if a stance says that determinism is true, then it follows that all of the choices you make are just as determined by the past and the laws of nature as any other event, like an apple falling from a tree. This is a common area of confusion for students. Many think that Compatibilism includes provisions that everything else in the universe is determined except your choices. This is not true. Libertarianism is willing to make that claim. Compatibilism, as we will see, holds that determinism is true (your actions, thoughts, and choices are determined) but you are still responsible for your actions, under the right circumstances (which are more common than you would think).  Actually, thinking about questions concerning our justice system, like `why punish?' and `how much?', from a deterministic mindset is why certain countries have a very low recidivism rate, and prison conditions are far better than in other countries. In those cases, they treat punishment as rehabilitation, removing the reason the person behaved as they did. 
 
@@ -58,7 +60,7 @@ There is a lot of evidence in favor of determinism. In fact, the vast majority o
 
 Incompatiblism is a family of stances regarding the relationship between free will and determinism. All stances in this family answer the question ``Were determinism true, would we still have free will?" (or, in other words, ``Were determinism true, would we still have moral responsibility?") the same way. If the stance says that there couldn't be responsibility in a universe where determinism is true, then the stance is Incompatibilist (free will and determinism are incompatible).\footnote{Not all determinists are incompatibilists. Also, for time-travel to be possible (as in traveling back in time), determinism must be true.  I will not defend that claim here. As a side note, fatalism is determinism and if a model for the topology of time implies that time-travel is possible, then it implies fatalism; but it should be noted that there is some debate on this.} There are two, general, theories which fall into this family. These two are radically different in that they only agree about the answer to that question. These are Hard Determinism and Libertarianism. 
 
-\section{Part 7.2: Hard Determinism}
+\section{Part \thechapcount.\theseccount: Hard Determinism}\stepcounter{seccount}
 
 Hard Determinism belongs to the incompatiblist family. This means that it claims that responsibility and determinism can't exist together. It also makes the positive claim that determinism is true, there is no randomness in the universe. It is called `Hard' because it draws a hard line about the cases, takes the hard, difficult to swallow, parts of determinism to the extreme. As a result, from these two claims, it claims that there’s no such thing as moral responsibility. We may hold each other responsible, but it is not a feature of the world (one might claim that morality is a useful fiction). There are several examples of this sort of thinking in the real world. For example, in a court case, suppose that the accused had a hard upbringing and up until that point lived a difficult life with few opportunities. They are in court accused of theft. The more you know about the accused and their upbringing, the less harshly you will want to hold them responsible or punish them because you quickly realize that in their mind, given their background and experiences, there wasn't another option.\footnote{This thought, taken in a slightly different direction, can be found in Martha Nussbaum's Equity and Mercy} Hard Determinism can use this fact to their advantage. We don't have the ability to have all of the factors of other people in our minds, but if we could, we would see that the responsibility we attribute to others is actually just a necessary result of the prior events, all stemming back to circumstances which the person had no control over. The control doesn't magically appear in some choices (because of determinism), so responsibility must just be a fiction our small minds concocted.
 
@@ -86,17 +88,17 @@ This is from a common reply to the question “am I responsible for things outsi
 \subsubsection{6. Therefore, you aren't morally responsible for anything (AKA, No Free Will)}
 
 This is the conclusion, it is what all of the lines up until this point have been leading up to. If you accept all of the lines leading up to this point, you have to accept this one (really, no choice).  People who accept this line are called Hard Determinists. The two main assumptions made are that Determinism is true and that responsibility requires some ability to do otherwise. But, there is another flavor of it called Libertarianism (not the political stance) which is incompatiblist, but thinks that determinism is false.
-
-\chapter{Part 8: What If We Denied Determinism?}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: What If We Denied Determinism?}\setcounter{seccount}{1}
 Basically, what would happen if we said that determinism was false? There are a few ways to deny determinism. Some posit that the laws of nature do have some randomness to them, pointing to some findings in Quantum Mechanics. They say that certain events on a quantum level ‘just happen’, there are no hidden variables. Two systems, they say, can be exactly the same, but behave differently. But how does this fair with responsibility? Well, it is not what is wanted. If there’s this randomness in the world, it makes our ideas of control even more elusive. Take for example, the muscle spasm coffee splash case. In that case, we say that she wasn't responsible because it was outside of her control. Random events are always outside of our control. So, we don't have free will for determined acts because we couldn't do otherwise and we don't have free-will for random acts because we don't have control.  But, there are some who deny this sort of reasoning, these are the Libertarians.
 
-\section{Part 8.1: Libertarianism}
+\section{Part \thechapcount.\theseccount: Libertarianism}\stepcounter{seccount}
 
 Like the Hard Determinists, Libertarians are Incompatibilists. They hold, to say this again, that responsibility and determinism can't play together. They disagree with the Hard Determinist, however, about whether determinism is true. They both hold that either determinism is true or there is moral responsibility (but not both). Hard Determinists say that determinism is true, so that removes responsibility (because it can't be both, this is not a formal fallacy, in this case). Libertarians say that determinism is false, so they get that there must be some indeterminacy and therefore responsibility. In particular, they deny the third line of the Hard Determinism Argument (you can't control the way the past controls the present and future). Although they are not determinists, Libertarians could be fine with physical events being deterministic, they want something extra beyond the laws of nature to intervene and give you control over the way the past controls the present and the future (there have been attempts to have a physicalist Libertarianism, but I argue against those attempts in some extra reading I wrote and provide). It posits some kind of substance dualism (typically, though there have been attempts otherwise, to have physicalism and libertarianism). The mental has control over the physical, within certain restraints from outside of nature: a ``contra-causal" freedom, in which the mental is distinct from the causal order of nature, yet mysteriously able to alter it. In this way, we can deny the line in the hard determinist’s arguments which says that past controls the present and future. According to these guys, we have some influence in there. The world is not deterministic, and we have moral responsibility. We could call that conception interventionist control. 
 
 \subsection{An argument for Libertarianism}
 
-This is an argument which I made up for libertarianism, sometimes when I make up arguments for a stance, for this class, I will intentionally give holes for you to find and exploit. This is not one of those cases. It starts from the basic assumption that there is moral responsibility, that morality is more than just a social fiction (it's an actual part of the world). We will see arguments for and against this in Module 7. This particular argument is a shorter, simplified version of one I am giving in a paper.
+This is an argument which I made up for libertarianism, sometimes when I make up arguments for a stance, for this class, I will intentionally give holes for you to find and exploit. This is not one of those cases. It starts from the basic assumption that there is moral responsibility, that morality is more than just a social fiction (it's an actual part of the world). We will see arguments for and against this in Module \ref{ch.modseven}. This particular argument is a shorter, simplified version of one I am giving in a paper.
 \begin{earg}
     \item[1] There is moral responsibility (that is, a person is morally responsible for their actions, some or all).
     \item[2] If a person is morally responsible for their actions, then they must be able to do otherwise.
@@ -107,14 +109,14 @@ This is an argument which I made up for libertarianism, sometimes when I make up
 \end{earg}
 The big area of contention is the second line, and that is worthy of a bit of a defense. Imagine the following case:
 
-    \thoughtex{Mushroom Brain}{Suppose that a meteor crashed in a field near your home and an alien spore escaped filling the air, quickly infecting people’s nervous systems. These spores grow and take over the mind of the host. Sometimes, the actions which the host would do are the same as those which the spores would cause them to do, however, when they are not, the spores switch up the nerves to make the host do as they would want. Since the host could not do otherwise, it would seem that they are not morally responsible for their actions (as even if they were their choice, the spores would stop them from making a different one).}{mushroombrain.jpg}
+    \thoughtex{Mushroom Brain}{Suppose that a meteor crashed in a field near your home and an alien spore escaped filling the air, quickly infecting people’s nervous systems. These spores grow and take over the mind of the host. Sometimes, the actions which the host would do are the same as those which the spores would cause them to do, however, when they are not, the spores switch up the nerves to make the host do as they would want. Since the host could not do otherwise, it would seem that they are not morally responsible for their actions (as even if they were their choice, the spores would stop them from making a different one).}{mushroombrain.jpg}{A human brain with mushrooms growing out of it.}
 
 To apply this more to the case at hand, the spores are the past and the laws of nature. We want to say that they are different than those, but the only reason for that is that the past and the laws of nature, according to determinism, have been with us forever, while the spores are a recent addition.
-
-\chapter{Part 9: Compatibilism and Soft Determinism}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: Compatibilism and Soft Determinism}\setcounter{seccount}{1}
 The core similarity between the hard determinist and the libertarian is that they both think that determinism and free will can’t play together, you get one or you get the other. That is, they are both incompatibilist. The opposite stance, compatibilism, says that they are compatible. One could hold that determinism is false but were it true, there would still be responsibility. This is all to say that one doesn't negate the other. Now, from my experience, versions of this stance are the most popular in philosophy at the moment. This distinction is useful because incompatibilism vs compatibilism is a choice or assumption we make prior to formulating or taking a stance in this debate. 
 
-\section{Part 9.1: Soft Determinism}
+\section{Part \thechapcount.\theseccount:  Soft Determinism}\stepcounter{seccount}
 
 Soft Determinism is a nicer, softer, interpretation of the implications of Determinism. This is the stance that determinism is true and that we have free will. Some people, causing some confusion, like to call this stance `Compatibilism'. This stance is that the world is 100\% determined but we still have some kind of control. I like to think of it as having your cake and eating it too. Take this argument (shorter version of what was before):
 
@@ -135,7 +137,7 @@ There are three ways that this intuition can be accounted for and each is strong
 
 So, your action was free if you chose to do it; you would have done something different if you chose something different. Another explanation: For the libertarian, you get free will because you have control from outside of nature,  (more than likely, through substance dualism, but that is a contemporary on going debate I am personally involved in). For the compatibilist of this stripe, you have control from within the laws of nature. Your freedom is in how you process the information and make your choices, though what choice you make is determined, you have free will when the choice is made in the right way. But, there is an issue for this, and I like to call it the mini-Martians problem, but the issue which I gave with the alien spores will work as well. 
 
-    \thoughtex{The Mini-Martians}{Imagine the invasion of the mini-Martians. These are incredibly small, organized, and mischievous beings: small enough to invade our brains and walk around in them. If they do so, they can set our modules pretty well at will. We become puppets in their hands. Of course, the mini-Martians might set us to do what we would have done anyhow. But they might throw the chemical switches so that we do quite terrible things. Then let us suppose that, fortunately, science invents a scan to detect whether the Martians have invaded us. Won't we be sympathetic to anyone who suffered this misfortune? Wouldn't we immediately recognize that he was not responsible for his wrongdoings? But, says the incompatibilist, why does it make a difference if it was mini-Martians, or causal agencies of a more natural kind?}{minimartians.jpg}
+    \thoughtex{The Mini-Martians}{Imagine the invasion of the mini-Martians. These are incredibly small, organized, and mischievous beings: small enough to invade our brains and walk around in them. If they do so, they can set our modules pretty well at will. We become puppets in their hands. Of course, the mini-Martians might set us to do what we would have done anyhow. But they might throw the chemical switches so that we do quite terrible things. Then let us suppose that, fortunately, science invents a scan to detect whether the Martians have invaded us. Won't we be sympathetic to anyone who suffered this misfortune? Wouldn't we immediately recognize that he was not responsible for his wrongdoings? But, says the incompatibilist, why does it make a difference if it was mini-Martians, or causal agencies of a more natural kind?}{minimartians.jpg}{A human brain with little alien creatures poking out of it.}
 
 Basically, there's no difference between the mini-Martians and the laws of nature, the more we learn about a person the more likely we are to think that they weren't responsible for their actions (which is why a Deterministic mind-set in cases of Crime and Punishment leads to such different results, you tend to see more rehabilitation rather than retribution).  In the face of this, some philosophers have thought to rephrase the stance and add some more content, which gives us:
 
