--- a/modtwo.tex
+++ b/modtwo.tex
@@ -2,7 +2,8 @@
 \label{ch.modtwo}
 \addtocontents{toc}{\protect\mbox{}\protect\hrulefill\par}
 \input{death}
-\chapter{Part 3: How Does Nagel Define Death?}
+\stepcounter{chapcount}
+\chapter{Part \thechapcount: How Does Nagel Define Death?}\setcounter{seccount}{1}
 In the reading, Nagel argues from the perspective that death is just the end of conscious experience, after that point, there are no feelings, no emotions, no thought for the person who died. One could think that there is some kind of after-life; if you think that, then you could think of this as a ‘what-if’ sort of mindset. This could be either a best-case or worst-case scenario. The question which Nagel is looking into is whether death, as we have so defined it, is bad for the person who died. I am not asking whether it is bad for the family or loved ones, as they will certainly be sad and that is bad, but what about the person who died? Is it bad for them?
 
 For some practice in abstract thinking, think about how Nagel is defining death. Could there be cases where a human is dead, by Nagel's definition, but is technically still alive? (Give this a moment's thought before continuing.) One such example could be a case of a human, who was previously perfectly normal with all of the relevant faculties, entering into an irreversible coma. They would be, to use a common phrase, brain-dead. Their heart would still be beating and maybe they would still be breathing (we can easily assume that they could need a breathing machine), so they would still be alive, but without the ability to have or process experiences, they would be dead. There could be other examples like this, but you need to be careful because it needs to be the permanent end of conscious experience (so falling into a deep sleep doesn't count).  
@@ -19,11 +20,11 @@ The final example of what death lacks is activity. Activity seems to require all
 
 Next, we will move on to why Nagel thinks death is bad for the person who died. This is a common confusion for students. Nagel is arguing that death is bad for the person who died. 
 
-\section{Part 3.1: Is Death Bad for The Person Who Died?'}
+\section{Part \thechapcount.\theseccount:  Is Death Bad for The Person Who Died?}\stepcounter{seccount}
 
 As I have mentioned previously, if death is bad, then it must be because of what it lacks and according to Nagel, death lacks four (4) generic things, perception, thought, desire, and activity. So, the first question Nagel needs to grapple with is whether some state of affairs can be bad (for you) because it causes you to miss out on something (in the case of death, this would be those for things).
 
-\thoughtex{Closed Pizzeria}{Suppose that you live in an apartment above the only pizzeria in town. At the end of the day, you get the left over pizza. But, one day, that pizzeria shuts down. When it shuts down, not only will you miss out on the good of having a place to live but you will also miss out on the good of the greasy nummy cheesy pizza.}{pizzeria.jpg}
+\thoughtex{Closed Pizzeria}{Suppose that you live in an apartment above the only pizzeria in town. At the end of the day, you get the left over pizza. But, one day, that pizzeria shuts down. When it shuts down, not only will you miss out on the good of having a place to live but you will also miss out on the good of the greasy nummy cheesy pizza.}{pizzeria.jpg}{A depressed looking man staring at an open pizza box.}
 
 If you think that the pizza shop closing down was bad for you, then you are thinking like Nagel in this case (I could easily substitute different examples for this). The key thing is that there was a good which you were getting, and now you aren't, so you are worse off because of the lack. If you think about it, the four things which Nagel lists are the four things necessary for anything to be good for us. So if you die, you lose out on the good of the ability to experience goods. The lack of any potential good would seem to make death bad for the person who died. 
 
@@ -32,14 +33,14 @@ The problem here is that the very same things which are required to experience g
 
 Nagel has a reply to this because he wants to say that death is always bad for the person who died. He says that experience itself is always good. You can think of experience itself as a variable value which is always just enough to make the value of some experience better than not having any at all. Yes, some experiences are better than others, but any experience is better than not having any at all, according to Nagel. Some of you might have heard the phrase ``well, at least you experienced it", that's the sort of intuition Nagel is coming from. So, in response to the terminal illness, Nagel would say that it's a bad experience, but it's better than having none at all.  
 
-\section{Part 3.2 The Three Objections to Nagel's Stance}
+\section{Part \thechapcount.\theseccount:  The Three Objections to Nagel's Stance}\stepcounter{seccount}
 Nagel now turns to discussing the objections others might have to his stance. This is fairly common practice in Philosophy. You look at your position and think about how another person, on the opposing side, would combat or object to your thinking. Doing this makes you prepared for the upcoming debate. Nagel seeks to handle three possible objections to his stance. This is the bulk of the paper and the main topic for the homework this module.
 
 \subsection{Can anything be bad for a person if it is not unpleasant to them?}
 
 Another way of phrasing this would be to ask whether there's anything which is bad merely because we miss out on it or are ignorant of it. This line of thinking is akin to the phrase ``what you don't know can't hurt you." Nagel says that there is a problem with this objection, namely, that if it applies to death, then it must also apply to other supposed evils as well. Nagel gives a few different counter examples, and only mentions this one in passing, but it's a great example worthy of being expanded. 
 
-\thoughtex{Bob vs Dave}{Suppose that you have two people, Bob and Dave. From their first person perspective, they can't tell the difference, but there is a difference. Bob is cheated on by their spouse, ridiculed by their friends, hated by their neighbors, and disparaged by their coworkers. Bob never is given a hint about this happening behind their back. Dave, on the other hand, has a faithful and loving spouse, their friends really do like them, their neighbors are sincere, and their coworkers actually respect them.}{bobvdave.jpg}
+\thoughtex{Bob vs Dave}{Suppose that you have two people, Bob and Dave. From their first person perspective, they can't tell the difference, but there is a difference. Bob is cheated on by their spouse, ridiculed by their friends, hated by their neighbors, and disparaged by their coworkers. Bob never is given a hint about this happening behind their back. Dave, on the other hand, has a faithful and loving spouse, their friends really do like them, their neighbors are sincere, and their coworkers actually respect them.}{bobvdave.jpg}{Two seemingly idential people, one with a depressing life while the other has a pleasant one, they cannot tell the difference.}
 
 Who has the better life? Dave or Bob? One way to compare them is to ask yourself which life you would like to enter into, would you rather be reborn as Bob or Dave? If you think that Dave has the better life, then you are agreeing with Nagel that there are certain things which are bad for you despite you never actually experiencing them.  
 
